--- a/localpdf/translations/hi.json
+++ b/localpdf/translations/hi.json
@@ -2,8 +2,8 @@
   "lang": "hi",
   "name": "हिन्दी",
   "nav": {
-    "mission": "हमारा मिशन",
-    "product": "उत्पाद",
+    "features": "विशेषताएं",
+    "use_cases": "उपयोग के मामले",
     "notify": "सूचित करें",
     "github": "GitHub"
   },
@@ -12,53 +12,13 @@
     "title": "आपके दस्तावेज़।<br>आपकी गोपनीयता।<br><span class='gradient-text'>आपका AI सहायक।</span>",
     "subtitle": "LocalPDF PDF दस्तावेज़ों के लिए एक प्राइवेसी-फर्स्ट AI टूलकिट है। अपने PDFs से चैट करें, मुख्य अंतर्दृष्टि निकालें, और दस्तावेज़ों का सारांश बनाएं - सब कुछ 100% आपके डिवाइस पर चलता है। कोई क्लाउड नहीं। कोई अपलोड नहीं। कोई समझौता नहीं।",
     "cta_notify": "तैयार होने पर सूचित करें",
-    "cta_mission": "हमारा मिशन पढ़ें"
+    "cta_features": "विशेषताएं देखें"
   },
   "social_proof": {
     "local": "लोकल प्रोसेसिंग",
     "chat": "PDF से चैट करें",
     "free": "हमेशा मुफ्त",
     "opensource": "ओपन सोर्स"
-  },
-  "mission": {
-    "label": "हमारा मिशन",
-    "title": "स्वतंत्र रूप से विश्लेषण करें।<br>निजी रूप से विश्लेषण करें।<br><span class='gradient-text'>शक्तिशाली रूप से विश्लेषण करें।</span>"
-  },
-  "manifesto": {
-    "block1_title": "हम जो समस्या देखते हैं",
-    "block1_p1": "आज हर AI PDF टूल आपको अपने दस्तावेज़ कॉर्पोरेट सर्वर पर अपलोड करने की आवश्यकता होती है। अनुबंध, चिकित्सा रिकॉर्ड, वित्तीय विवरण, गोपनीय रिपोर्ट - सब क्लाउड पर भेजे जाते हैं, अनिश्चित काल तक संग्रहीत होते हैं, और संभावित रूप से AI मॉडल को प्रशिक्षित करने के लिए उपयोग किए जाते हैं।",
-    "block1_p2": "यह सिर्फ गोपनीयता की चिंता नहीं है। यह एक पेशेवर दायित्व है। आपके दस्तावेज़ आपके नियंत्रण में रहने चाहिए।",
-    "block2_title": "हम क्या मानते हैं",
-    "belief1_title": "दस्तावेज़ संवेदनशील हैं",
-    "belief1_desc": "आपके अनुबंध, रिपोर्ट और रिकॉर्ड आपकी सबसे गोपनीय बातचीत जैसी सुरक्षा के हकदार हैं।",
-    "belief2_title": "AI सुलभ होना चाहिए",
-    "belief2_desc": "शक्तिशाली दस्तावेज़ विश्लेषण टूल की कीमत $30-100/महीने नहीं होनी चाहिए। हर कोई AI क्षमताओं तक पहुंच का हकदार है।",
-    "belief3_title": "लोकल-फर्स्ट संभव है",
-    "belief3_desc": "आधुनिक कंप्यूटर स्थानीय रूप से परिष्कृत AI दस्तावेज़ विश्लेषण चलाने के लिए पर्याप्त शक्तिशाली हैं।",
-    "belief4_title": "ओपन सोर्स विश्वास है",
-    "belief4_desc": "कोड की हर पंक्ति सार्वजनिक होगी। इसका ऑडिट करें। सत्यापित करें कि आपके दस्तावेज़ वास्तव में आपके डिवाइस से कभी नहीं जाते।",
-    "block3_title": "हमारी प्रतिबद्धता",
-    "commitment1_title": "हमेशा मुफ्त",
-    "commitment1_desc": "LocalPDF हमेशा मुफ्त रहेगा। कोई ट्रायल नहीं। कोई प्रीमियम टियर नहीं। सभी के लिए पूर्ण कार्यक्षमता।",
-    "commitment2_title": "हमेशा निजी",
-    "commitment2_desc": "आपके दस्तावेज़ कभी आपके डिवाइस से नहीं जाते। कोई अपलोड नहीं। कोई टेलीमेट्री नहीं। कोई एनालिटिक्स नहीं।",
-    "commitment3_title": "हमेशा ओपन",
-    "commitment3_desc": "MIT लाइसेंस। फोर्क करें। संशोधित करें। इस पर निर्माण करें। मिशन किसी एक प्रोजेक्ट से बड़ा है।"
-  },
-  "impact": {
-    "title": "हम क्या बना रहे हैं",
-    "stat1_number": "100%",
-    "stat1_label": "लोकल प्रोसेसिंग",
-    "stat1_desc": "आपके दस्तावेज़ आपके कंप्यूटर से कभी नहीं जाते।",
-    "stat2_number": "$0",
-    "stat2_label": "उपयोगकर्ताओं के लिए लागत",
-    "stat2_desc": "सभी के लिए पेशेवर AI दस्तावेज़ टूल।",
-    "stat3_number": "AI",
-    "stat3_label": "पावर्ड इनसाइट्स",
-    "stat3_desc": "चैट करें, सारांश बनाएं, निकालें - सब लोकल AI के साथ।",
-    "stat4_number": "∞",
-    "stat4_label": "संभावनाएं",
-    "stat4_desc": "कोई पेज लिमिट नहीं। कोई फाइल लिमिट नहीं। असीमित।"
   },
   "product": {
     "label": "उत्पाद",
@@ -81,6 +41,43 @@
     "usecase4": "अनुबंध",
     "usecase5": "चिकित्सा रिकॉर्ड",
     "usecase6": "+ अधिक"
+  },
+  "use_cases": {
+    "label": "उपयोग के मामले",
+    "title": "<span class='gradient-text'>वास्तविक पेशेवरों</span> के लिए बनाया गया",
+    "subtitle": "क्लाइंट डेटा की सुरक्षा करने वाले वकीलों से लेकर पेपर्स का विश्लेषण करने वाले शोधकर्ताओं तक — LocalPDF एक मुख्य वादे के साथ विविध आवश्यकताओं की सेवा करता है: आपके दस्तावेज़ आपके रहते हैं।"
+  },
+  "use_cases_cards": {
+    "legal": {
+      "title": "कानूनी पेशेवर",
+      "problem": "<strong>समस्या:</strong> क्लाउड AI सेवाओं पर अनुबंध और बयान अपलोड करने से अटॉर्नी-क्लाइंट विशेषाधिकार का खतरा होता है।",
+      "solution": "<strong>समाधान:</strong> पूरी तरह से अपने डिवाइस पर अनुबंधों का विश्लेषण करें, क्लॉज़ निकालें, और बयानों का सारांश बनाएं। शून्य एक्सपोजर।"
+    },
+    "researchers": {
+      "title": "शोधकर्ता",
+      "problem": "<strong>समस्या:</strong> सैकड़ों शोध पत्रों की मैन्युअल समीक्षा में हफ्ते लग जाते हैं। क्लाउड टूल अप्रकाशित डेटा से समझौता करते हैं।",
+      "solution": "<strong>समाधान:</strong> पेपर्स का बैच-सारांश बनाएं, कार्यप्रणालियां निकालें, और निजी तौर पर दस्तावेज़ों से चैट करें। साहित्य समीक्षा के लिए उत्तम।"
+    },
+    "financial": {
+      "title": "वित्तीय विश्लेषक",
+      "problem": "<strong>समस्या:</strong> गोपनीय वित्तीय रिपोर्ट और आय को तीसरे पक्ष की AI सेवाओं पर अपलोड नहीं किया जा सकता।",
+      "solution": "<strong>समाधान:</strong> मुख्य मेट्रिक्स निकालें, त्रैमासिक रिपोर्ट की तुलना करें, और बिना डेटा आपकी मशीन छोड़े सारांश बनाएं।"
+    },
+    "healthcare": {
+      "title": "स्वास्थ्य सेवा पेशेवर",
+      "problem": "<strong>समस्या:</strong> HIPAA और डेटा सुरक्षा नियम रोगी रिकॉर्ड को क्लाउड सेवाओं पर अपलोड करने से रोकते हैं।",
+      "solution": "<strong>समाधान:</strong> मेडिकल PDFs को स्थानीय रूप से प्रोसेस करें। डेटा सुरक्षा नियमों का स्वचालित अनुपालन।"
+    },
+    "students": {
+      "title": "छात्र और शिक्षक",
+      "problem": "<strong>समस्या:</strong> क्लाउड AI सब्सक्रिप्शन $20-50/महीने खर्च होते हैं — छात्रों के लिए बहुत महंगा।",
+      "solution": "<strong>समाधान:</strong> पाठ्यपुस्तकों का सारांश बनाएं, मुख्य अवधारणाएं निकालें, और परीक्षा की तैयारी करें। $0 हमेशा के लिए।"
+    },
+    "privacy": {
+      "title": "गोपनीयता-सजग उपयोगकर्ता",
+      "problem": "<strong>समस्या:</strong> क्लाउड PDF टूल आपके दस्तावेज़ों को अपने सर्वर पर अनिश्चित काल तक स्टोर करते हैं।",
+      "solution": "<strong>समाधान:</strong> ओपन सोर्स, पूरी तरह ऑडिट करने योग्य। आपके दस्तावेज़ कभी किसी सर्वर को नहीं छूते। बस।"
+    }
   },
   "comparison": {
     "label": "LocalPDF क्यों",
@@ -127,6 +124,44 @@
     "step3_title": "चैट और विश्लेषण",
     "step3_desc": "प्रश्न पूछें, सारांश प्राप्त करें, डेटा निकालें - सब स्थानीय रूप से प्रोसेस होता है।"
   },
+  "testimonials": {
+    "label": "उपयोगकर्ता क्या कहते हैं",
+    "title": "<span class='gradient-text'>पूरे भारत के पेशेवरों</span> का भरोसा",
+    "subtitle": "वकीलों से लेकर वित्तीय विश्लेषकों तक, LocalPDF एक मुख्य वादे के साथ विविध आवश्यकताओं की सेवा करता है: आपके दस्तावेज़ आपके रहते हैं।",
+    "t1_text": "\"मैं हर हफ्ते दर्जनों अनुबंधों का विश्लेषण करता हूं। LocalPDF मुझे क्लाइंट डेटा को क्लाउड सर्वर पर एक्सपोज़ किए बिना मुख्य क्लॉज़ निकालने और कानूनी दस्तावेज़ों से चैट करने देता है। अटॉर्नी-क्लाइंट विशेषाधिकार बरकरार रहता है। कानूनी पेशेवरों के लिए AI टूल ऐसे ही काम करने चाहिए।\"",
+    "t2_text": "\"गोपनीय आय रिपोर्ट और वित्तीय विवरणों को क्लाउड AI से प्रोसेस करना हमारे लिए कभी विकल्प नहीं था। LocalPDF ने सब बदल दिया - मैं त्रैमासिक रिपोर्ट का सारांश बना सकता हूं, मुख्य मेट्रिक्स निकाल सकता हूं, और दस्तावेज़ों की तुलना कर सकता हूं। सब ऑफलाइन, सब प्राइवेट।\"",
+    "t3_text": "\"मैं हर साहित्य समीक्षा के लिए 50+ शोध पत्रों की समीक्षा करता हूं। LocalPDF PDFs के पूरे फ़ोल्डर का बैच-सारांश बनाता है, कार्यप्रणालियां निकालता है, और मुझे विशिष्ट विवरण खोजने के लिए पेपर्स से चैट करने देता है। यह हर सेमेस्टर मुझे हफ्तों का काम बचाता है। और यह पूरी तरह मुफ्त है।\""
+  },
+  "faq": {
+    "label": "सामान्य प्रश्न",
+    "title": "अक्सर पूछे जाने वाले <span class='gradient-text'>प्रश्न</span>"
+  },
+  "faq_items": {
+    "q1": {
+      "question": "यह पूरी तरह मुफ्त कैसे हो सकता है?",
+      "answer": "LocalPDF पूरी तरह से आपके डिवाइस पर चलता है, इसलिए हमें शून्य क्लाउड इंफ्रास्ट्रक्चर लागत है। कोई सर्वर नहीं, कोई बैंडविड्थ नहीं। हम मानते हैं कि AI सभी के लिए सुलभ होना चाहिए। हमारा कोड MIT लाइसेंस के तहत ओपन सोर्स है — इसे खुद ऑडिट करें।"
+    },
+    "q2": {
+      "question": "AI विश्लेषण कितना सटीक है?",
+      "answer": "LocalPDF दस्तावेज़ समझ के लिए अनुकूलित अत्याधुनिक ओपन सोर्स AI मॉडल का उपयोग करता है। हालांकि क्लाउड सेवाएं बड़े मॉडल का उपयोग कर सकती हैं, हमारे लोकल मॉडल सारांश, Q&A, और डेटा निष्कर्षण के लिए उत्कृष्ट सटीकता प्रदान करते हैं — इस महत्वपूर्ण लाभ के साथ कि आपके दस्तावेज़ कभी आपके डिवाइस से नहीं जाते।"
+    },
+    "q3": {
+      "question": "क्या यह बिना इंटरनेट कनेक्शन के काम करेगा?",
+      "answer": "बिल्कुल! प्रारंभिक मॉडल डाउनलोड (एक बार, पहली बार चलाने पर होता है) के बाद, LocalPDF 100% ऑफलाइन काम करता है। हवाई जहाज़ में, दूरदराज़ के स्थानों में, या एयर-गैप्ड वातावरण में दस्तावेज़ों का विश्लेषण करें।"
+    },
+    "q4": {
+      "question": "क्या मैं इसे व्यावसायिक कार्य के लिए उपयोग कर सकता हूं?",
+      "answer": "हां! LocalPDF MIT लाइसेंस प्राप्त है। व्यक्तिगत प्रोजेक्ट, क्लाइंट कार्य, या व्यावसायिक उत्पादों के लिए उपयोग करें। एट्रिब्यूशन आवश्यक नहीं (हालांकि हमेशा सराहनीय)।"
+    },
+    "q5": {
+      "question": "कौन से PDF फॉर्मेट और साइज समर्थित हैं?",
+      "answer": "LocalPDF किसी भी साइज के मानक PDF फाइलों को संभालता है — कोई पेज या फाइल साइज लिमिट नहीं। यह टेक्स्ट-आधारित PDFs, स्कैन किए गए दस्तावेज़ों (OCR के साथ), और इमेज और टेबल वाले मिश्रित-सामग्री PDFs के साथ काम करता है।"
+    },
+    "q6": {
+      "question": "सिस्टम आवश्यकताएं क्या हैं?",
+      "answer": "<strong>न्यूनतम:</strong> 8GB RAM, 10GB फ्री स्टोरेज, macOS 12+ या Windows 10+<br><strong>अनुशंसित:</strong> 16GB RAM, तेज़ प्रोसेसिंग के लिए Apple Silicon या NVIDIA GPU"
+    }
+  },
   "notify": {
     "label": "जल्द आ रहा है",
     "title": "पहले<br><span class='gradient-text'>जानने वाले बनें</span>",
@@ -145,29 +180,12 @@
     "planned3_label": "निष्कर्षण",
     "planned3_value": "दस्तावेज़ों से विशिष्ट डेटा खींचें"
   },
-  "join": {
-    "heading": "आंदोलन में शामिल हों",
-    "paragraph1": "LocalPDF एक बड़ी दृष्टि का हिस्सा है: AI जो गोपनीयता का सम्मान करता है, उपयोगकर्ताओं की सेवा करता है, और सभी के लिए सुलभ रहता है।",
-    "paragraph2": "जब तक LocalPDF विकास में है, हमारे अन्य प्राइवेसी-फर्स्ट AI टूल देखें।",
-    "localmind_title": "LocalMind",
-    "localmind_desc": "AI ट्रांसक्रिप्शन और विश्लेषण",
-    "localwrite_title": "LocalWrite",
-    "localwrite_desc": "AI लेखन संवर्धन",
-    "github_title": "सभी प्रोजेक्ट",
-    "github_desc": "हमारा GitHub एक्सप्लोर करें"
-  },
-  "final_cta": {
-    "heading": "AI का भविष्य लोकल है।<br>AI का भविष्य ओपन है।<br><span class='gradient-text'>भविष्य अभी शुरू होता है।</span>",
-    "star_btn": "GitHub पर स्टार करें",
-    "explore_btn": "सभी उत्पाद एक्सप्लोर करें"
-  },
   "footer": {
     "tagline": "AI जो मुफ्त, निजी और आपका है।",
-    "company": "एक <strong>Svetozar Technologies</strong> प्रोजेक्ट",
     "products_title": "उत्पाद",
     "community_title": "समुदाय",
-    "legal_title": "कानूनी",
     "discussions": "चर्चाएं",
+    "legal_title": "कानूनी",
     "privacy": "गोपनीयता नीति",
     "license": "MIT लाइसेंस",
     "copyright": "&copy; 2025 Svetozar Technologies",
