--- a/localpdf/translations/ru.json
+++ b/localpdf/translations/ru.json
@@ -2,8 +2,8 @@
   "lang": "ru",
   "name": "Русский",
   "nav": {
-    "mission": "Наша миссия",
-    "product": "Продукт",
+    "features": "Возможности",
+    "use_cases": "Применение",
     "notify": "Уведомить",
     "github": "GitHub"
   },
@@ -12,53 +12,13 @@
     "title": "Ваши документы.<br>Ваша конфиденциальность.<br><span class='gradient-text'>Ваш ИИ-помощник.</span>",
     "subtitle": "LocalPDF — это набор ИИ-инструментов для PDF, ставящий конфиденциальность на первое место. Общайтесь с PDF, извлекайте ключевые идеи, создавайте резюме документов — всё работает 100% на вашем устройстве. Без облака. Без загрузок. Без компромиссов.",
     "cta_notify": "Уведомить о запуске",
-    "cta_mission": "Читать нашу миссию"
+    "cta_features": "Обзор возможностей"
   },
   "social_proof": {
     "local": "Локальная обработка",
     "chat": "Чат с PDF",
     "free": "Бесплатно навсегда",
     "opensource": "Открытый код"
-  },
-  "mission": {
-    "label": "Наша миссия",
-    "title": "Анализируйте свободно.<br>Анализируйте приватно.<br><span class='gradient-text'>Анализируйте мощно.</span>"
-  },
-  "manifesto": {
-    "block1_title": "Проблема, которую мы видим",
-    "block1_p1": "Каждый ИИ-инструмент для PDF сегодня требует загрузки документов на корпоративные серверы. Контракты, медицинские записи, финансовые отчёты, конфиденциальные отчёты — всё отправляется в облако, хранится неограниченно и потенциально используется для обучения ИИ.",
-    "block1_p2": "Это не просто проблема конфиденциальности. Это профессиональная ответственность. Ваши документы должны оставаться под вашим контролем.",
-    "block2_title": "Во что мы верим",
-    "belief1_title": "Документы конфиденциальны",
-    "belief1_desc": "Ваши контракты, отчёты и записи заслуживают той же защиты, что и ваши самые конфиденциальные разговоры.",
-    "belief2_title": "ИИ должен быть доступен",
-    "belief2_desc": "Мощные инструменты анализа документов не должны стоить $30-100 в месяц. Каждый заслуживает доступа к возможностям ИИ.",
-    "belief3_title": "Локальный подход возможен",
-    "belief3_desc": "Современные компьютеры достаточно мощны для запуска сложного ИИ-анализа документов локально.",
-    "belief4_title": "Открытый код — это доверие",
-    "belief4_desc": "Каждая строка кода будет публичной. Проверьте её. Убедитесь, что ваши документы действительно никогда не покидают устройство.",
-    "block3_title": "Наше обязательство",
-    "commitment1_title": "Навсегда бесплатно",
-    "commitment1_desc": "LocalPDF всегда будет бесплатным. Никаких пробных периодов. Никаких премиум-уровней. Полный функционал для всех.",
-    "commitment2_title": "Навсегда приватно",
-    "commitment2_desc": "Ваши документы никогда не покидают ваше устройство. Никаких загрузок. Никакой телеметрии. Никакой аналитики.",
-    "commitment3_title": "Навсегда открыто",
-    "commitment3_desc": "Лицензия MIT. Форкните. Модифицируйте. Стройте на основе. Миссия больше любого проекта."
-  },
-  "impact": {
-    "title": "Что мы создаём",
-    "stat1_number": "100%",
-    "stat1_label": "Локальная обработка",
-    "stat1_desc": "Ваши документы никогда не покидают компьютер.",
-    "stat2_number": "$0",
-    "stat2_label": "Стоимость для пользователей",
-    "stat2_desc": "Профессиональные ИИ-инструменты для документов для всех.",
-    "stat3_number": "ИИ",
-    "stat3_label": "Мощные инсайты",
-    "stat3_desc": "Чат, резюме, извлечение — всё с локальным ИИ.",
-    "stat4_number": "∞",
-    "stat4_label": "Возможностей",
-    "stat4_desc": "Без лимитов страниц. Без лимитов файлов. Безгранично."
   },
   "product": {
     "label": "Продукт",
@@ -81,6 +41,43 @@
     "usecase4": "Контракты",
     "usecase5": "Медицинские записи",
     "usecase6": "+ Ещё"
+  },
+  "use_cases": {
+    "label": "Применение",
+    "title": "Создано для <span class='gradient-text'>настоящих профессионалов</span>",
+    "subtitle": "От юристов, защищающих данные клиентов, до исследователей, анализирующих статьи — LocalPDF обслуживает разнообразные потребности с одним главным обещанием: ваши документы остаются вашими."
+  },
+  "use_cases_cards": {
+    "legal": {
+      "title": "Юристы",
+      "problem": "<strong>Проблема:</strong> Загрузка контрактов и показаний в облачные ИИ-сервисы ставит под угрозу адвокатскую тайну.",
+      "solution": "<strong>Решение:</strong> Анализируйте контракты, извлекайте пункты и резюмируйте показания полностью на своём устройстве. Нулевая утечка."
+    },
+    "researchers": {
+      "title": "Исследователи",
+      "problem": "<strong>Проблема:</strong> Ручная проверка сотен научных статей занимает недели. Облачные инструменты компрометируют неопубликованные данные.",
+      "solution": "<strong>Решение:</strong> Пакетное резюмирование статей, извлечение методологий и приватный чат с документами. Идеально для обзоров литературы."
+    },
+    "financial": {
+      "title": "Финансовые аналитики",
+      "problem": "<strong>Проблема:</strong> Конфиденциальные финансовые отчёты и данные о доходах нельзя загружать в сторонние ИИ-сервисы.",
+      "solution": "<strong>Решение:</strong> Извлечение ключевых метрик, сравнение квартальных отчётов и генерация резюме без утечки данных с вашей машины."
+    },
+    "healthcare": {
+      "title": "Медицинские работники",
+      "problem": "<strong>Проблема:</strong> Регулирования HIPAA и защиты данных запрещают загрузку записей пациентов в облачные сервисы.",
+      "solution": "<strong>Решение:</strong> Обработка медицинских PDF локально. Автоматическое соответствие требованиям защиты данных."
+    },
+    "students": {
+      "title": "Студенты и преподаватели",
+      "problem": "<strong>Проблема:</strong> Облачные ИИ-подписки стоят $20-50 в месяц — слишком дорого для студентов.",
+      "solution": "<strong>Решение:</strong> Резюмируйте учебники, извлекайте ключевые концепции и готовьтесь к экзаменам. $0 навсегда."
+    },
+    "privacy": {
+      "title": "Сторонники конфиденциальности",
+      "problem": "<strong>Проблема:</strong> Облачные PDF-инструменты хранят ваши документы на своих серверах бессрочно.",
+      "solution": "<strong>Решение:</strong> Открытый исходный код, полностью проверяемый. Ваши документы никогда не касаются серверов. Точка."
+    }
   },
   "comparison": {
     "label": "Почему LocalPDF",
@@ -127,6 +124,44 @@
     "step3_title": "Чат и анализ",
     "step3_desc": "Задавайте вопросы, получайте резюме, извлекайте данные — всё обрабатывается локально."
   },
+  "testimonials": {
+    "label": "Отзывы пользователей",
+    "title": "Доверие <span class='gradient-text'>профессионалов по всей Индии</span>",
+    "subtitle": "От юристов до финансовых аналитиков, LocalPDF обслуживает разнообразные потребности с одним главным обещанием: ваши документы остаются вашими.",
+    "t1_text": "\"Я анализирую десятки контрактов еженедельно. LocalPDF позволяет мне извлекать ключевые пункты и общаться с юридическими документами, не раскрывая данные клиентов облачным серверам. Адвокатская тайна сохраняется. Именно так должны работать ИИ-инструменты для юристов.\"",
+    "t2_text": "\"Обработка конфиденциальных отчётов о доходах и финансовых отчётов через облачный ИИ никогда не была для нас вариантом. LocalPDF всё изменил — я могу резюмировать квартальные отчёты, извлекать ключевые метрики и сравнивать документы. Всё офлайн, всё приватно.\"",
+    "t3_text": "\"Я проверяю 50+ научных статей для каждого обзора литературы. LocalPDF пакетно резюмирует целые папки PDF, извлекает методологии и позволяет мне общаться со статьями для поиска конкретных деталей. Это экономит мне недели работы каждый семестр. И это совершенно бесплатно.\""
+  },
+  "faq": {
+    "label": "Частые вопросы",
+    "title": "Часто задаваемые <span class='gradient-text'>вопросы</span>"
+  },
+  "faq_items": {
+    "q1": {
+      "question": "Как это может быть полностью бесплатным?",
+      "answer": "LocalPDF работает полностью на вашем устройстве, поэтому у нас нулевые затраты на облачную инфраструктуру. Нет серверов, нет трафика. Мы считаем, что ИИ должен быть доступен каждому. Наш код — открытый исходный код под лицензией MIT — проверьте его сами."
+    },
+    "q2": {
+      "question": "Насколько точен ИИ-анализ?",
+      "answer": "LocalPDF использует передовые ИИ-модели с открытым исходным кодом, оптимизированные для понимания документов. Хотя облачные сервисы могут использовать более крупные модели, наши локальные модели обеспечивают отличную точность для резюмирования, вопросов-ответов и извлечения данных — с критическим преимуществом: ваши документы никогда не покидают устройство."
+    },
+    "q3": {
+      "question": "Работает ли это без интернета?",
+      "answer": "Абсолютно! После начальной загрузки модели (однократно, при первом запуске) LocalPDF работает 100% офлайн. Анализируйте документы в самолёте, в удалённых местах или в изолированных средах."
+    },
+    "q4": {
+      "question": "Можно ли использовать для коммерческой работы?",
+      "answer": "Да! LocalPDF лицензирован под MIT. Используйте для личных проектов, клиентской работы или коммерческих продуктов. Указание авторства не требуется (хотя всегда приветствуется)."
+    },
+    "q5": {
+      "question": "Какие форматы и размеры PDF поддерживаются?",
+      "answer": "LocalPDF обрабатывает стандартные PDF-файлы любого размера — без лимитов страниц или размера. Работает с текстовыми PDF, отсканированными документами (с OCR) и PDF со смешанным содержимым, включающим изображения и таблицы."
+    },
+    "q6": {
+      "question": "Каковы системные требования?",
+      "answer": "<strong>Минимум:</strong> 8 ГБ RAM, 10 ГБ свободного места, macOS 12+ или Windows 10+<br><strong>Рекомендуется:</strong> 16 ГБ RAM, Apple Silicon или NVIDIA GPU для ускоренной обработки"
+    }
+  },
   "notify": {
     "label": "Скоро",
     "title": "Будьте первым,<br><span class='gradient-text'>кто узнает</span>",
@@ -145,29 +180,12 @@
     "planned3_label": "Извлечение",
     "planned3_value": "Извлечение конкретных данных из документов"
   },
-  "join": {
-    "heading": "Присоединяйтесь к движению",
-    "paragraph1": "LocalPDF — часть большей vision: ИИ, который уважает конфиденциальность, служит пользователям и остаётся доступным для всех.",
-    "paragraph2": "Пока LocalPDF в разработке, посмотрите наши другие ИИ-инструменты с приоритетом конфиденциальности.",
-    "localmind_title": "LocalMind",
-    "localmind_desc": "ИИ-транскрипция и анализ",
-    "localwrite_title": "LocalWrite",
-    "localwrite_desc": "ИИ-улучшение текстов",
-    "github_title": "Все проекты",
-    "github_desc": "Исследуйте наш GitHub"
-  },
-  "final_cta": {
-    "heading": "Будущее ИИ — локальное.<br>Будущее ИИ — открытое.<br><span class='gradient-text'>Будущее начинается сейчас.</span>",
-    "star_btn": "Звезда на GitHub",
-    "explore_btn": "Смотреть все продукты"
-  },
   "footer": {
     "tagline": "ИИ, который бесплатный, приватный и ваш.",
-    "company": "Проект <strong>Svetozar Technologies</strong>",
     "products_title": "Продукты",
     "community_title": "Сообщество",
-    "legal_title": "Правовая информация",
     "discussions": "Обсуждения",
+    "legal_title": "Правовая информация",
     "privacy": "Политика конфиденциальности",
     "license": "Лицензия MIT",
     "copyright": "&copy; 2025 Svetozar Technologies",
