--- a/localwrite/translations/ar.json
+++ b/localwrite/translations/ar.json
@@ -3,176 +3,185 @@
   "name": "العربية",
   "rtl": true,
   "nav": {
-    "mission": "مهمتنا",
-    "product": "المنتج",
+    "features": "المميزات",
+    "use_cases": "حالات الاستخدام",
     "download": "تحميل",
     "github": "GitHub"
   },
   "hero": {
-    "title": "كلماتك.<br>خصوصيتك.<br><span class='gradient-text'>تحكمك.</span>",
-    "subtitle": "LocalWrite هو مساعد كتابة بالذكاء الاصطناعي يركز على الخصوصية ويعمل 100% على جهازك. حسّن كتابتك بالذكاء الاصطناعي القوي - دون إرسال كلمة واحدة إلى السحابة. مجاني للأبد. مفتوح المصدر. بلا تنازلات.",
-    "cta_download": "تحميل LocalWrite",
-    "cta_mission": "اقرأ مهمتنا"
+    "badge": "100% بلا اتصال",
+    "title": "كتابة AI خاصة.<br>نماذج قوية.<br><span class='gradient-text'>كلماتك تبقى ملكك.</span>",
+    "subtitle": "حسّن كتابتك بذكاء اصطناعي قوي يعمل بالكامل على جهازك. اختر من 5 نماذج مختارة، و5 أوضاع كتابة، وميزات مثل التلخيص والتوسيع والدردشة مع المستندات. بلا سحابة. بلا حسابات. بلا تنازلات.",
+    "cta_download": "تحميل لنظام macOS",
+    "cta_features": "استعراض المميزات"
   },
   "social_proof": {
-    "launch": "تم الإطلاق!",
-    "free": "مجاني للأبد",
-    "modes": "أوضاع الكتابة",
+    "offline": "بلا اتصال",
+    "cost": "مجاني للأبد",
+    "models": "نماذج AI",
     "opensource": "مفتوح المصدر"
-  },
-  "mission": {
-    "label": "مهمتنا",
-    "title": "اكتب بحرية.<br>اكتب بخصوصية.<br><span class='gradient-text'>اكتب بقوة.</span>"
-  },
-  "manifesto": {
-    "block1_title": "المشكلة التي نراها",
-    "block1_p1": "كل أداة كتابة بالذكاء الاصطناعي اليوم ترسل كلماتك إلى خوادم الشركات. مسوداتك، أفكارك، أفكارك الخاصة - كلها يتم تحميلها وتخزينها وربما استخدامها لتدريب نماذج الذكاء الاصطناعي. الكتّاب والصحفيون والمحترفون مضطرون للاختيار بين مساعدة الذكاء الاصطناعي والخصوصية.",
-    "block1_p2": "هذا ليس مجرد إزعاج. إنه انتهاك جوهري لخصوصية الإبداع. كلماتك يجب أن تكون ملكك.",
-    "block2_title": "ما نؤمن به",
-    "belief1_title": "الكتابة شخصية",
-    "belief1_desc": "مسوداتك وملاحظاتك وأفكارك تستحق نفس الخصوصية التي تحظى بها محادثاتك المنطوقة. مساعدة الذكاء الاصطناعي لا يجب أن تتطلب المراقبة.",
-    "belief2_title": "الذكاء الاصطناعي يجب أن يكون متاحاً",
-    "belief2_desc": "أدوات الكتابة القوية لا يجب أن تكلف 20-50 دولار شهرياً. الطلاب والمؤلفون المستقلون والشركات الصغيرة يستحقون نفس قدرات الذكاء الاصطناعي التي تملكها الشركات الكبرى.",
-    "belief3_title": "المحلي أولاً ممكن",
-    "belief3_desc": "الأجهزة الحديثة قوية بما يكفي لتشغيل ذكاء اصطناعي متطور محلياً. الاعتماد على السحابة هو نموذج أعمال، وليس ضرورة تقنية.",
-    "belief4_title": "المصدر المفتوح هو الثقة",
-    "belief4_desc": "لا يجب أن تأخذ كلمتنا على محمل الثقة. كل سطر من الكود عام. راجعه. تحقق من ادعاءات الخصوصية بنفسك.",
-    "block3_title": "التزامنا",
-    "commitment1_title": "مجاني للأبد",
-    "commitment1_desc": "LocalWrite سيكون دائماً مجانياً. لا فترات تجريبية. لا حواجز ميزات. لا حيل \"فريميوم\". وظائف كاملة للجميع.",
-    "commitment2_title": "خاص للأبد",
-    "commitment2_desc": "كتابتك لا تغادر جهازك أبداً. لا قياس عن بعد. لا تحليلات. لا استثناءات. نحن حرفياً لا نستطيع رؤية ما تكتب.",
-    "commitment3_title": "مفتوح للأبد",
-    "commitment3_desc": "رخصة MIT. انسخه. عدّله. ابنِ عليه. المهمة أكبر من أي مشروع واحد."
-  },
-  "impact": {
-    "title": "هذا ما نبنيه",
-    "stat1_number": "100%",
-    "stat1_label": "معالجة محلية",
-    "stat1_desc": "صفر بايت يُرسل لخوادم خارجية. أبداً.",
-    "stat2_number": "$0",
-    "stat2_label": "التكلفة للمستخدمين",
-    "stat2_desc": "كتابة احترافية بالذكاء الاصطناعي للجميع.",
-    "stat3_number": "11",
-    "stat3_label": "وضع كتابة",
-    "stat3_desc": "من المهني إلى الإبداعي إلى المختصر.",
-    "stat4_number": "∞",
-    "stat4_label": "الإمكانيات",
-    "stat4_desc": "لا حدود للاستخدام. لا سقف للـ API. غير محدود."
   },
   "product": {
     "label": "المنتج",
-    "title": "LocalWrite:<br><span class='gradient-text'>كتابة بالذكاء الاصطناعي تحترمك</span>",
-    "subtitle": "أداة تحسين كتابة قوية تعمل بالكامل على جهازك. لا حاجة للسحابة.",
-    "feature1_title": "11 وضع كتابة",
-    "feature1_desc": "مهني، إبداعي، أكاديمي، محادثي، مختصر، مفصّل والمزيد. حوّل نصك ليناسب أي أسلوب أو جمهور.",
-    "feature2_title": "التحكم بالإبداع",
-    "feature2_desc": "اضبط إبداع الذكاء الاصطناعي بشريط تمرير بسيط. محافظ للكتابة التجارية، معبّر للعمل الإبداعي.",
-    "feature3_title": "تحسين PDF",
-    "feature3_desc": "حسّن مستندات PDF كاملة مع الحفاظ على التنسيق. مثالي للتقارير والمقالات والوثائق المهنية.",
-    "feature4_title": "إحصائيات فورية",
-    "feature4_desc": "عدد الكلمات، عدد الجمل، وقت القراءة، مستوى الصف، وتحليل النبرة. اعرف كتابتك من الداخل والخارج.",
-    "feature5_title": "نماذج ذكاء اصطناعي متعددة",
-    "feature5_desc": "اختر من 5 نماذج ذكاء اصطناعي مختارة. Qwen، Llama، Gemma، Mistral - اختر الأفضل لأسلوب كتابتك.",
-    "modes_heading": "أوضاع الكتابة",
-    "mode1": "مهني",
-    "mode2": "إبداعي",
-    "mode3": "أكاديمي",
-    "mode4": "محادثي",
-    "mode5": "مختصر",
-    "mode6": "مفصّل",
-    "mode7": "+ المزيد"
+    "title": "LocalWrite:<br><span class='gradient-text'>كتابة AI تحترمك</span>",
+    "subtitle": "مساعد كتابة AI قوي يعمل بالكامل على جهازك. اختر نموذجك، حدد أسلوبك، واكتب بخصوصية تامة.",
+    "feature1_title": "اختيار ذكي للنموذج",
+    "feature1_desc": "اختر من 5 نماذج AI مختارة: Qwen 2.5 7B (موصى به)، Gemma 2 9B، Llama 3.1 8B، Llama 3.2 3B، وMistral 7B. كل نموذج محسّن لمهام كتابة مختلفة. يُحمّل تلقائياً عند الاستخدام الأول.",
+    "feature2_title": "5 أوضاع كتابة",
+    "feature2_desc": "مهني، محادثي، أكاديمي، إبداعي، ومختصر. النبرة المثالية لأي سياق — من رسائل الأعمال إلى الأدب الإبداعي.",
+    "feature3_title": "تلخيص وتوسيع",
+    "feature3_desc": "اختصر النصوص الطويلة إلى نقاط رئيسية أو وسّعها بمزيد من الأمثلة وأسئلة التمرين. حوّل محتواك في ثوانٍ.",
+    "feature4_title": "رفع المستندات",
+    "feature4_desc": "استورد ملفات TXT وMarkdown وDOCX وPDF. اعمل مع مستنداتك الحالية بسلاسة. تحميل مباشر للنص المحسّن.",
+    "feature5_title": "الدردشة مع المستندات",
+    "feature5_desc": "ارفع الكتب أو الأوراق البحثية أو الملاحظات واطرح أسئلة باستخدام RAG (التوليد المعزز بالاسترجاع). المكونات تُثبّت تلقائياً عند الاستخدام الأول.",
+    "feature6_title": "دردشة AI",
+    "feature6_desc": "تحدث مع مساعد AI بلا اتصال. اطرح أسئلة، ولّد أفكاراً، أنشئ محتوى، احصل على مساعدة — كل شيء خاص.",
+    "models_heading": "نماذج AI المتاحة"
+  },
+  "use_cases": {
+    "label": "حالات الاستخدام",
+    "title": "مصمم لـ<span class='gradient-text'>الكتّاب الذين يقدرون الخصوصية</span>",
+    "subtitle": "من المؤلفين الذين يحمون مخطوطاتهم غير المنشورة إلى الطلاب الذين يحسّنون مقالاتهم — LocalWrite يخدم احتياجات متنوعة بوعد جوهري واحد: كلماتك تبقى ملكك."
+  },
+  "use_cases_cards": {
+    "writers": {
+      "title": "الكتّاب والمؤلفون",
+      "problem": "<strong>المشكلة:</strong> خدمات AI السحابية تخزّن مخطوطاتك غير المنشورة على خوادمها، مما يعرّضها لخطر التسريب.",
+      "solution": "<strong>الحل:</strong> صقل مخطوطاتك بذكاء اصطناعي لا يرفع كلمة واحدة. قصتك تبقى ملكك حتى تقرر مشاركتها."
+    },
+    "scriptwriters": {
+      "title": "كتّاب السيناريو",
+      "problem": "<strong>المشكلة:</strong> السيناريوهات والمعالجات هي ملكية فكرية حساسة للغاية ومعرضة للخطر في السحابة.",
+      "solution": "<strong>الحل:</strong> حسّن الحوارات، وصقل ملخصات الحبكة، وأتقن السيناريوهات بالكامل بلا اتصال. أفكارك محمية."
+    },
+    "journalists": {
+      "title": "الصحفيون",
+      "problem": "<strong>المشكلة:</strong> القصص الحساسة والمسودات المتعلقة بالمصادر لا يمكن الوثوق بها لخدمات AI السحابية.",
+      "solution": "<strong>الحل:</strong> حسّن مقالاتك دون كشف معلومات حساسة. لا يطّلع أي طرف ثالث على مسوداتك أبداً."
+    },
+    "students": {
+      "title": "الطلاب",
+      "problem": "<strong>المشكلة:</strong> اشتراكات AI السحابية تكلف 20-50 دولاراً شهرياً. ميزانيات الطلاب لا تتحمل ذلك.",
+      "solution": "<strong>الحل:</strong> حسّن المقالات والأبحاث والواجبات بخصوصية. تعلّم الكتابة الأفضل بلا مراقبة. $0 للأبد."
+    },
+    "business": {
+      "title": "محترفو الأعمال",
+      "problem": "<strong>المشكلة:</strong> العروض والعقود والوثائق الداخلية تحتوي على معلومات تجارية سرية.",
+      "solution": "<strong>الحل:</strong> حسّن المستندات التجارية بلا اتصال. مزاياك التنافسية تبقى سرية."
+    },
+    "privacy": {
+      "title": "مناصرو الخصوصية",
+      "problem": "<strong>المشكلة:</strong> \"ثق بنا\" ليس كافياً. خدمات AI المغلقة المصدر لا يمكن التحقق منها أو تدقيقها.",
+      "solution": "<strong>الحل:</strong> مفتوح المصدر، قابل للتدقيق بالكامل. تحقق بالضبط مما يفعله الكود بنصك."
+    }
   },
   "comparison": {
     "label": "لماذا LocalWrite",
-    "title": "LocalWrite مقابل <span class='gradient-text'>خدمات السحابة</span>",
-    "subtitle": "شاهد كيف يقارن LocalWrite بخدمات الكتابة بالذكاء الاصطناعي الشائعة مثل Grammarly وJasper وCopy.ai.",
+    "title": "LocalWrite مقابل <span class='gradient-text'>AI السحابي</span>",
+    "subtitle": "شاهد كيف يقارن LocalWrite بمساعدي الكتابة السحابيين الشائعين مثل ChatGPT وGrammarly AI وJasper.",
     "roi_title": "احسب توفيرك السنوي",
-    "roi_cloud": "متوسط خدمة الكتابة بالذكاء الاصطناعي: <strong>$30/شهر × 12 = $360/سنة</strong>",
+    "roi_cloud": "متوسط أداة كتابة AI السحابية: <strong>$25/شهر × 12 = $300/سنة</strong>",
     "roi_localwrite": "LocalWrite: <strong>$0/سنة</strong>",
-    "roi_savings": "توفر: <span class='gradient-text'>$360+ كل سنة</span>"
+    "roi_savings": "توفّر: <span class='gradient-text'>$300+ كل سنة</span>"
   },
   "comparison_table": {
     "header_feature": "الميزة",
-    "header_cloud": "خدمات السحابة",
+    "header_cloud": "AI السحابي",
     "header_localwrite": "LocalWrite",
     "row1_feature": "التكلفة الشهرية",
     "row1_cloud": "$20-50/شهر",
     "row1_localwrite": "$0 للأبد",
-    "row2_feature": "التكلفة السنوية",
-    "row2_cloud": "$240-600/سنة",
-    "row2_localwrite": "$0",
-    "row3_feature": "الخصوصية",
-    "row3_cloud": "رفع للخوادم",
-    "row3_localwrite": "100% محلي",
-    "row4_feature": "حدود الاستخدام",
-    "row4_cloud": "حدود الكلمات/الطلبات",
-    "row4_localwrite": "غير محدود",
-    "row5_feature": "يتطلب إنترنت",
-    "row5_cloud": "نعم",
-    "row5_localwrite": "يعمل بلا اتصال",
-    "row6_feature": "ملكية البيانات",
-    "row6_cloud": "مخزنة على الخوادم",
-    "row6_localwrite": "أنت تملك 100%",
-    "row7_feature": "مفتوح المصدر",
-    "row7_cloud": "مملوك",
-    "row7_localwrite": "رخصة MIT"
+    "row2_feature": "الخصوصية",
+    "row2_cloud": "النص يُرسل للخوادم",
+    "row2_localwrite": "100% محلي",
+    "row3_feature": "يتطلب إنترنت",
+    "row3_cloud": "مطلوب دائماً",
+    "row3_localwrite": "يعمل بلا اتصال",
+    "row4_feature": "يتطلب حساباً",
+    "row4_cloud": "نعم، مع البريد الإلكتروني",
+    "row4_localwrite": "لا حاجة لحساب",
+    "row5_feature": "جمع البيانات",
+    "row5_cloud": "كل ما تكتبه",
+    "row5_localwrite": "جمع صفري",
+    "row6_feature": "مفتوح المصدر",
+    "row6_cloud": "مملوك",
+    "row6_localwrite": "رخصة MIT"
   },
   "how_it_works": {
     "title": "بسيط بالتصميم",
-    "subtitle": "لا حسابات. لا مفاتيح API. لا إعدادات. فقط حمّل، افتح، واكتب.",
+    "subtitle": "لا حسابات. لا مفاتيح API. لا إعدادات. فقط حمّل، اختر نموذجاً، وابدأ الكتابة.",
     "step1_title": "تحميل",
-    "step1_desc": "احصل على LocalWrite لـ macOS. ملف واحد، جاهز للاستخدام.",
+    "step1_desc": "احصل على LocalWrite لنظام macOS. تطبيق واحد، جاهز للاستخدام.",
     "step2_title": "اختر النموذج",
-    "step2_desc": "اختر نموذج ذكاء اصطناعي من قائمتنا المختارة. يُحمّل مرة واحدة.",
+    "step2_desc": "اختر من 5 نماذج AI. يُحمّل تلقائياً عند الاستخدام الأول.",
     "step3_title": "اكتب بخصوصية",
-    "step3_desc": "حسّن كتابتك بالذكاء الاصطناعي. كلماتك لا تغادر جهازك أبداً."
+    "step3_desc": "حسّن كتابتك. كلماتك لا تغادر جهازك أبداً."
+  },
+  "testimonials": {
+    "label": "آراء المستخدمين",
+    "title": "موثوق من <span class='gradient-text'>محترفين في جميع أنحاء الهند</span>",
+    "subtitle": "من المؤلفين إلى مستشاري الأعمال، LocalWrite يخدم احتياجات متنوعة بوعد جوهري واحد: كلماتك تبقى ملكك.",
+    "t1_text": "\"أكتب روايتي الثالثة وفكرة رفع مخطوطتي غير المنشورة إلى AI سحابي كانت تخيفني. LocalWrite يتيح لي صقل النثر والتحقق من التناقضات وتحسين الحوارات — دون أن تغادر كلمة واحدة حاسوبي المحمول. إنه مثل وجود محرر شخصي.\"",
+    "t2_text": "\"كطالب، لم أستطع تحمل $20/شهرياً لأدوات الكتابة بالذكاء الاصطناعي. LocalWrite يمنحني نفس الجودة مجاناً. أستخدمه للمقالات والأبحاث والتحضير للامتحانات. وضع الكتابة الأكاديمية مثالي للعمل الأكاديمي. بلا مراقبة، بلا تكلفة.\"",
+    "t3_text": "\"أتعامل مع وثائق استراتيجية سرية لعملاء Fortune 500. AI السحابي لم يكن خياراً أبداً. LocalWrite يحسّن عروضي وتقاريري محلياً — المعلومات التنافسية لعملائي محمية. وضع الكتابة المهنية مثالي للمستندات التجارية.\""
   },
   "download": {
-    "label": "ابدأ",
+    "label": "ابدأ الآن",
     "title": "تحميل<br><span class='gradient-text'>LocalWrite</span>",
-    "subtitle": "متاح الآن لـ macOS. Windows وLinux قريباً.",
-    "macos": "macOS",
-    "windows": "Windows",
-    "linux": "Linux"
+    "subtitle": "متاح الآن لنظام macOS. مجاني للأبد.",
+    "macos_title": "macOS v1.0.0",
+    "macos_desc": "macOS 11.0+ (Apple Silicon و Intel)",
+    "macos_size": "~200 ميجابايت (+ 2-6 جيجابايت لكل نموذج عند الاستخدام الأول)",
+    "source_title": "الكود المصدري",
+    "source_desc": "البناء من المصدر (Python و PyQt6)",
+    "source_size": "رخصة MIT — انسخ وعدّل"
   },
   "download_details": {
-    "macos_desc": "macOS 11+ (Apple Silicon & Intel)",
-    "macos_size": "~100 ميجابايت (+ 2-6 جيجابايت للنموذج)",
-    "windows_desc": "قريباً",
-    "linux_desc": "قريباً",
-    "coming_soon": "قيد التطوير",
     "system_req_heading": "متطلبات النظام",
     "req_ram_label": "الذاكرة",
     "req_ram_value": "8 جيجابايت كحد أدنى، 16 جيجابايت موصى به",
     "req_storage_label": "التخزين",
-    "req_storage_value": "2-6 جيجابايت لكل نموذج ذكاء اصطناعي",
+    "req_storage_value": "2-6 جيجابايت لكل نموذج",
     "req_gpu_label": "GPU",
-    "req_gpu_value": "اختياري - محسّن لـ Apple Silicon"
+    "req_gpu_value": "Apple Silicon أو Metal GPU لتسريع المعالجة"
   },
-  "join": {
-    "heading": "انضم للحركة",
-    "paragraph1": "LocalWrite أكثر من مجرد برنامج. إنه بيان بأن الذكاء الاصطناعي يمكن بناؤه بطريقة مختلفة. أن الخصوصية والقوة ليستا متعارضتين. أن المصدر المفتوح يمكن أن ينافس شركات التقنية الكبرى.",
-    "paragraph2": "نحن في البداية فقط. ونحتاج أشخاصاً مثلك.",
-    "star_title": "أضف نجمة للمشروع",
-    "star_desc": "أظهر دعمك على GitHub",
-    "fork_title": "انسخ وساهم",
-    "fork_desc": "ساعد في بناء مستقبل الذكاء الاصطناعي",
-    "discussions_title": "انضم للنقاشات",
-    "discussions_desc": "شارك الأفكار مع المجتمع"
+  "faq": {
+    "label": "أسئلة شائعة",
+    "title": "الأسئلة <span class='gradient-text'>المتكررة</span>"
   },
-  "final_cta": {
-    "heading": "مستقبل الذكاء الاصطناعي محلي.<br>مستقبل الذكاء الاصطناعي مفتوح.<br><span class='gradient-text'>المستقبل يبدأ الآن.</span>",
-    "download_btn": "تحميل LocalWrite",
-    "source_btn": "عرض الكود المصدري"
+  "faq_items": {
+    "q1": {
+      "question": "كيف يمكن أن يكون مجانياً بالكامل؟",
+      "answer": "LocalWrite يعمل بالكامل على جهازك باستخدام نماذج AI مفتوحة المصدر. تكاليف السحابة لدينا صفر — لا خوادم، لا نطاق ترددي، لا رسوم API. كودنا مرخص تحت MIT ومفتوح المصدر."
+    },
+    "q2": {
+      "question": "ما مدى جودة الكتابة مقارنة بـ ChatGPT؟",
+      "answer": "LocalWrite يستخدم أحدث النماذج مفتوحة المصدر مثل Qwen 2.5 7B وGemma 2 9B. بينما قد تكون النماذج السحابية أكبر، تقدم نماذجنا المحلية جودة ممتازة لتحسين الكتابة والتحرير وتوليد المحتوى. الميزة الحاسمة: نصك لا يغادر جهازك أبداً."
+    },
+    "q3": {
+      "question": "هل يعمل بالكامل بلا اتصال؟",
+      "answer": "نعم! بعد تحميل النموذج الأولي (2-6 جيجابايت لكل نموذج، مرة واحدة فقط)، يعمل LocalWrite 100% بلا اتصال. اكتب في الطائرات، في المقاهي بدون Wi-Fi، أو في أي مكان بدون إنترنت."
+    },
+    "q4": {
+      "question": "هل يمكن استخدامه للعمل التجاري؟",
+      "answer": "بالتأكيد! LocalWrite مرخص تحت MIT. استخدمه للمشاريع الشخصية، عمل العملاء، المنتجات التجارية، أو أي شيء آخر. لا قيود على الاستخدام التجاري."
+    },
+    "q5": {
+      "question": "أي نموذج AI يجب أن أختار؟",
+      "answer": "<strong>Qwen 2.5 7B</strong> (موصى به) — الأفضل للمقالات والمقالات والكتابة العامة.<br><strong>Gemma 2 9B</strong> — ممتاز للكتابة الإبداعية وسرد القصص.<br><strong>Llama 3.1 8B</strong> — رائع للنثر المهني والنظيف.<br><strong>Llama 3.2 3B</strong> — تعديلات سريعة باستهلاك ذاكرة منخفض.<br><strong>Mistral 7B</strong> — توازن بين السرعة والجودة."
+    },
+    "q6": {
+      "question": "ما هي متطلبات النظام؟",
+      "answer": "<strong>الحد الأدنى:</strong> macOS 11.0+، 8 جيجابايت ذاكرة، 2-6 جيجابايت تخزين لكل نموذج<br><strong>الموصى به:</strong> 16 جيجابايت ذاكرة، Apple Silicon لمعالجة أسرع<br><strong>التقنية:</strong> خلفية llama.cpp، نماذج GGUF، تسريع Metal GPU"
+    }
   },
   "footer": {
-    "tagline": "ذكاء اصطناعي مجاني، خاص، وملكك.",
-    "company": "مشروع من <strong>Svetozar Technologies</strong>",
+    "tagline": "AI مجاني، خاص، وملكك.",
     "products_title": "المنتجات",
     "community_title": "المجتمع",
-    "legal_title": "قانوني",
     "discussions": "النقاشات",
+    "legal_title": "قانوني",
     "privacy": "سياسة الخصوصية",
     "license": "رخصة MIT",
     "copyright": "&copy; 2025 Svetozar Technologies",
