--- a/localwrite/translations/hi.json
+++ b/localwrite/translations/hi.json
@@ -2,179 +2,188 @@
   "lang": "hi",
   "name": "हिन्दी",
   "nav": {
-    "mission": "हमारा मिशन",
-    "product": "उत्पाद",
+    "features": "सुविधाएँ",
+    "use_cases": "उपयोग के मामले",
     "download": "डाउनलोड",
     "github": "GitHub"
   },
   "hero": {
-    "title": "आपके शब्द।<br>आपकी गोपनीयता।<br><span class='gradient-text'>आपका नियंत्रण।</span>",
-    "subtitle": "LocalWrite एक प्राइवेसी-फर्स्ट AI लेखन सहायक है जो 100% आपके डिवाइस पर चलता है। शक्तिशाली AI के साथ अपने लेखन को बेहतर बनाएं - बिना एक भी शब्द क्लाउड पर भेजे। हमेशा मुफ्त। ओपन सोर्स। कोई समझौता नहीं।",
-    "cta_download": "LocalWrite डाउनलोड करें",
-    "cta_mission": "हमारा मिशन पढ़ें"
+    "badge": "100% ऑफ़लाइन",
+    "title": "निजी AI लेखन।<br>शक्तिशाली मॉडल।<br><span class='gradient-text'>आपके शब्द आपके रहें।</span>",
+    "subtitle": "अपने लेखन को शक्तिशाली AI से बेहतर बनाएँ जो पूरी तरह आपके डिवाइस पर चलती है। 5 AI मॉडल, 5 लेखन मोड, और सारांश, विस्तार तथा दस्तावेज़ चैट जैसी सुविधाओं में से चुनें। कोई क्लाउड नहीं। कोई अकाउंट नहीं। कोई समझौता नहीं।",
+    "cta_download": "macOS के लिए डाउनलोड करें",
+    "cta_features": "सुविधाएँ देखें"
   },
   "social_proof": {
-    "launch": "अभी लॉन्च!",
-    "free": "हमेशा मुफ्त",
-    "modes": "लेखन मोड",
+    "offline": "ऑफ़लाइन",
+    "cost": "हमेशा मुफ़्त",
+    "models": "AI मॉडल",
     "opensource": "ओपन सोर्स"
-  },
-  "mission": {
-    "label": "हमारा मिशन",
-    "title": "स्वतंत्र रूप से लिखें।<br>निजी रूप से लिखें।<br><span class='gradient-text'>शक्तिशाली रूप से लिखें।</span>"
-  },
-  "manifesto": {
-    "block1_title": "हम जो समस्या देखते हैं",
-    "block1_p1": "आज हर AI लेखन टूल आपके शब्दों को कॉर्पोरेट सर्वर पर भेजता है। आपके ड्राफ्ट, आपके विचार, आपके निजी विचार - सब कुछ अपलोड, संग्रहीत, और संभावित रूप से AI मॉडल को प्रशिक्षित करने के लिए उपयोग किया जाता है। लेखकों, पत्रकारों और पेशेवरों को AI सहायता और गोपनीयता के बीच चुनना पड़ता है।",
-    "block1_p2": "यह सिर्फ असुविधाजनक नहीं है। यह रचनात्मक गोपनीयता का मौलिक उल्लंघन है। आपके शब्द आपके होने चाहिए।",
-    "block2_title": "हम क्या मानते हैं",
-    "belief1_title": "लेखन व्यक्तिगत है",
-    "belief1_desc": "आपके ड्राफ्ट, नोट्स और विचार उसी गोपनीयता के हकदार हैं जो आपकी बोली जाने वाली बातचीत को मिलती है। AI सहायता के लिए निगरानी की आवश्यकता नहीं होनी चाहिए।",
-    "belief2_title": "AI सुलभ होना चाहिए",
-    "belief2_desc": "शक्तिशाली लेखन टूल्स की कीमत $20-50/महीने नहीं होनी चाहिए। छात्रों, स्वतंत्र लेखकों और छोटे व्यवसायों को बड़े निगमों के समान AI क्षमताएं मिलनी चाहिए।",
-    "belief3_title": "लोकल-फर्स्ट संभव है",
-    "belief3_desc": "आधुनिक डिवाइस स्थानीय रूप से परिष्कृत AI चलाने के लिए पर्याप्त शक्तिशाली हैं। क्लाउड निर्भरता एक व्यापार मॉडल है, तकनीकी आवश्यकता नहीं।",
-    "belief4_title": "ओपन सोर्स विश्वास है",
-    "belief4_desc": "आपको हमारी बात पर विश्वास करने की जरूरत नहीं है। कोड की हर पंक्ति सार्वजनिक है। इसका ऑडिट करें। हमारे गोपनीयता दावों को स्वयं सत्यापित करें।",
-    "block3_title": "हमारी प्रतिबद्धता",
-    "commitment1_title": "हमेशा मुफ्त",
-    "commitment1_desc": "LocalWrite हमेशा मुफ्त रहेगा। कोई ट्रायल नहीं। कोई फीचर वॉल नहीं। कोई \"फ्रीमियम\" ट्रिक्स नहीं। सभी के लिए पूर्ण कार्यक्षमता।",
-    "commitment2_title": "हमेशा निजी",
-    "commitment2_desc": "आपका लेखन कभी आपके डिवाइस से नहीं जाता। कोई टेलीमेट्री नहीं। कोई एनालिटिक्स नहीं। कोई अपवाद नहीं। हम वास्तव में नहीं देख सकते कि आप क्या लिखते हैं।",
-    "commitment3_title": "हमेशा ओपन",
-    "commitment3_desc": "MIT लाइसेंस। फोर्क करें। संशोधित करें। इस पर निर्माण करें। मिशन किसी एक प्रोजेक्ट से बड़ा है।"
-  },
-  "impact": {
-    "title": "यह वो है जो हम बना रहे हैं",
-    "stat1_number": "100%",
-    "stat1_label": "लोकल प्रोसेसिंग",
-    "stat1_desc": "बाहरी सर्वर पर शून्य बाइट्स भेजे जाते हैं। कभी नहीं।",
-    "stat2_number": "$0",
-    "stat2_label": "उपयोगकर्ताओं के लिए लागत",
-    "stat2_desc": "सभी के लिए पेशेवर AI लेखन।",
-    "stat3_number": "11",
-    "stat3_label": "लेखन मोड",
-    "stat3_desc": "पेशेवर से रचनात्मक से संक्षिप्त तक।",
-    "stat4_number": "∞",
-    "stat4_label": "संभावनाएं",
-    "stat4_desc": "कोई उपयोग सीमा नहीं। कोई API कैप नहीं। असीमित।"
   },
   "product": {
     "label": "उत्पाद",
-    "title": "LocalWrite:<br><span class='gradient-text'>AI लेखन जो आपका सम्मान करता है</span>",
-    "subtitle": "एक शक्तिशाली लेखन संवर्धन टूल जो पूरी तरह से आपकी मशीन पर चलता है। क्लाउड की आवश्यकता नहीं।",
-    "feature1_title": "11 लेखन मोड",
-    "feature1_desc": "पेशेवर, रचनात्मक, अकादमिक, संवादात्मक, संक्षिप्त, विस्तृत और अधिक। अपने टेक्स्ट को किसी भी शैली या दर्शकों के लिए रूपांतरित करें।",
-    "feature2_title": "रचनात्मकता नियंत्रण",
-    "feature2_desc": "एक साधारण स्लाइडर के साथ AI की रचनात्मकता को फाइन-ट्यून करें। व्यावसायिक लेखन के लिए रूढ़िवादी, रचनात्मक कार्य के लिए अभिव्यंजक।",
-    "feature3_title": "PDF संवर्धन",
-    "feature3_desc": "फॉर्मेटिंग को संरक्षित करते हुए पूरे PDF दस्तावेज़ों को बेहतर बनाएं। रिपोर्ट, निबंध और पेशेवर दस्तावेज़ों के लिए बिल्कुल सही।",
-    "feature4_title": "रीयल-टाइम स्टैटिस्टिक्स",
-    "feature4_desc": "शब्द गणना, वाक्य गणना, पढ़ने का समय, ग्रेड स्तर, और टोन विश्लेषण। अपने लेखन को अंदर-बाहर जानें।",
-    "feature5_title": "एकाधिक AI मॉडल",
-    "feature5_desc": "5 क्यूरेटेड AI मॉडल में से चुनें। Qwen, Llama, Gemma, Mistral - अपनी लेखन शैली के लिए सबसे अच्छा चुनें।",
-    "modes_heading": "लेखन मोड",
-    "mode1": "पेशेवर",
-    "mode2": "रचनात्मक",
-    "mode3": "अकादमिक",
-    "mode4": "संवादात्मक",
-    "mode5": "संक्षिप्त",
-    "mode6": "विस्तृत",
-    "mode7": "+ अधिक"
+    "title": "LocalWrite:<br><span class='gradient-text'>AI लेखन जो आपका सम्मान करे</span>",
+    "subtitle": "एक शक्तिशाली AI लेखन सहायक जो पूरी तरह आपकी मशीन पर चलता है। अपना मॉडल चुनें, अपनी शैली चुनें, और पूरी गोपनीयता के साथ लिखें।",
+    "feature1_title": "स्मार्ट मॉडल चयन",
+    "feature1_desc": "5 AI मॉडल में से चुनें: Qwen 2.5 7B (अनुशंसित), Gemma 2 9B, Llama 3.1 8B, Llama 3.2 3B, और Mistral 7B। हर एक अलग-अलग लेखन कार्यों के लिए अनुकूलित। पहले उपयोग पर स्वचालित डाउनलोड।",
+    "feature2_title": "5 लेखन मोड",
+    "feature2_desc": "प्रोफ़ेशनल, संवादात्मक, शैक्षणिक, रचनात्मक और संक्षिप्त। किसी भी संदर्भ के लिए सही टोन — व्यावसायिक ईमेल से लेकर रचनात्मक लेखन तक।",
+    "feature3_title": "सारांश और विस्तार",
+    "feature3_desc": "लंबे टेक्स्ट को मुख्य बिंदुओं में संक्षिप्त करें या अधिक उदाहरणों और अभ्यास प्रश्नों के साथ विस्तारित करें। अपनी सामग्री को सेकंडों में बदलें।",
+    "feature4_title": "दस्तावेज़ अपलोड",
+    "feature4_desc": "TXT, Markdown, DOCX और PDF फ़ाइलें आयात करें। अपने मौजूदा दस्तावेज़ों के साथ सहजता से काम करें। बेहतर टेक्स्ट का सीधा डाउनलोड।",
+    "feature5_title": "दस्तावेज़ों से चैट",
+    "feature5_desc": "किताबें, शोध पत्र या नोट्स अपलोड करें और RAG (Retrieval-Augmented Generation) का उपयोग करके प्रश्न पूछें। घटक पहले उपयोग पर स्वचालित इंस्टॉल होते हैं।",
+    "feature6_title": "AI चैट",
+    "feature6_desc": "अपने AI सहायक के साथ ऑफ़लाइन चैट करें। प्रश्न पूछें, विचारों पर मंथन करें, सामग्री बनाएँ, किसी भी चीज़ में मदद पाएँ — सब कुछ निजी।",
+    "models_heading": "उपलब्ध AI मॉडल"
+  },
+  "use_cases": {
+    "label": "उपयोग के मामले",
+    "title": "<span class='gradient-text'>गोपनीयता को महत्व देने वाले लेखकों</span> के लिए बनाया गया",
+    "subtitle": "अप्रकाशित पांडुलिपियों की रक्षा करने वाले लेखकों से लेकर निबंध सुधारने वाले छात्रों तक — LocalWrite एक मूल वादे के साथ विविध आवश्यकताओं को पूरा करता है: आपके शब्द आपके रहें।"
+  },
+  "use_cases_cards": {
+    "writers": {
+      "title": "लेखक और साहित्यकार",
+      "problem": "<strong>समस्या:</strong> क्लाउड AI सेवाएँ आपकी अप्रकाशित पांडुलिपियों को अपने सर्वर पर संग्रहीत करती हैं, जिससे लीक का खतरा होता है।",
+      "solution": "<strong>समाधान:</strong> ऐसी AI के साथ पांडुलिपियों को निखारें जो एक भी शब्द अपलोड नहीं करती। आपकी कहानी तब तक आपकी रहती है जब तक आप साझा करना नहीं चुनते।"
+    },
+    "scriptwriters": {
+      "title": "पटकथा लेखक",
+      "problem": "<strong>समस्या:</strong> स्क्रिप्ट और ट्रीटमेंट अत्यंत संवेदनशील बौद्धिक संपदा हैं जो क्लाउड में असुरक्षित हो सकती हैं।",
+      "solution": "<strong>समाधान:</strong> संवाद सुधारें, कथानक सारांश परिष्कृत करें और स्क्रिप्ट पूरी तरह ऑफ़लाइन पॉलिश करें। आपके विचार सुरक्षित रहते हैं।"
+    },
+    "journalists": {
+      "title": "पत्रकार",
+      "problem": "<strong>समस्या:</strong> संवेदनशील कहानियों और स्रोत-संबंधित ड्राफ्ट को क्लाउड AI सेवाओं पर भरोसा नहीं किया जा सकता।",
+      "solution": "<strong>समाधान:</strong> संवेदनशील जानकारी को उजागर किए बिना लेख सुधारें। कोई तीसरा पक्ष आपके ड्राफ्ट कभी नहीं देखता।"
+    },
+    "students": {
+      "title": "छात्र",
+      "problem": "<strong>समस्या:</strong> क्लाउड AI सब्सक्रिप्शन $20-50/माह खर्च करती हैं। छात्र बजट इसे वहन नहीं कर सकता।",
+      "solution": "<strong>समाधान:</strong> निबंध, शोध पत्र और असाइनमेंट निजी तौर पर सुधारें। निगरानी के बिना बेहतर लेखन सीखें। हमेशा $0।"
+    },
+    "business": {
+      "title": "व्यापार पेशेवर",
+      "problem": "<strong>समस्या:</strong> प्रस्ताव, अनुबंध और आंतरिक दस्तावेज़ों में गोपनीय व्यावसायिक जानकारी होती है।",
+      "solution": "<strong>समाधान:</strong> व्यावसायिक दस्तावेज़ों को ऑफ़लाइन सुधारें। आपकी प्रतिस्पर्धी बढ़त गोपनीय रहती है।"
+    },
+    "privacy": {
+      "title": "गोपनीयता समर्थक",
+      "problem": "<strong>समस्या:</strong> \"हम पर भरोसा करें\" काफ़ी नहीं है। बंद-स्रोत AI सेवाओं को सत्यापित या ऑडिट नहीं किया जा सकता।",
+      "solution": "<strong>समाधान:</strong> ओपन सोर्स, पूरी तरह ऑडिट योग्य। जाँचें कि कोड आपके टेक्स्ट के साथ क्या करता है।"
+    }
   },
   "comparison": {
     "label": "LocalWrite क्यों",
-    "title": "LocalWrite बनाम <span class='gradient-text'>क्लाउड सेवाएं</span>",
-    "subtitle": "देखें कि LocalWrite Grammarly, Jasper और Copy.ai जैसी लोकप्रिय AI लेखन सेवाओं से कैसे तुलना करता है।",
+    "title": "LocalWrite vs <span class='gradient-text'>क्लाउड AI</span>",
+    "subtitle": "देखें कि LocalWrite लोकप्रिय क्लाउड लेखन सहायकों जैसे ChatGPT, Grammarly AI और Jasper की तुलना में कैसा है।",
     "roi_title": "अपनी वार्षिक बचत की गणना करें",
-    "roi_cloud": "औसत AI लेखन सेवा: <strong>$30/महीना x 12 = $360/वर्ष</strong>",
+    "roi_cloud": "औसत क्लाउड AI लेखन टूल: <strong>$25/माह x 12 = $300/वर्ष</strong>",
     "roi_localwrite": "LocalWrite: <strong>$0/वर्ष</strong>",
-    "roi_savings": "आप बचाते हैं: <span class='gradient-text'>हर साल $360+</span>"
+    "roi_savings": "आपकी बचत: <span class='gradient-text'>$300+ हर वर्ष</span>"
   },
   "comparison_table": {
     "header_feature": "सुविधा",
-    "header_cloud": "क्लाउड सेवाएं",
+    "header_cloud": "क्लाउड AI",
     "header_localwrite": "LocalWrite",
     "row1_feature": "मासिक लागत",
-    "row1_cloud": "$20-50/महीना",
+    "row1_cloud": "$20-50/माह",
     "row1_localwrite": "$0 हमेशा",
-    "row2_feature": "वार्षिक लागत",
-    "row2_cloud": "$240-600/वर्ष",
-    "row2_localwrite": "$0",
-    "row3_feature": "गोपनीयता",
-    "row3_cloud": "सर्वर पर अपलोड",
-    "row3_localwrite": "100% लोकल",
-    "row4_feature": "उपयोग सीमाएं",
-    "row4_cloud": "शब्द/अनुरोध सीमाएं",
-    "row4_localwrite": "असीमित",
-    "row5_feature": "इंटरनेट आवश्यक",
-    "row5_cloud": "हां",
-    "row5_localwrite": "ऑफलाइन काम करता है",
-    "row6_feature": "डेटा स्वामित्व",
-    "row6_cloud": "सर्वर पर संग्रहीत",
-    "row6_localwrite": "आप 100% के मालिक हैं",
-    "row7_feature": "ओपन सोर्स",
-    "row7_cloud": "प्रोप्राइटरी",
-    "row7_localwrite": "MIT लाइसेंस"
+    "row2_feature": "गोपनीयता",
+    "row2_cloud": "टेक्स्ट सर्वर पर भेजा जाता है",
+    "row2_localwrite": "100% स्थानीय",
+    "row3_feature": "इंटरनेट आवश्यक",
+    "row3_cloud": "हमेशा आवश्यक",
+    "row3_localwrite": "ऑफ़लाइन काम करता है",
+    "row4_feature": "अकाउंट आवश्यक",
+    "row4_cloud": "हाँ, ईमेल के साथ",
+    "row4_localwrite": "कोई अकाउंट नहीं चाहिए",
+    "row5_feature": "डेटा संग्रहण",
+    "row5_cloud": "आप जो भी टाइप करें",
+    "row5_localwrite": "शून्य संग्रहण",
+    "row6_feature": "ओपन सोर्स",
+    "row6_cloud": "प्रोप्राइटरी",
+    "row6_localwrite": "MIT लाइसेंस"
   },
   "how_it_works": {
     "title": "डिज़ाइन से सरल",
-    "subtitle": "कोई अकाउंट नहीं। कोई API कीज़ नहीं। कोई कॉन्फ़िगरेशन नहीं। बस डाउनलोड करें, खोलें और लिखें।",
+    "subtitle": "कोई अकाउंट नहीं। कोई API कुंजी नहीं। कोई कॉन्फ़िगरेशन नहीं। बस डाउनलोड करें, मॉडल चुनें और लिखना शुरू करें।",
     "step1_title": "डाउनलोड",
-    "step1_desc": "macOS के लिए LocalWrite प्राप्त करें। एक फ़ाइल, उपयोग के लिए तैयार।",
+    "step1_desc": "macOS के लिए LocalWrite प्राप्त करें। एक ऐप, उपयोग के लिए तैयार।",
     "step2_title": "मॉडल चुनें",
-    "step2_desc": "हमारी क्यूरेटेड सूची से एक AI मॉडल चुनें। एक बार डाउनलोड होता है।",
-    "step3_title": "निजी रूप से लिखें",
-    "step3_desc": "AI के साथ अपने लेखन को बेहतर बनाएं। आपके शब्द कभी आपके डिवाइस से नहीं जाते।"
+    "step2_desc": "5 AI मॉडल में से चुनें। पहले उपयोग पर स्वचालित डाउनलोड।",
+    "step3_title": "निजी तौर पर लिखें",
+    "step3_desc": "अपना लेखन सुधारें। आपके शब्द आपका डिवाइस कभी नहीं छोड़ते।"
+  },
+  "testimonials": {
+    "label": "उपयोगकर्ता क्या कहते हैं",
+    "title": "<span class='gradient-text'>पूरे भारत के पेशेवरों</span> का भरोसा",
+    "subtitle": "लेखकों से लेकर व्यापार सलाहकारों तक, LocalWrite एक मूल वादे के साथ विविध आवश्यकताओं को पूरा करता है: आपके शब्द आपके रहें।",
+    "t1_text": "\"मैं अपना तीसरा उपन्यास लिख रहा हूँ और अपनी अप्रकाशित पांडुलिपि को क्लाउड AI पर अपलोड करने के विचार से डर लगता था। LocalWrite मुझे गद्य को निखारने, असंगतियों की जाँच करने और संवाद सुधारने देता है — बिना एक शब्द के लैपटॉप से बाहर जाए। यह एक निजी संपादक होने जैसा है।\"",
+    "t2_text": "\"एक छात्र के रूप में, मैं AI लेखन टूल के लिए $20/माह नहीं दे सकता था। LocalWrite मुझे वही गुणवत्ता मुफ़्त में देता है। मैं इसका उपयोग निबंधों, शोध पत्रों और परीक्षा की तैयारी के लिए करता हूँ। शैक्षणिक मोड शैक्षणिक कार्य के लिए बिल्कुल सही है। कोई निगरानी नहीं, कोई लागत नहीं।\"",
+    "t3_text": "\"मैं Fortune 500 ग्राहकों के लिए गोपनीय रणनीति दस्तावेज़ संभालता हूँ। क्लाउड AI कभी विकल्प नहीं था। LocalWrite मेरे प्रस्तावों और रिपोर्ट्स को स्थानीय रूप से सुधारता है — मेरे ग्राहकों की प्रतिस्पर्धी बुद्धिमत्ता सुरक्षित रहती है। प्रोफ़ेशनल लेखन मोड व्यावसायिक दस्तावेज़ों के लिए एकदम सही है।\""
   },
   "download": {
     "label": "शुरू करें",
-    "title": "डाउनलोड<br><span class='gradient-text'>LocalWrite</span>",
-    "subtitle": "अभी macOS के लिए उपलब्ध। Windows और Linux जल्द आ रहे हैं।",
-    "macos": "macOS",
-    "windows": "Windows",
-    "linux": "Linux"
+    "title": "डाउनलोड करें<br><span class='gradient-text'>LocalWrite</span>",
+    "subtitle": "अभी macOS के लिए उपलब्ध। हमेशा मुफ़्त।",
+    "macos_title": "macOS v1.0.0",
+    "macos_desc": "macOS 11.0+ (Apple Silicon और Intel)",
+    "macos_size": "~200 MB (+ पहले उपयोग पर प्रति मॉडल 2-6 GB)",
+    "source_title": "सोर्स कोड",
+    "source_desc": "सोर्स से बिल्ड करें (Python और PyQt6)",
+    "source_size": "MIT लाइसेंस - Fork और संशोधित करें"
   },
   "download_details": {
-    "macos_desc": "macOS 11+ (Apple Silicon और Intel)",
-    "macos_size": "~100 MB (+ 2-6 GB मॉडल)",
-    "windows_desc": "जल्द आ रहा है",
-    "linux_desc": "जल्द आ रहा है",
-    "coming_soon": "विकास में",
-    "system_req_heading": "सिस्टम आवश्यकताएं",
+    "system_req_heading": "सिस्टम आवश्यकताएँ",
     "req_ram_label": "RAM",
     "req_ram_value": "न्यूनतम 8 GB, अनुशंसित 16 GB",
     "req_storage_label": "स्टोरेज",
-    "req_storage_value": "प्रति AI मॉडल 2-6 GB",
+    "req_storage_value": "प्रति मॉडल 2-6 GB",
     "req_gpu_label": "GPU",
-    "req_gpu_value": "वैकल्पिक - Apple Silicon अनुकूलित"
+    "req_gpu_value": "Apple Silicon या Metal GPU प्रोसेसिंग को तेज़ करता है"
   },
-  "join": {
-    "heading": "आंदोलन में शामिल हों",
-    "paragraph1": "LocalWrite सिर्फ सॉफ्टवेयर से ज्यादा है। यह एक बयान है कि AI को अलग तरह से बनाया जा सकता है। कि गोपनीयता और शक्ति परस्पर अनन्य नहीं हैं। कि ओपन सोर्स बिग टेक से प्रतिस्पर्धा कर सकता है।",
-    "paragraph2": "हम अभी शुरुआत कर रहे हैं। और हमें आप जैसे लोगों की जरूरत है।",
-    "star_title": "प्रोजेक्ट को स्टार करें",
-    "star_desc": "GitHub पर अपना समर्थन दिखाएं",
-    "fork_title": "फोर्क और योगदान करें",
-    "fork_desc": "AI के भविष्य को बनाने में मदद करें",
-    "discussions_title": "चर्चाओं में शामिल हों",
-    "discussions_desc": "समुदाय के साथ विचार साझा करें"
+  "faq": {
+    "label": "सामान्य प्रश्न",
+    "title": "अक्सर पूछे जाने वाले <span class='gradient-text'>प्रश्न</span>"
   },
-  "final_cta": {
-    "heading": "AI का भविष्य लोकल है।<br>AI का भविष्य ओपन है।<br><span class='gradient-text'>भविष्य अभी शुरू होता है।</span>",
-    "download_btn": "LocalWrite डाउनलोड करें",
-    "source_btn": "सोर्स कोड देखें"
+  "faq_items": {
+    "q1": {
+      "question": "यह पूरी तरह मुफ़्त कैसे हो सकता है?",
+      "answer": "LocalWrite पूरी तरह आपके डिवाइस पर ओपन सोर्स AI मॉडल का उपयोग करके चलता है। हमारी शून्य क्लाउड लागत है — कोई सर्वर नहीं, कोई बैंडविड्थ नहीं, कोई API शुल्क नहीं। हमारा कोड MIT लाइसेंस और ओपन सोर्स है।"
+    },
+    "q2": {
+      "question": "ChatGPT की तुलना में लेखन गुणवत्ता कैसी है?",
+      "answer": "LocalWrite Qwen 2.5 7B और Gemma 2 9B जैसे अत्याधुनिक ओपन सोर्स मॉडल का उपयोग करता है। जबकि क्लाउड मॉडल बड़े हो सकते हैं, हमारे स्थानीय मॉडल लेखन सुधार, संपादन और सामग्री निर्माण के लिए उत्कृष्ट गुणवत्ता प्रदान करते हैं। मुख्य लाभ: आपका टेक्स्ट कभी आपका डिवाइस नहीं छोड़ता।"
+    },
+    "q3": {
+      "question": "क्या यह पूरी तरह ऑफ़लाइन काम करता है?",
+      "answer": "हाँ! प्रारंभिक मॉडल डाउनलोड (प्रति मॉडल 2-6 GB, एक बार) के बाद, LocalWrite 100% ऑफ़लाइन काम करता है। हवाई जहाज़ पर, बिना Wi-Fi वाली कैफ़े में या इंटरनेट के बिना कहीं भी लिखें।"
+    },
+    "q4": {
+      "question": "क्या मैं इसका व्यावसायिक उपयोग कर सकता हूँ?",
+      "answer": "बिल्कुल! LocalWrite MIT लाइसेंस के तहत है। इसका उपयोग व्यक्तिगत परियोजनाओं, क्लाइंट कार्य, व्यावसायिक उत्पादों या किसी भी चीज़ के लिए करें। व्यावसायिक उपयोग पर कोई प्रतिबंध नहीं।"
+    },
+    "q5": {
+      "question": "मुझे कौन सा AI मॉडल चुनना चाहिए?",
+      "answer": "<strong>Qwen 2.5 7B</strong> (अनुशंसित) - निबंध, लेख और सामान्य लेखन के लिए सर्वश्रेष्ठ।<br><strong>Gemma 2 9B</strong> - रचनात्मक लेखन और कहानी कहने के लिए उत्कृष्ट।<br><strong>Llama 3.1 8B</strong> - पेशेवर, स्वच्छ गद्य के लिए बढ़िया।<br><strong>Llama 3.2 3B</strong> - कम मेमोरी उपयोग के साथ त्वरित संपादन।<br><strong>Mistral 7B</strong> - गति और गुणवत्ता का संतुलन।"
+    },
+    "q6": {
+      "question": "सिस्टम आवश्यकताएँ क्या हैं?",
+      "answer": "<strong>न्यूनतम:</strong> macOS 11.0+, 8GB RAM, प्रति मॉडल 2-6 GB स्टोरेज<br><strong>अनुशंसित:</strong> 16GB RAM, तेज़ प्रोसेसिंग के लिए Apple Silicon<br><strong>तकनीक:</strong> llama.cpp बैकएंड, GGUF मॉडल, Metal GPU एक्सेलेरेशन"
+    }
   },
   "footer": {
-    "tagline": "AI जो मुफ्त, निजी और आपका है।",
-    "company": "एक <strong>Svetozar Technologies</strong> प्रोजेक्ट",
+    "tagline": "AI जो मुफ़्त, निजी और आपकी है।",
     "products_title": "उत्पाद",
     "community_title": "समुदाय",
+    "discussions": "चर्चाएँ",
     "legal_title": "कानूनी",
-    "discussions": "चर्चाएं",
     "privacy": "गोपनीयता नीति",
     "license": "MIT लाइसेंस",
     "copyright": "&copy; 2025 Svetozar Technologies",
-    "footer_tagline": "AI बना रहे हैं जो मानवता की सेवा करे, निगमों की नहीं।"
+    "footer_tagline": "मानवता की सेवा करने वाली AI बनाना, कॉर्पोरेशन की नहीं।"
   }
 }
