--- a/translations/ar.json
+++ b/translations/ar.json
@@ -9,176 +9,169 @@
     "get_started": "ابدأ الآن"
   },
   "hero": {
-    "badge": "100% بدون إنترنت &bull; مفتوح المصدر &bull; مجاني للأبد",
-    "title": "الذكاء الاصطناعي يجب أن يكون حراً.<br>الذكاء الاصطناعي يجب أن يكون خاصاً.<br><span class='gradient-text'>الذكاء الاصطناعي يجب أن يكون ملكك.</span>",
-    "subtitle": "نحن نبني أدوات ذكاء اصطناعي تحترم خصوصيتك. لا خوادم سحابية، لا جمع بيانات، لا تنازلات. أفكارك تبقى ملكك.",
-    "cta_products": "استكشف المنتجات",
-    "cta_github": "شاهد على GitHub"
+    "title": "AI يجب أن يكون مجانيًا.<br>AI يجب أن يكون خاصًا.<br><span class='gradient-text'>AI يجب أن يكون ملكك.</span>",
+    "subtitle": "نحن لا نبني مجرد برامج. نحن نناضل من أجل مستقبل يخدم فيه الذكاء الاصطناعي البشرية — وليس العكس. حيث تبقى بياناتك ملكك. حيث لا تأتي التكنولوجيا القوية بثمن المراقبة.",
+    "cta_products": "استكشف منتجاتنا",
+    "cta_mission": "اقرأ مهمتنا"
   },
-  "stats": {
-    "offline": "معالجة بدون إنترنت",
-    "data": "بيانات مجمعة",
-    "products": "أدوات الخصوصية",
-    "license": "ترخيص مفتوح"
+  "social_proof": {
+    "local": "معالجة محلية",
+    "free": "مجاني للأبد",
+    "opensource": "مفتوح المصدر",
+    "products": "منتجات AI"
   },
   "mission": {
     "label": "مهمتنا",
-    "title": "إضاءة خصوصية الذكاء الاصطناعي",
-    "subtitle": "\"سفيتوزار\" تعني \"نور العالم\" في اللغات السلافية. نؤمن أن الذكاء الاصطناعي يجب أن ينير الإمكانيات، لا أن يظلل خصوصيتك.",
-    "privacy_title": "الخصوصية أولاً",
-    "privacy_desc": "كل منتج نبنيه يعمل 100% محلياً على جهازك. بياناتك لا تلمس خوادمنا أبداً لأننا لا نملك أي خوادم.",
-    "offline_title": "دائماً بدون إنترنت",
-    "offline_desc": "اتصال بالإنترنت؟ اختياري. ذكاؤنا الاصطناعي يعمل في أي مكان - في الطائرة، في كوخ، أو ببساطة عندما تريد السلام الرقمي.",
-    "opensource_title": "مفتوح المصدر",
-    "opensource_desc": "الشفافية تبني الثقة. كل كودنا مفتوح المصدر، قابل للتدقيق، ومرخص تحت MIT. شاهد بالضبط ما يعمل على جهازك.",
-    "free_title": "مجاني للأبد",
-    "free_desc": "لا اشتراكات، لا مستويات مميزة، لا عروض إضافية. الخصوصية لا يجب أن تكون رفاهية. أدواتنا مجانية للجميع، دائماً.",
-    "noaccount_title": "بدون حسابات",
-    "noaccount_desc": "حمّل واستخدم. لا تسجيل، لا تحقق من البريد الإلكتروني، لا مفاتيح API. نحن لا نريد معلوماتك الشخصية.",
-    "empower_title": "تمكين المستخدم",
-    "empower_desc": "نحن نبني أدوات تعيد القوة للمستخدمين. أنت تتحكم في ذكائك الاصطناعي، وبياناتك، وحياتك الرقمية."
+    "title": "إتاحة AI للجميع.<br>حماية الخصوصية.<br><span class='gradient-text'>تمكين كل شخص.</span>"
+  },
+  "manifesto": {
+    "block1_title": "المشكلة التي نراها",
+    "block1_text": "ثورة AI تحدث الآن، لكنها تحدث وفق شروط الآخرين. كل خدمة AI رئيسية تتطلب منك رفع بياناتك إلى خوادم الشركات. تسجيلاتك الصوتية، مستنداتك، محتواك الأكثر خصوصية — يتم تخزينها وتحليلها واستثمارها تجاريًا من قبل شركات لا تتوافق مصالحها مع مصالحك.",
+    "block2_title": "حلنا",
+    "block2_text": "نبني أدوات AI تعمل بالكامل على جهازك. بدون سحابة. بدون حسابات. بدون جمع بيانات. فقط برامج قوية ومفتوحة المصدر تحترم خصوصيتك وتعمل بدون اتصال بالإنترنت. عندما تستخدم منتجاتنا، تبقى بياناتك بالضبط حيث يجب أن تكون — معك.",
+    "block3_title": "التزامنا",
+    "commitment1_title": "مجاني للأبد",
+    "commitment1_desc": "جميع منتجاتنا ستحتوي دائمًا على إصدارات مجانية كاملة الوظائف. بدون تجارب محدودة. بدون قيود على الميزات. بدون فخاخ اشتراك.",
+    "commitment2_title": "خاص للأبد",
+    "commitment2_desc": "بياناتك لا تغادر جهازك أبدًا. بدون قياس عن بُعد. بدون تحليلات. بدون استثناءات.",
+    "commitment3_title": "مفتوح للأبد",
+    "commitment3_desc": "الكود الخاص بنا مرخص بموجب MIT. دققه. انسخه. ابنِ عليه. المهمة أكبر من أي مشروع فردي."
   },
   "products": {
     "label": "منتجاتنا",
-    "title": "أدوات ذكاء اصطناعي خاصة",
-    "subtitle": "قدرات ذكاء اصطناعي قوية تعمل بالكامل على جهازك. لا حاجة للسحابة.",
-    "badge_available": "متوفر الآن",
-    "badge_coming": "قريباً",
-    "download": "تحميل",
-    "source": "الكود المصدري",
-    "coming_soon": "قريباً",
-    "localmind": {
-      "tagline": "التعرف على الكلام الخاص",
-      "desc": "حوّل الكلام إلى نص مع خصوصية كاملة. نسخ احترافي لا يغادر جهازك أبداً.",
-      "f1": "نسخ في الوقت الفعلي",
-      "f2": "دعم 99+ لغة",
-      "f3": "تحديد المتحدث",
-      "f4": "تقييم جودة بالذكاء الاصطناعي",
-      "f5": "macOS وWindows وLinux"
-    },
-    "localwrite": {
-      "tagline": "مساعد كتابة ذكاء اصطناعي خاص",
-      "desc": "حسّن كتابتك مع ذكاء اصطناعي محلي قوي. أوضاع متعددة، دردشة AI، واقتراحات ذكية - كلها 100% بدون إنترنت.",
-      "f1": "5 أوضاع لتحسين الكتابة",
-      "f2": "مساعد دردشة AI (بدون إنترنت)",
-      "f3": "تحسين مستندات PDF",
-      "f4": "5 نماذج AI للاختيار",
-      "f5": "macOS (Windows قريباً)"
-    },
-    "localpdf": {
-      "tagline": "مجموعة أدوات PDF خاصة",
-      "desc": "معالجة PDF كاملة بدون رفع سحابي. ضغط، دمج، تقسيم، تحويل - كلها محلياً على جهازك.",
-      "f1": "ضغط PDF ذكي",
-      "f2": "دمج وتقسيم المستندات",
-      "f3": "تحويل الصور إلى PDF",
-      "f4": "PowerPoint إلى PDF",
-      "f5": "macOS وWindows وLinux"
-    }
+    "title": "أدوات AI <span class='gradient-text'>تحترمك</span>",
+    "subtitle": "AI احترافي يعمل بالكامل على جهازك. بدون سحابة. بدون تنازلات.",
+    "badge_available": "متاح الآن",
+    "badge_coming": "قريبًا",
+    "learn_more": "اعرف المزيد",
+    "localmind_tagline": "نسخ وتحليل صوتي بالـ AI",
+    "localmind_desc": "نسخ صوتي احترافي، واكتشاف المتحدثين، وتحليل الجودة. مدعوم بـ Whisper AI يعمل 100% محليًا على جهازك.",
+    "localmind_feature1": "دعم أكثر من 99 لغة",
+    "localmind_feature2": "اكتشاف المتحدثين",
+    "localmind_feature3": "تقييم الجودة بالـ AI",
+    "localmind_feature4": "تصدير إلى PDF، JSON، TXT",
+    "localwrite_tagline": "تحسين الكتابة بالـ AI",
+    "localwrite_desc": "حسّن كتابتك باستخدام AI محلي قوي. 11 وضع كتابة، وإحصائيات فورية، ومعالجة مستندات PDF. كلماتك لا تغادر جهازك أبدًا.",
+    "localwrite_feature1": "11 وضع كتابة",
+    "localwrite_feature2": "شريط تحكم بالإبداع",
+    "localwrite_feature3": "تحسين مستندات PDF",
+    "localwrite_feature4": "إحصائيات فورية",
+    "localpdf_tagline": "أدوات PDF مدعومة بالـ AI",
+    "localpdf_desc": "تحدث مع مستنداتك، واستخرج المعلومات، وعالج ملفات PDF باستخدام AI محلي. مستنداتك الحساسة تبقى خاصة تمامًا.",
+    "localpdf_feature1": "محادثة مع ملفات PDF",
+    "localpdf_feature2": "استخراج المعلومات الرئيسية",
+    "localpdf_feature3": "تلخيص المستندات",
+    "localpdf_feature4": "معالجة محلية 100%"
   },
-  "usecases": {
-    "label": "حالات الاستخدام",
-    "title": "مبني لـ<span class='gradient-text'>أناس حقيقيين</span>",
-    "subtitle": "من الصحفيين الذين يحمون مصادرهم إلى الشركات التي توفر التكاليف - أدواتنا تخدم احتياجات متنوعة بوعد أساسي واحد: بياناتك تبقى ملكك.",
-    "journalists": {
-      "title": "الصحفيون ومقدمو البودكاست",
-      "desc": "احمِ هويات المصادر مع نسخ وكتابة 100% بدون إنترنت. لا سجلات خادم. لا تسريبات بيانات. سرية كاملة."
-    },
-    "legal": {
-      "title": "المحترفون القانونيون",
-      "desc": "حافظ على امتياز المحامي والعميل مع المعالجة على الجهاز. انسخ الشهادات وحسّن المستندات بدون وصول طرف ثالث."
-    },
-    "researchers": {
-      "title": "الباحثون",
-      "desc": "الامتثال لـ HIPAA وGDPR تلقائي عندما لا تغادر البيانات جهازك أبداً. عالج المقابلات والمستندات محلياً."
-    },
-    "business": {
-      "title": "الشركات الصغيرة",
-      "desc": "وفّر $360+/سنة على أدوات النسخ والكتابة فقط. ذكاء اصطناعي احترافي بـ $0. استثمر المدخرات في النمو، لا في إيجار البرمجيات."
-    },
-    "students": {
-      "title": "الطلاب والأكاديميون",
-      "desc": "حسّن المقالات، انسخ المحاضرات، وعالج المستندات بدون اشتراكات مكلفة أو مخاوف خصوصية."
-    },
-    "privacy": {
-      "title": "المدافعون عن الخصوصية",
-      "desc": "دقق كل سطر من الكود بنفسك. شفافية المصدر المفتوح. لا ثقة عمياء مطلوبة. استخدم الذكاء الاصطناعي بشروطك."
-    }
+  "why": {
+    "label": "لماذا AI المحلي؟",
+    "title": "السحابي مقابل <span class='gradient-text'>AI المحلي</span>",
+    "cloud_title": "خدمات AI السحابية",
+    "cloud1": "البيانات تُرفع إلى الخوادم",
+    "cloud2": "اشتراكات $20-50 شهريًا",
+    "cloud3": "يتطلب الإنترنت",
+    "cloud4": "حدود الاستخدام",
+    "cloud5": "يتطلب حسابًا",
+    "cloud6": "مغلق المصدر وملكية خاصة",
+    "local_title": "Svetozar Technologies",
+    "local1": "معالجة 100% على الجهاز",
+    "local2": "مجاني للأبد",
+    "local3": "يعمل بدون إنترنت",
+    "local4": "استخدام غير محدود",
+    "local5": "لا يحتاج حسابًا",
+    "local6": "مفتوح المصدر (MIT)"
   },
-  "comparison": {
-    "label": "لماذا تختارنا",
-    "title": "Svetozar مقابل <span class='gradient-text'>الخدمات السحابية</span>",
-    "feature": "الميزة",
-    "cloud": "الخدمات السحابية",
-    "svetozar": "أدوات Svetozar",
-    "row1": {
-      "feature": "التكلفة الشهرية",
-      "svetozar": "$0 للأبد"
-    },
-    "row2": {
-      "feature": "الخصوصية",
-      "cloud": "رفع إلى الخوادم",
-      "svetozar": "100% محلي"
-    },
-    "row3": {
-      "feature": "الإنترنت مطلوب",
-      "cloud": "دائماً",
-      "svetozar": "يعمل بدون إنترنت"
-    },
-    "row4": {
-      "feature": "حدود الاستخدام",
-      "cloud": "دقائق/صفحات محدودة",
-      "svetozar": "غير محدود"
-    },
-    "row5": {
-      "feature": "حساب مطلوب",
-      "cloud": "نعم + تحقق",
-      "svetozar": "بدون حسابات"
-    },
-    "row6": {
-      "feature": "ملكية البيانات",
-      "cloud": "مخزنة على الخوادم",
-      "svetozar": "أنت تملك 100%"
-    },
-    "row7": {
-      "feature": "مفتوح المصدر",
-      "cloud": "مملوك",
-      "svetozar": "ترخيص MIT"
-    }
+  "join": {
+    "heading": "انضم إلى الحركة",
+    "paragraph": "نحن نبني AI بشكل مختلف. AI يحترمك. AI ملكك. انضم إلينا في بناء مستقبل تكون فيه التكنولوجيا القوية في متناول الجميع، دون المساس بالخصوصية.",
+    "github_title": "عرض على GitHub",
+    "github_desc": "ضع نجمة، انسخ، وساهم",
+    "discussions_title": "انضم إلى النقاشات",
+    "discussions_desc": "تواصل مع المجتمع"
   },
-  "testimonials": {
-    "label": "مستخدمون عالميون",
-    "title": "موثوق به عالمياً",
-    "t1": {
-      "quote": "\"نسخ LocalMind للإسبانية دقيق بشكل لا يصدق. أعالج أكثر من 10 ساعات من المقابلات أسبوعياً بدون دفع رسوم اشتراك.\"",
-      "name": "ماريا غونزاليس",
-      "role": "مقدمة بودكاست، المكسيك"
-    },
-    "t2": {
-      "quote": "\"الامتثال لـ HIPAA كان حاسماً لمقابلات المرضى. LocalMind يعالج كل شيء محلياً - لا تغادر أي بيانات أنظمتنا الآمنة أبداً.\"",
-      "name": "د. يوكي تاناكا",
-      "role": "باحث طبي، اليابان"
-    },
-    "t3": {
-      "quote": "\"ساعدني LocalWrite في تحسين أطروحتي مع الحفاظ على بحثي خاصاً تماماً. دردشة الذكاء الاصطناعي مثل وجود معلم كتابة بدون إنترنت.\"",
-      "name": "بريا شارما",
-      "role": "طالبة دكتوراه، الهند"
-    }
-  },
-  "cta": {
-    "title": "مستعد للذكاء الاصطناعي الخاص؟",
-    "subtitle": "انضم إلى الآلاف الذين اختاروا الخصوصية بدون التضحية بالقدرات. حمّل أدواتنا واختبر الفرق.",
-    "explore": "استكشف المنتجات",
-    "github": "نجمة على GitHub"
+  "final_cta": {
+    "heading": "مستقبل AI محلي.<br>مستقبل AI مفتوح.<br><span class='gradient-text'>المستقبل يبدأ الآن.</span>",
+    "explore_btn": "استكشف المنتجات",
+    "source_btn": "عرض الكود المصدري"
   },
   "footer": {
-    "tagline": "ذكاء اصطناعي مجاني، خاص، وملكك.",
-    "products": "المنتجات",
-    "community": "المجتمع",
-    "legal": "قانوني",
+    "tagline": "AI مجاني، خاص، وملكك.",
+    "products_title": "المنتجات",
+    "community_title": "المجتمع",
+    "legal_title": "قانوني",
     "discussions": "النقاشات",
     "privacy": "سياسة الخصوصية",
-    "license": "ترخيص MIT",
-    "copyright": "&copy; 2025 Svetozar Technologies. ترخيص MIT.",
-    "built": "مبني مع مراعاة الخصوصية. لا تغادر البيانات جهازك."
+    "license": "رخصة MIT",
+    "copyright": "&copy; 2025 Svetozar Technologies",
+    "footer_tagline": "نبني AI يخدم البشرية، لا الشركات."
+  },
+  "privacy": {
+    "page_title": "سياسة الخصوصية",
+    "last_updated": "آخر تحديث: فبراير 2026",
+    "short_title": "النسخة المختصرة",
+    "short_text": "نحن لا نجمع بياناتك. كل منتج من Svetozar Technologies يعمل 100% محليًا على جهازك. ملفاتك ونصوصك وتسجيلاتك الصوتية ومستنداتك لا تصل أبدًا إلى خوادمنا — لأنه ليس لدينا خوادم. هذه ليست ميزة. إنها مبدأنا التأسيسي.",
+    "s1_title": "1. فلسفتنا",
+    "s1_text": "في Svetozar Technologies، نؤمن بأن الخصوصية حق أساسي وليست ميزة مدفوعة. نبني أدوات AI تعمل بالكامل على جهازك لأن هذا هو الشكل الذي يجب أن تعمل به البرامج. بدون حسابات. بدون معالجة سحابية. بدون جمع بيانات. أبدًا.",
+    "s2_title": "2. تطبيقات سطح المكتب — صفر جمع بيانات",
+    "s2_intro": "تنطبق هذه السياسة على جميع تطبيقات سطح المكتب من Svetozar Technologies، بما في ذلك <strong>LocalMind</strong> (نسخ صوتي)، و<strong>LocalWrite</strong> (مساعد كتابة AI)، و<strong>LocalPDF</strong> (ذكاء PDF). كل تطبيق:",
+    "s2_item1": "<strong>يعالج 100% محليًا:</strong> جميع عمليات AI — النسخ الصوتي، الكتابة، التلخيص، تحليل PDF — تتم بالكامل على جهازك.",
+    "s2_item2": "<strong>صفر قياس عن بُعد:</strong> لا نجمع إحصائيات الاستخدام أو تقارير الأعطال أو مقاييس الأداء أو أي شكل من أشكال التحليلات من تطبيقاتنا.",
+    "s2_item3": "<strong>بدون اتصالات شبكة:</strong> بعد تنزيل نموذج AI الأولي، تعمل جميع التطبيقات بالكامل بدون اتصال بالإنترنت.",
+    "s2_item4": "<strong>لا يتطلب حسابًا:</strong> لا تحتاج أبدًا إلى إنشاء حساب أو تقديم معلومات شخصية لاستخدام أي من منتجاتنا.",
+    "s2_item5": "<strong>ملفاتك تبقى محلية:</strong> جميع المخرجات — النسخ الصوتية والمستندات والتقارير والتصديرات — تُخزَّن فقط على جهازك.",
+    "s3_title": "3. تحليلات الموقع",
+    "s3_intro": "عند زيارتك لموقعنا (svetozar-technologies.github.io)، نستخدم <strong>Plausible Analytics</strong>، وهي خدمة تحليلات تضع الخصوصية أولًا:",
+    "s3_item1": "<strong>بدون ملفات تعريف الارتباط:</strong> Plausible لا تستخدم ملفات تعريف الارتباط ولا تتبعك عبر المواقع.",
+    "s3_item2": "<strong>بدون بيانات شخصية:</strong> لا يمكننا تحديد هوية الزوار الأفراد.",
+    "s3_item3": "<strong>متوافق مع GDPR:</strong> جميع البيانات مجهولة المصدر ومجمّعة.",
+    "s3_extra": "نجمع فقط مقاييس أساسية مجهولة المصدر مثل مشاهدات الصفحات ومصادر الإحالة لفهم كيف يكتشف الناس منتجاتنا. لا شيء يمكن من خلاله تحديد الهوية الشخصية.",
+    "s4_title": "4. بدون تتبع من طرف ثالث",
+    "s4_intro": "موقعنا وتطبيقاتنا لا تستخدم:",
+    "s4_item1": "Google Analytics أو أي تحليلات تطفلية",
+    "s4_item2": "Facebook Pixel أو متتبعات إعلانية",
+    "s4_item3": "ملفات تعريف ارتباط من طرف ثالث من أي نوع",
+    "s4_item4": "تقنيات بصمة المتصفح",
+    "s4_item5": "نصوص تتبع عبر المواقع",
+    "s5_title": "5. الاتصالات عبر البريد الإلكتروني",
+    "s5_intro": "إذا قدمت طوعيًا عنوان بريدك الإلكتروني لتحديثات المنتجات:",
+    "s5_item1": "<strong>اشتراك اختياري 100%:</strong> جمع البريد الإلكتروني طوعي دائمًا. يمكنك تنزيل واستخدام جميع المنتجات دون تقديم أي معلومات شخصية.",
+    "s5_item2": "<strong>تخزين آمن:</strong> تتم معالجة رسائل البريد الإلكتروني عبر Formspree، وهي خدمة نماذج تركز على الخصوصية.",
+    "s5_item3": "<strong>استخدام محدود:</strong> نرسل فقط إشعارات نادرة حول الإصدارات الرئيسية للمنتجات والميزات الجديدة وتحديثات الأمان.",
+    "s5_item4": "<strong>لا يُشارك أبدًا:</strong> لن نبيع أو نؤجر أو نشارك بريدك الإلكتروني مع أطراف ثالثة أبدًا.",
+    "s5_item5": "<strong>إلغاء اشتراك سهل:</strong> كل بريد إلكتروني يتضمن رابط إلغاء اشتراك بنقرة واحدة.",
+    "s6_title": "6. خدمات الطرف الثالث",
+    "s6_text": "تطبيقاتنا لا تتكامل مع خدمات طرف ثالث يمكن أن تهدد خصوصيتك. الاعتماد الخارجي الوحيد هو تنزيل نموذج AI الأولي، والذي يأتي مباشرة من <strong>Hugging Face</strong>، وهو مستودع نماذج مفتوح المصدر موثوق. بعد ذلك، كل شيء يعمل بدون اتصال.",
+    "s7_title": "7. أمان البيانات",
+    "s7_text1": "<strong>تطبيقات سطح المكتب:</strong> نظرًا لأن جميع البيانات تبقى على جهازك، فإن الأمان يتحدد بحماية نظام التشغيل المدمجة (مثل FileVault على macOS، وBitLocker على Windows).",
+    "s7_text2": "<strong>الموقع:</strong> يتم تقديم هذا الموقع عبر HTTPS. أي نماذج مُرسَلة تكون مشفرة أثناء النقل.",
+    "s8_title": "8. حقوقك (الامتثال لـ GDPR)",
+    "s8_intro": "إذا قدمت عنوان بريدك الإلكتروني، فلديك الحق في:",
+    "s8_item1": "<strong>الوصول:</strong> طلب نسخة من أي بيانات نحتفظ بها (مقتصرة على بريدك الإلكتروني).",
+    "s8_item2": "<strong>الحذف:</strong> طلب الإزالة الفورية من قائمة بريدنا الإلكتروني.",
+    "s8_item3": "<strong>قابلية النقل:</strong> الحصول على بياناتك بتنسيق قابل للقراءة الآلية.",
+    "s8_item4": "<strong>التصحيح:</strong> تحديث عنوان بريدك الإلكتروني في أي وقت.",
+    "s8_contact": "لممارسة هذه الحقوق، تواصل معنا على: <a href='mailto:kaivalya.pandey@gmail.com'>kaivalya.pandey@gmail.com</a>",
+    "s9_title": "9. شفافية المصدر المفتوح",
+    "s9_intro": "جميع منتجات Svetozar Technologies مفتوحة المصدر بموجب رخصة MIT. يمكنك:",
+    "s9_item1": "<strong>تدقيق كل سطر من الكود</strong> للتحقق من ادعاءات الخصوصية الخاصة بنا عبر جميع المستودعات.",
+    "s9_item2": "<strong>التحقق من سلوك الشبكة</strong> — التأكد من أن تطبيقاتنا لا تجري اتصالات شبكة غير مصرح بها.",
+    "s9_item3": "<strong>البناء من المصدر</strong> — تجميع أي تطبيق بنفسك لأقصى درجات الثقة.",
+    "s9_item4": "<strong>التعديل بحرية</strong> — تكييف الكود لتلبية متطلبات الخصوصية الخاصة بك.",
+    "s9_repos": "قم بزيارة مستودعاتنا: <a href='https://github.com/Svetozar-Technologies' target='_blank'>github.com/Svetozar-Technologies</a>",
+    "s10_title": "10. خصوصية الأطفال",
+    "s10_text": "منتجاتنا غير موجهة للأطفال تحت سن 13 عامًا. ومع ذلك، نظرًا لأننا لا نجمع أي بيانات شخصية من خلال تطبيقات سطح المكتب، يمكن استخدامها بأمان من قبل الأشخاص من جميع الأعمار.",
+    "s11_title": "11. التغييرات على هذه السياسة",
+    "s11_intro": "قد نحدّث سياسة الخصوصية هذه مع إصدار منتجات أو ميزات جديدة. سيتم الإعلان عن التغييرات الجوهرية عبر:",
+    "s11_item1": "إشعار بالبريد الإلكتروني (إذا كنت مشتركًا)",
+    "s11_item2": "إشعار بارز على هذا الموقع",
+    "s11_item3": "إعلانات في مستودع GitHub",
+    "s11_extra": "التزامنا الأساسي — أن تبقى بياناتك على جهازك — لن يتغير أبدًا.",
+    "s12_title": "12. تواصل معنا",
+    "s12_intro": "أسئلة حول ممارسات الخصوصية لدينا؟ تواصل معنا عبر أي من هذه القنوات:",
+    "s12_item1": "<strong>البريد الإلكتروني:</strong> <a href='mailto:kaivalya.pandey@gmail.com'>kaivalya.pandey@gmail.com</a>",
+    "s12_item2": "<strong>GitHub:</strong> <a href='https://github.com/Svetozar-Technologies' target='_blank'>صفحة المنظمة</a>",
+    "s12_item3": "<strong>النقاشات:</strong> <a href='https://github.com/orgs/Svetozar-Technologies/discussions' target='_blank'>منتدى المجتمع</a>",
+    "promise_title": "وعدنا",
+    "promise_text": "<strong>تطبيقات سطح المكتب:</strong> صفر جمع بيانات. كل شيء يبقى على جهازك.<br><strong>الموقع:</strong> تحليلات تضع الخصوصية أولًا. بدون ملفات تعريف ارتباط. بدون بيانات شخصية.<br><strong>البريد الإلكتروني:</strong> اشتراك اختياري فقط. بدون رسائل مزعجة. إلغاء اشتراك سهل.<br><strong>دائمًا:</strong> لن نتنازل أبدًا عن خصوصيتك من أجل الربح."
   }
 }
