--- a/translations/en.json
+++ b/translations/en.json
@@ -4,7 +4,8 @@
   "nav": {
     "mission": "Our Mission",
     "products": "Products",
-    "github": "GitHub"
+    "github": "GitHub",
+    "get_started": "Get Started"
   },
   "hero": {
     "title": "AI Should Be Free.<br>AI Should Be Private.<br><span class='gradient-text'>AI Should Be Yours.</span>",
@@ -102,5 +103,74 @@
     "license": "MIT License",
     "copyright": "&copy; 2025 Svetozar Technologies",
     "footer_tagline": "Building AI that serves humanity, not corporations."
+  },
+  "privacy": {
+    "page_title": "Privacy Policy",
+    "last_updated": "Last updated: February 2026",
+    "short_title": "The Short Version",
+    "short_text": "We don't collect your data. Every Svetozar Technologies product runs 100% locally on your device. Your files, text, audio, and documents never touch our servers — because we don't have servers. That's not a feature. It's our founding principle.",
+    "s1_title": "1. Our Philosophy",
+    "s1_text": "At Svetozar Technologies, we believe privacy is a fundamental right, not a premium feature. We build AI tools that work entirely on your device because that's how software should work. No accounts. No cloud processing. No data collection. Ever.",
+    "s2_title": "2. Desktop Applications — Zero Data Collection",
+    "s2_intro": "This policy applies to all Svetozar Technologies desktop applications, including <strong>LocalMind</strong> (audio transcription), <strong>LocalWrite</strong> (AI writing assistant), and <strong>LocalPDF</strong> (PDF intelligence). Every application:",
+    "s2_item1": "<strong>Processes 100% locally:</strong> All AI processing — transcription, writing, summarization, PDF analysis — happens entirely on your device.",
+    "s2_item2": "<strong>Collects zero telemetry:</strong> We do not collect usage statistics, crash reports, performance metrics, or any form of analytics from our apps.",
+    "s2_item3": "<strong>Makes no network calls:</strong> After the initial AI model download, all applications work completely offline.",
+    "s2_item4": "<strong>Requires no account:</strong> You never need to create an account or provide personal information to use any of our products.",
+    "s2_item5": "<strong>Keeps your files local:</strong> All outputs — transcriptions, documents, reports, and exports — are stored only on your device.",
+    "s3_title": "3. Website Analytics",
+    "s3_intro": "When you visit our website (svetozar-technologies.github.io), we use <strong>Plausible Analytics</strong>, a privacy-first analytics service:",
+    "s3_item1": "<strong>No cookies:</strong> Plausible does not use cookies or track you across websites.",
+    "s3_item2": "<strong>No personal data:</strong> We cannot identify individual visitors.",
+    "s3_item3": "<strong>GDPR compliant:</strong> All data is anonymized and aggregated.",
+    "s3_extra": "We collect only basic anonymous metrics like page views and referral sources to understand how people discover our products. Nothing personally identifiable.",
+    "s4_title": "4. No Third-Party Tracking",
+    "s4_intro": "Our website and applications do NOT use:",
+    "s4_item1": "Google Analytics or any invasive analytics",
+    "s4_item2": "Facebook Pixel or advertising trackers",
+    "s4_item3": "Third-party cookies of any kind",
+    "s4_item4": "Browser fingerprinting techniques",
+    "s4_item5": "Cross-site tracking scripts",
+    "s5_title": "5. Email Communications",
+    "s5_intro": "If you voluntarily provide your email address for product updates:",
+    "s5_item1": "<strong>100% opt-in:</strong> Email collection is always voluntary. You can download and use all products without providing any personal information.",
+    "s5_item2": "<strong>Stored securely:</strong> Emails are handled via Formspree, a privacy-focused form service.",
+    "s5_item3": "<strong>Limited use:</strong> We only send infrequent notifications about major product releases, new features, and security updates.",
+    "s5_item4": "<strong>Never shared:</strong> We will never sell, rent, or share your email with third parties.",
+    "s5_item5": "<strong>Easy unsubscribe:</strong> Every email includes a one-click unsubscribe link.",
+    "s6_title": "6. Third-Party Services",
+    "s6_text": "Our applications do not integrate with third-party services that could compromise your privacy. The only external dependency is the initial AI model download, which comes directly from <strong>Hugging Face</strong>, a trusted open-source model repository. After that, everything runs offline.",
+    "s7_title": "7. Data Security",
+    "s7_text1": "<strong>Desktop applications:</strong> Since all data stays on your device, security is determined by your operating system's built-in protections (e.g., FileVault on macOS, BitLocker on Windows).",
+    "s7_text2": "<strong>Website:</strong> This site is served over HTTPS. Any form submissions are encrypted in transit.",
+    "s8_title": "8. Your Rights (GDPR Compliance)",
+    "s8_intro": "If you've provided your email address, you have the right to:",
+    "s8_item1": "<strong>Access:</strong> Request a copy of any data we hold (limited to your email).",
+    "s8_item2": "<strong>Deletion:</strong> Request immediate removal from our email list.",
+    "s8_item3": "<strong>Portability:</strong> Receive your data in a machine-readable format.",
+    "s8_item4": "<strong>Correction:</strong> Update your email address at any time.",
+    "s8_contact": "To exercise these rights, contact us at: <a href='mailto:kaivalya.pandey@gmail.com'>kaivalya.pandey@gmail.com</a>",
+    "s9_title": "9. Open Source Transparency",
+    "s9_intro": "All Svetozar Technologies products are open source under the MIT license. You can:",
+    "s9_item1": "<strong>Audit every line of code</strong> to verify our privacy claims across all repositories.",
+    "s9_item2": "<strong>Verify network behavior</strong> — confirm our applications make no unauthorized network calls.",
+    "s9_item3": "<strong>Build from source</strong> — compile any application yourself for maximum trust.",
+    "s9_item4": "<strong>Modify freely</strong> — adapt the code to meet your specific privacy requirements.",
+    "s9_repos": "Visit our repositories: <a href='https://github.com/Svetozar-Technologies' target='_blank'>github.com/Svetozar-Technologies</a>",
+    "s10_title": "10. Children's Privacy",
+    "s10_text": "Our products are not directed at children under 13. However, since we collect no personal data through our desktop applications, they can be safely used by people of all ages.",
+    "s11_title": "11. Changes to This Policy",
+    "s11_intro": "We may update this privacy policy as we release new products or features. Material changes will be announced via:",
+    "s11_item1": "Email notification (if you're subscribed)",
+    "s11_item2": "Prominent notice on this website",
+    "s11_item3": "GitHub repository announcements",
+    "s11_extra": "Our core commitment — that your data stays on your device — will never change.",
+    "s12_title": "12. Contact Us",
+    "s12_intro": "Questions about our privacy practices? Reach out through any of these channels:",
+    "s12_item1": "<strong>Email:</strong> <a href='mailto:kaivalya.pandey@gmail.com'>kaivalya.pandey@gmail.com</a>",
+    "s12_item2": "<strong>GitHub:</strong> <a href='https://github.com/Svetozar-Technologies' target='_blank'>Organization Page</a>",
+    "s12_item3": "<strong>Discussions:</strong> <a href='https://github.com/orgs/Svetozar-Technologies/discussions' target='_blank'>Community Forum</a>",
+    "promise_title": "Our Promise",
+    "promise_text": "<strong>Desktop apps:</strong> Zero data collection. Everything stays on your device.<br><strong>Website:</strong> Privacy-first analytics. No cookies. No personal data.<br><strong>Email:</strong> Opt-in only. No spam. Easy unsubscribe.<br><strong>Always:</strong> We will never compromise your privacy for profit."
   }
 }
