--- a/localpdf/translations/ar.json
+++ b/localpdf/translations/ar.json
@@ -3,78 +3,38 @@
   "name": "العربية",
   "rtl": true,
   "nav": {
-    "mission": "مهمتنا",
-    "product": "المنتج",
+    "features": "المميزات",
+    "use_cases": "حالات الاستخدام",
     "notify": "أبلغني",
     "github": "GitHub"
   },
   "hero": {
     "badge": "قريباً",
     "title": "مستنداتك.<br>خصوصيتك.<br><span class='gradient-text'>مساعدك الذكي.</span>",
-    "subtitle": "LocalPDF هو مجموعة أدوات ذكاء اصطناعي للمستندات PDF تركز على الخصوصية. تحدث مع ملفاتك PDF، استخرج الرؤى الرئيسية، ولخص المستندات - كل ذلك يعمل 100% على جهازك. لا سحابة. لا رفع ملفات. لا تنازلات.",
+    "subtitle": "LocalPDF هو مجموعة أدوات PDF مدعومة بالذكاء الاصطناعي تضع الخصوصية أولاً. تحدث مع ملفات PDF، واستخرج الرؤى الرئيسية، وأنشئ ملخصات المستندات — كل شيء يعمل 100% على جهازك. بدون سحابة. بدون رفع ملفات. بدون تنازلات.",
     "cta_notify": "أبلغني عند الإطلاق",
-    "cta_mission": "اقرأ مهمتنا"
+    "cta_features": "استكشف المميزات"
   },
   "social_proof": {
     "local": "معالجة محلية",
-    "chat": "تحدث مع PDF",
+    "chat": "محادثة PDF",
     "free": "مجاني للأبد",
     "opensource": "مفتوح المصدر"
   },
-  "mission": {
-    "label": "مهمتنا",
-    "title": "حلل بحرية.<br>حلل بخصوصية.<br><span class='gradient-text'>حلل بقوة.</span>"
-  },
-  "manifesto": {
-    "block1_title": "المشكلة التي نراها",
-    "block1_p1": "كل أداة PDF بالذكاء الاصطناعي اليوم تتطلب رفع مستنداتك إلى خوادم الشركات. العقود، السجلات الطبية، البيانات المالية، التقارير السرية - كلها ترسل إلى السحابة، تخزن لأجل غير مسمى، وقد تستخدم لتدريب نماذج الذكاء الاصطناعي.",
-    "block1_p2": "هذا ليس مجرد قلق على الخصوصية. إنها مسؤولية مهنية. مستنداتك يجب أن تبقى تحت سيطرتك.",
-    "block2_title": "ما نؤمن به",
-    "belief1_title": "المستندات حساسة",
-    "belief1_desc": "عقودك وتقاريرك وسجلاتك تستحق نفس الحماية التي تحظى بها محادثاتك الأكثر سرية.",
-    "belief2_title": "الذكاء الاصطناعي يجب أن يكون متاحاً",
-    "belief2_desc": "أدوات تحليل المستندات القوية لا يجب أن تكلف $30-100 شهرياً. الجميع يستحق الوصول لقدرات الذكاء الاصطناعي.",
-    "belief3_title": "المحلي أولاً ممكن",
-    "belief3_desc": "الحواسيب الحديثة قوية بما يكفي لتشغيل تحليل مستندات ذكاء اصطناعي متطور محلياً.",
-    "belief4_title": "المصدر المفتوح هو الثقة",
-    "belief4_desc": "كل سطر من الكود سيكون عاماً. راجعه. تحقق من أن مستنداتك حقاً لا تغادر جهازك أبداً.",
-    "block3_title": "التزامنا",
-    "commitment1_title": "مجاني للأبد",
-    "commitment1_desc": "LocalPDF سيكون دائماً مجانياً. لا فترات تجريبية. لا مستويات مدفوعة. وظائف كاملة للجميع.",
-    "commitment2_title": "خاص للأبد",
-    "commitment2_desc": "مستنداتك لا تغادر جهازك أبداً. لا رفع ملفات. لا قياس عن بعد. لا تحليلات.",
-    "commitment3_title": "مفتوح للأبد",
-    "commitment3_desc": "رخصة MIT. انسخه. عدّله. ابنِ عليه. المهمة أكبر من أي مشروع واحد."
-  },
-  "impact": {
-    "title": "ما نبنيه",
-    "stat1_number": "100%",
-    "stat1_label": "معالجة محلية",
-    "stat1_desc": "مستنداتك لا تغادر حاسوبك أبداً.",
-    "stat2_number": "$0",
-    "stat2_label": "التكلفة للمستخدمين",
-    "stat2_desc": "أدوات مستندات ذكاء اصطناعي احترافية للجميع.",
-    "stat3_number": "AI",
-    "stat3_label": "رؤى مدعومة",
-    "stat3_desc": "تحدث، لخص، استخرج - كل ذلك بذكاء اصطناعي محلي.",
-    "stat4_number": "∞",
-    "stat4_label": "الإمكانيات",
-    "stat4_desc": "لا حدود للصفحات. لا حدود للملفات. غير محدود."
-  },
   "product": {
     "label": "المنتج",
-    "title": "LocalPDF:<br><span class='gradient-text'>أدوات PDF ذكية تحترمك</span>",
+    "title": "LocalPDF:<br><span class='gradient-text'>أدوات PDF الذكية التي تحترمك</span>",
     "subtitle": "مجموعة قوية من أدوات PDF المدعومة بالذكاء الاصطناعي تعمل بالكامل على جهازك. لا حاجة للسحابة.",
-    "feature1_title": "تحدث مع PDF",
-    "feature1_desc": "اطرح أسئلة عن مستنداتك بلغة طبيعية. احصل على إجابات مع مراجع الصفحات.",
+    "feature1_title": "محادثة PDF",
+    "feature1_desc": "اطرح أسئلة حول المستندات بلغة طبيعية. احصل على إجابات مع مراجع لأرقام الصفحات.",
     "feature2_title": "ملخصات ذكية",
-    "feature2_desc": "احصل على ملخصات فورية للمستندات الطويلة. استخرج النقاط الرئيسية والاستنتاجات في ثوان.",
+    "feature2_desc": "ملخصات فورية للمستندات الطويلة. استخراج النقاط الرئيسية والاستنتاجات في ثوانٍ.",
     "feature3_title": "استخراج المعلومات",
-    "feature3_desc": "استخرج نقاط بيانات محددة من العقود والفواتير والتقارير تلقائياً.",
+    "feature3_desc": "استخراج تلقائي للبيانات المهيكلة من العقود والفواتير والتقارير.",
     "feature4_title": "معالجة دفعية",
-    "feature4_desc": "عالج عدة ملفات PDF دفعة واحدة. لخص مجلد تقارير مرة واحدة.",
+    "feature4_desc": "معالجة ملفات PDF متعددة في وقت واحد. تلخيص مجلد كامل من التقارير دفعة واحدة.",
     "feature5_title": "خصوصية كاملة",
-    "feature5_desc": "يعمل بالكامل بدون اتصال. مستنداتك السرية تبقى سرية.",
+    "feature5_desc": "يعمل بالكامل بدون اتصال. المستندات الحساسة تبقى سرية.",
     "usecases_heading": "مثالي لـ",
     "usecase1": "المستندات القانونية",
     "usecase2": "الأوراق البحثية",
@@ -83,95 +43,153 @@
     "usecase5": "السجلات الطبية",
     "usecase6": "+ المزيد"
   },
+  "use_cases": {
+    "label": "حالات الاستخدام",
+    "title": "مصمم لـ<span class='gradient-text'>المحترفين الحقيقيين</span>",
+    "subtitle": "من المحامين الذين يحمون بيانات عملائهم إلى الباحثين الذين يحللون الأوراق — يخدم LocalPDF احتياجات متنوعة بوعد واحد أساسي: مستنداتك تبقى ملكك."
+  },
+  "use_cases_cards": {
+    "legal": {
+      "title": "المحامون",
+      "problem": "<strong>المشكلة:</strong> رفع العقود والشهادات إلى خدمات الذكاء الاصطناعي السحابية يعرض امتياز السرية بين المحامي والموكل للخطر.",
+      "solution": "<strong>الحل:</strong> حلل العقود واستخرج البنود ولخص الشهادات بالكامل على جهازك. صفر تسريب للبيانات."
+    },
+    "researchers": {
+      "title": "الباحثون",
+      "problem": "<strong>المشكلة:</strong> المراجعة اليدوية لمئات الأوراق الأكاديمية تستغرق أسابيع. الأدوات السحابية تعرض البيانات غير المنشورة للخطر.",
+      "solution": "<strong>الحل:</strong> تلخيص الأوراق دفعياً واستخراج المنهجيات والمحادثة مع المستندات بخصوصية. مثالي لمراجعات الأدبيات."
+    },
+    "financial": {
+      "title": "المحللون الماليون",
+      "problem": "<strong>المشكلة:</strong> التقارير المالية السرية وبيانات الأرباح لا يمكن رفعها إلى خدمات ذكاء اصطناعي خارجية.",
+      "solution": "<strong>الحل:</strong> استخراج المقاييس الرئيسية ومقارنة التقارير الفصلية وإنشاء الملخصات دون أن تغادر البيانات جهازك."
+    },
+    "healthcare": {
+      "title": "المتخصصون في الرعاية الصحية",
+      "problem": "<strong>المشكلة:</strong> لوائح HIPAA وحماية البيانات تمنع رفع سجلات المرضى إلى الخدمات السحابية.",
+      "solution": "<strong>الحل:</strong> معالجة ملفات PDF الطبية محلياً. الامتثال التلقائي لمتطلبات حماية البيانات."
+    },
+    "students": {
+      "title": "الطلاب والمعلمون",
+      "problem": "<strong>المشكلة:</strong> اشتراكات الذكاء الاصطناعي السحابية تكلف $20-50 شهرياً — باهظة الثمن لميزانيات الطلاب.",
+      "solution": "<strong>الحل:</strong> لخص الكتب الدراسية واستخرج المفاهيم الأساسية واستعد للامتحانات. $0 للأبد."
+    },
+    "privacy": {
+      "title": "المدافعون عن الخصوصية",
+      "problem": "<strong>المشكلة:</strong> أدوات PDF السحابية تخزن مستنداتك على خوادمها إلى أجل غير مسمى.",
+      "solution": "<strong>الحل:</strong> مفتوح المصدر وقابل للتدقيق بالكامل. مستنداتك لا تلمس أي خادم أبداً. نقطة."
+    }
+  },
   "comparison": {
     "label": "لماذا LocalPDF",
-    "title": "LocalPDF مقابل <span class='gradient-text'>خدمات السحابة</span>",
-    "subtitle": "شاهد كيف يقارن LocalPDF بخدمات PDF بالذكاء الاصطناعي الشائعة مثل ChatPDF وPDF.ai وAdobe Acrobat AI.",
+    "title": "LocalPDF مقابل <span class='gradient-text'>الخدمات السحابية</span>",
+    "subtitle": "قارن LocalPDF مع خدمات PDF الذكية الشائعة: ChatPDF وPDF.ai وAdobe Acrobat AI.",
     "roi_title": "احسب توفيرك السنوي",
-    "roi_cloud": "متوسط خدمة PDF بالذكاء الاصطناعي: <strong>$40/شهر × 12 = $480/سنة</strong>",
+    "roi_cloud": "متوسط خدمة PDF الذكية: <strong>$40/شهر x 12 = $480/سنة</strong>",
     "roi_localpdf": "LocalPDF: <strong>$0/سنة</strong>",
-    "roi_savings": "توفر: <span class='gradient-text'>$480+ كل سنة</span>"
+    "roi_savings": "توفيرك: <span class='gradient-text'>$480+ كل سنة</span>"
   },
   "comparison_table": {
     "header_feature": "الميزة",
-    "header_cloud": "خدمات السحابة",
+    "header_cloud": "الخدمات السحابية",
     "header_localpdf": "LocalPDF",
     "row1_feature": "التكلفة الشهرية",
     "row1_cloud": "$20-100/شهر",
     "row1_localpdf": "$0 للأبد",
     "row2_feature": "خصوصية المستندات",
-    "row2_cloud": "ترفع للخوادم",
+    "row2_cloud": "ترفع إلى الخوادم",
     "row2_localpdf": "لا تغادر الجهاز أبداً",
-    "row3_feature": "حدود الصفحات",
+    "row3_feature": "حد الصفحات",
     "row3_cloud": "50-500 صفحة/شهر",
     "row3_localpdf": "غير محدود",
-    "row4_feature": "حدود حجم الملف",
+    "row4_feature": "حد حجم الملف",
     "row4_cloud": "10-50 ميجابايت",
-    "row4_localpdf": "لا حدود",
-    "row5_feature": "يتطلب إنترنت",
+    "row4_localpdf": "بلا حدود",
+    "row5_feature": "يحتاج إنترنت",
     "row5_cloud": "نعم، دائماً",
-    "row5_localpdf": "يعمل بلا اتصال",
+    "row5_localpdf": "يعمل بدون اتصال",
     "row6_feature": "الاحتفاظ بالبيانات",
-    "row6_cloud": "تخزن لأجل غير مسمى",
-    "row6_localpdf": "لا شيء يُخزن",
+    "row6_cloud": "تخزين غير محدد المدة",
+    "row6_localpdf": "لا يخزن شيئاً",
     "row7_feature": "مفتوح المصدر",
-    "row7_cloud": "مملوك",
+    "row7_cloud": "برمجيات مملوكة",
     "row7_localpdf": "رخصة MIT"
   },
   "how_it_works": {
     "title": "بسيط بالتصميم",
-    "subtitle": "لا حسابات. لا رفع ملفات. لا إعدادات. فقط حمّل، افتح PDF، وابدأ المحادثة.",
+    "subtitle": "بدون حسابات. بدون رفع ملفات. بدون إعدادات. حمّل، افتح PDF وابدأ المحادثة.",
     "step1_title": "تحميل",
     "step1_desc": "احصل على LocalPDF لمنصتك. تطبيق واحد، جاهز للاستخدام.",
     "step2_title": "افتح PDF",
-    "step2_desc": "اسحب مستندك إلى LocalPDF. لا يغادر حاسوبك أبداً.",
+    "step2_desc": "اسحب المستند إلى LocalPDF. لن يغادر حاسوبك أبداً.",
     "step3_title": "تحدث وحلل",
-    "step3_desc": "اطرح أسئلة، احصل على ملخصات، استخرج بيانات - كل ذلك يُعالج محلياً."
+    "step3_desc": "اطرح الأسئلة، احصل على ملخصات، استخرج البيانات — كل شيء يُعالج محلياً."
+  },
+  "testimonials": {
+    "label": "آراء المستخدمين",
+    "title": "موثوق من <span class='gradient-text'>المحترفين في جميع أنحاء الهند</span>",
+    "subtitle": "من المحامين إلى المحللين الماليين، يخدم LocalPDF احتياجات متنوعة بوعد واحد أساسي: مستنداتك تبقى ملكك.",
+    "t1_text": "\"أحلل عشرات العقود أسبوعياً. LocalPDF يتيح لي استخراج البنود الرئيسية والتحدث مع المستندات القانونية دون كشف بيانات العملاء للخوادم السحابية. امتياز السرية محفوظ. هكذا يجب أن تعمل أدوات الذكاء الاصطناعي القانونية.\"",
+    "t2_text": "\"معالجة تقارير الأرباح السرية والبيانات المالية عبر الذكاء الاصطناعي السحابي لم تكن خياراً لنا أبداً. LocalPDF غيّر كل شيء — يمكنني تلخيص التقارير الفصلية واستخراج المقاييس الرئيسية ومقارنة المستندات. كل شيء بدون اتصال، كل شيء خاص.\"",
+    "t3_text": "\"أراجع أكثر من 50 ورقة أكاديمية لكل مراجعة أدبيات. LocalPDF يلخص مجلدات كاملة من ملفات PDF دفعياً، ويستخرج المنهجيات، ويتيح لي المحادثة مع الأوراق للبحث عن تفاصيل محددة. يوفر لي أسابيع من العمل كل فصل دراسي. وهو مجاني تماماً.\""
+  },
+  "faq": {
+    "label": "الأسئلة الشائعة",
+    "title": "الأسئلة <span class='gradient-text'>الشائعة</span>"
+  },
+  "faq_items": {
+    "q1": {
+      "question": "كيف يمكن أن يكون مجانياً بالكامل؟",
+      "answer": "LocalPDF يعمل بالكامل على جهازك، لذا تكاليف البنية التحتية السحابية لدينا صفر. لا خوادم، لا نطاق ترددي. نؤمن بأن الذكاء الاصطناعي يجب أن يكون متاحاً للجميع. الكود مفتوح المصدر برخصة MIT — تحقق بنفسك."
+    },
+    "q2": {
+      "question": "ما مدى دقة تحليل الذكاء الاصطناعي؟",
+      "answer": "يستخدم LocalPDF نماذج ذكاء اصطناعي متقدمة مفتوحة المصدر محسّنة لفهم المستندات. بينما قد تستخدم الخدمات السحابية نماذج أكبر، توفر نماذجنا المحلية دقة ممتازة للتلخيص والأسئلة والأجوبة واستخراج البيانات — مع ميزة حاسمة: مستنداتك لا تغادر الجهاز أبداً."
+    },
+    "q3": {
+      "question": "هل يعمل بدون إنترنت؟",
+      "answer": "بالتأكيد! بعد تحميل النموذج الأولي (مرة واحدة عند التشغيل الأول)، يعمل LocalPDF بنسبة 100% بدون اتصال. حلل المستندات في الطائرة أو في مواقع بعيدة أو في بيئات معزولة."
+    },
+    "q4": {
+      "question": "هل يمكن استخدامه للعمل التجاري؟",
+      "answer": "نعم! LocalPDF مرخص برخصة MIT. استخدمه لمشاريعك الشخصية أو عمل العملاء أو المنتجات التجارية. لا يُشترط ذكر المصدر (لكنه موضع تقدير دائماً)."
+    },
+    "q5": {
+      "question": "ما أنواع وأحجام PDF المدعومة؟",
+      "answer": "يعالج LocalPDF ملفات PDF القياسية بأي حجم — بلا حدود للصفحات أو الحجم. يعمل مع ملفات PDF النصية والمستندات الممسوحة ضوئياً (مع OCR) وملفات PDF ذات المحتوى المختلط بما في ذلك الصور والجداول."
+    },
+    "q6": {
+      "question": "ما هي متطلبات النظام؟",
+      "answer": "<strong>الحد الأدنى:</strong> 8 جيجابايت RAM، 10 جيجابايت مساحة حرة، macOS 12+ أو Windows 10+<br><strong>الموصى به:</strong> 16 جيجابايت RAM، Apple Silicon أو NVIDIA GPU لمعالجة أسرع"
+    }
   },
   "notify": {
     "label": "قريباً",
-    "title": "كن الأول<br><span class='gradient-text'>في المعرفة</span>",
-    "subtitle": "LocalPDF قيد التطوير حالياً. أضف نجمة للمستودع على GitHub ليصلك إشعار عند الإطلاق.",
+    "title": "كن أول<br><span class='gradient-text'>من يعرف</span>",
+    "subtitle": "LocalPDF قيد التطوير. ضع نجمة على المستودع في GitHub ليصلك إشعار عند الإطلاق.",
     "star_title": "نجمة على GitHub",
     "star_desc": "احصل على إشعار عند إطلاق LocalPDF",
-    "star_cta": "راقب المستودع",
-    "discuss_title": "انضم للنقاشات",
-    "discuss_desc": "شارك طلبات الميزات وأفكارك",
-    "discuss_cta": "ابدأ النقاش",
-    "planned_heading": "الميزات المخططة",
+    "star_cta": "تابع المستودع",
+    "discuss_title": "انضم للنقاش",
+    "discuss_desc": "شارك طلبات الميزات والأفكار",
+    "discuss_cta": "ابدأ نقاشاً",
+    "planned_heading": "الميزات المخطط لها",
     "planned1_label": "محادثة",
     "planned1_value": "أسئلة وأجوبة بلغة طبيعية مع PDF",
-    "planned2_label": "تلخيص",
+    "planned2_label": "ملخصات",
     "planned2_value": "ملخصات فورية لأي مستند",
     "planned3_label": "استخراج",
-    "planned3_value": "سحب بيانات محددة من المستندات"
-  },
-  "join": {
-    "heading": "انضم للحركة",
-    "paragraph1": "LocalPDF جزء من رؤية أكبر: ذكاء اصطناعي يحترم الخصوصية، يخدم المستخدمين، ويبقى متاحاً للجميع.",
-    "paragraph2": "بينما LocalPDF قيد التطوير، تفقد أدواتنا الأخرى للذكاء الاصطناعي التي تركز على الخصوصية.",
-    "localmind_title": "LocalMind",
-    "localmind_desc": "تفريغ وتحليل بالذكاء الاصطناعي",
-    "localwrite_title": "LocalWrite",
-    "localwrite_desc": "تحسين الكتابة بالذكاء الاصطناعي",
-    "github_title": "جميع المشاريع",
-    "github_desc": "استكشف GitHub"
-  },
-  "final_cta": {
-    "heading": "مستقبل الذكاء الاصطناعي محلي.<br>مستقبل الذكاء الاصطناعي مفتوح.<br><span class='gradient-text'>المستقبل يبدأ الآن.</span>",
-    "star_btn": "نجمة على GitHub",
-    "explore_btn": "استكشف جميع المنتجات"
+    "planned3_value": "استخراج بيانات محددة من المستندات"
   },
   "footer": {
-    "tagline": "ذكاء اصطناعي مجاني، خاص، وملكك.",
-    "company": "مشروع من <strong>Svetozar Technologies</strong>",
+    "tagline": "ذكاء اصطناعي مجاني وخاص وملكك.",
     "products_title": "المنتجات",
     "community_title": "المجتمع",
-    "legal_title": "قانوني",
     "discussions": "النقاشات",
+    "legal_title": "قانوني",
     "privacy": "سياسة الخصوصية",
     "license": "رخصة MIT",
     "copyright": "&copy; 2025 Svetozar Technologies",
-    "footer_tagline": "نبني ذكاءً اصطناعياً يخدم البشرية، لا الشركات."
+    "footer_tagline": "بناء ذكاء اصطناعي يخدم البشرية، لا الشركات."
   }
 }
