--- a/localpdf/translations/ja.json
+++ b/localpdf/translations/ja.json
@@ -2,78 +2,38 @@
   "lang": "ja",
   "name": "日本語",
   "nav": {
-    "mission": "私たちの使命",
-    "product": "製品",
+    "features": "機能",
+    "use_cases": "活用事例",
     "notify": "通知を受け取る",
     "github": "GitHub"
   },
   "hero": {
     "badge": "近日公開",
     "title": "あなたの文書。<br>あなたのプライバシー。<br><span class='gradient-text'>あなたのAIアシスタント。</span>",
-    "subtitle": "LocalPDFは、プライバシー重視のPDF用AIツールキットです。PDFとチャット、重要な洞察の抽出、文書の要約 - すべて100%あなたのデバイスで動作。クラウドなし。アップロードなし。妥協なし。",
-    "cta_notify": "準備ができたら通知を受け取る",
-    "cta_mission": "私たちの使命を読む"
+    "subtitle": "LocalPDFは、プライバシー重視のAI搭載PDFツールキットです。PDFとチャット、重要な洞察の抽出、文書の要約 — すべて100%あなたのデバイスで動作。クラウド不要。アップロード不要。妥協なし。",
+    "cta_notify": "リリース時に通知を受け取る",
+    "cta_features": "機能を見る"
   },
   "social_proof": {
     "local": "ローカル処理",
-    "chat": "PDFとチャット",
+    "chat": "PDFチャット",
     "free": "永久無料",
     "opensource": "オープンソース"
-  },
-  "mission": {
-    "label": "私たちの使命",
-    "title": "自由に分析。<br>プライベートに分析。<br><span class='gradient-text'>力強く分析。</span>"
-  },
-  "manifesto": {
-    "block1_title": "私たちが見ている問題",
-    "block1_p1": "今日のすべてのAI PDFツールは、文書を企業サーバーにアップロードする必要があります。契約書、医療記録、財務諸表、機密報告書 - すべてがクラウドに送信され、無期限に保存され、AIモデルのトレーニングに使用される可能性があります。",
-    "block1_p2": "これは単なるプライバシーの懸念ではありません。職業上の責任問題です。あなたの文書は、あなたの管理下にあるべきです。",
-    "block2_title": "私たちの信念",
-    "belief1_title": "文書は機密である",
-    "belief1_desc": "あなたの契約書、報告書、記録は、最も機密性の高い会話と同じ保護に値します。",
-    "belief2_title": "AIはアクセス可能であるべき",
-    "belief2_desc": "強力な文書分析ツールに月額30-100ドルもかかるべきではありません。誰もがAI機能へのアクセスに値します。",
-    "belief3_title": "ローカルファーストは可能",
-    "belief3_desc": "現代のコンピュータは、洗練されたAI文書分析をローカルで実行するのに十分なパワーを持っています。",
-    "belief4_title": "オープンソースは信頼",
-    "belief4_desc": "すべてのコードが公開されます。監査してください。あなたの文書が本当にデバイスを離れないことを確認してください。",
-    "block3_title": "私たちのコミットメント",
-    "commitment1_title": "永久無料",
-    "commitment1_desc": "LocalPDFは常に無料です。試用期間なし。プレミアムティアなし。すべての人に完全な機能を。",
-    "commitment2_title": "永久プライベート",
-    "commitment2_desc": "あなたの文書はデバイスを離れません。アップロードなし。テレメトリなし。分析なし。",
-    "commitment3_title": "永久オープン",
-    "commitment3_desc": "MITライセンス。フォークして。修正して。その上に構築して。使命は単一のプロジェクトよりも大きいです。"
-  },
-  "impact": {
-    "title": "私たちが構築しているもの",
-    "stat1_number": "100%",
-    "stat1_label": "ローカル処理",
-    "stat1_desc": "あなたの文書はコンピュータを離れません。",
-    "stat2_number": "$0",
-    "stat2_label": "ユーザーコスト",
-    "stat2_desc": "すべての人にプロのAI文書ツールを。",
-    "stat3_number": "AI",
-    "stat3_label": "パワードインサイト",
-    "stat3_desc": "チャット、要約、抽出 - すべてローカルAIで。",
-    "stat4_number": "∞",
-    "stat4_label": "可能性",
-    "stat4_desc": "ページ制限なし。ファイル制限なし。無制限。"
   },
   "product": {
     "label": "製品",
     "title": "LocalPDF：<br><span class='gradient-text'>あなたを尊重するAI PDFツール</span>",
     "subtitle": "あなたのマシン上で完全に動作する強力なAI搭載PDFツールスイート。クラウド不要。",
-    "feature1_title": "PDFとチャット",
-    "feature1_desc": "自然言語で文書について質問。ページ参照付きで回答を取得。",
+    "feature1_title": "PDFチャット",
+    "feature1_desc": "自然言語で文書について質問。ページ番号参照付きの回答を取得。",
     "feature2_title": "スマート要約",
-    "feature2_desc": "長い文書の即座の要約を取得。数秒でキーポイントと結論を抽出。",
+    "feature2_desc": "長文文書の即時要約。数秒でキーポイントと結論を抽出。",
     "feature3_title": "情報抽出",
-    "feature3_desc": "契約書、請求書、報告書から特定のデータポイントを自動的に抽出。",
+    "feature3_desc": "契約書、請求書、報告書から構造化データを自動抽出。",
     "feature4_title": "バッチ処理",
-    "feature4_desc": "複数のPDFを一度に処理。報告書のフォルダを一括で要約。",
+    "feature4_desc": "複数のPDFを同時に処理。報告書フォルダを一括で要約。",
     "feature5_title": "完全なプライバシー",
-    "feature5_desc": "完全にオフラインで動作。機密文書は機密のまま。",
+    "feature5_desc": "完全オフラインで動作。機密文書は機密のまま。",
     "usecases_heading": "最適な用途",
     "usecase1": "法的文書",
     "usecase2": "研究論文",
@@ -82,25 +42,62 @@
     "usecase5": "医療記録",
     "usecase6": "+ その他"
   },
+  "use_cases": {
+    "label": "活用事例",
+    "title": "<span class='gradient-text'>真のプロフェッショナル</span>のために",
+    "subtitle": "クライアントデータを守る弁護士から、論文を分析する研究者まで — LocalPDFは一つの核心的な約束で多様なニーズに応えます：あなたの文書はあなたのもの。"
+  },
+  "use_cases_cards": {
+    "legal": {
+      "title": "弁護士",
+      "problem": "<strong>課題：</strong>契約書や証言をクラウドAIサービスにアップロードすると、弁護士-依頼人間の秘密特権が危険にさらされます。",
+      "solution": "<strong>解決策：</strong>自分のデバイスで契約書の分析、条項の抽出、証言の要約を完全に実行。データ漏洩ゼロ。"
+    },
+    "researchers": {
+      "title": "研究者",
+      "problem": "<strong>課題：</strong>数百の学術論文を手動でレビューするのに数週間かかります。クラウドツールは未発表データを危険にさらします。",
+      "solution": "<strong>解決策：</strong>論文の一括要約、方法論の抽出、文書とのプライベートチャット。文献レビューに最適。"
+    },
+    "financial": {
+      "title": "金融アナリスト",
+      "problem": "<strong>課題：</strong>機密財務報告書や収益データをサードパーティのAIサービスにアップロードすることはできません。",
+      "solution": "<strong>解決策：</strong>主要指標の抽出、四半期報告書の比較、要約の生成 — データはデバイスの外に出ません。"
+    },
+    "healthcare": {
+      "title": "医療専門家",
+      "problem": "<strong>課題：</strong>HIPAAおよびデータ保護規制により、患者記録のクラウドサービスへのアップロードが禁止されています。",
+      "solution": "<strong>解決策：</strong>医療PDFをローカルで処理。データ保護コンプライアンスを自動的に確保。"
+    },
+    "students": {
+      "title": "学生と教育者",
+      "problem": "<strong>課題：</strong>クラウドAIサブスクリプションは月額$20-50 — 学生の予算には高すぎます。",
+      "solution": "<strong>解決策：</strong>教科書の要約、キーコンセプトの抽出、試験準備。永久$0。"
+    },
+    "privacy": {
+      "title": "プライバシー重視の方",
+      "problem": "<strong>課題：</strong>クラウドPDFツールは、あなたの文書をサーバーに無期限に保存します。",
+      "solution": "<strong>解決策：</strong>オープンソースで完全に監査可能。あなたの文書がサーバーに触れることは決してありません。"
+    }
+  },
   "comparison": {
     "label": "LocalPDFを選ぶ理由",
     "title": "LocalPDF vs <span class='gradient-text'>クラウドサービス</span>",
-    "subtitle": "ChatPDF、PDF.ai、Adobe Acrobat AIなどの人気AI PDFサービスとLocalPDFを比較してみましょう。",
+    "subtitle": "LocalPDFと人気のAI PDFサービスを比較：ChatPDF、PDF.ai、Adobe Acrobat AI。",
     "roi_title": "年間節約額を計算",
-    "roi_cloud": "平均的なAI PDFサービス：<strong>月額$40 x 12 = 年間$480</strong>",
-    "roi_localpdf": "LocalPDF：<strong>年間$0</strong>",
+    "roi_cloud": "AI PDFサービスの平均：<strong>$40/月 x 12 = $480/年</strong>",
+    "roi_localpdf": "LocalPDF：<strong>$0/年</strong>",
     "roi_savings": "節約額：<span class='gradient-text'>毎年$480以上</span>"
   },
   "comparison_table": {
     "header_feature": "機能",
     "header_cloud": "クラウドサービス",
     "header_localpdf": "LocalPDF",
-    "row1_feature": "月額コスト",
+    "row1_feature": "月額費用",
     "row1_cloud": "$20-100/月",
     "row1_localpdf": "永久$0",
-    "row2_feature": "文書プライバシー",
+    "row2_feature": "文書のプライバシー",
     "row2_cloud": "サーバーにアップロード",
-    "row2_localpdf": "デバイスを離れない",
+    "row2_localpdf": "デバイスの外に出ない",
     "row3_feature": "ページ制限",
     "row3_cloud": "月50-500ページ",
     "row3_localpdf": "無制限",
@@ -121,56 +118,77 @@
     "title": "シンプル設計",
     "subtitle": "アカウント不要。アップロード不要。設定不要。ダウンロードして、PDFを開いて、チャット開始。",
     "step1_title": "ダウンロード",
-    "step1_desc": "お使いのプラットフォーム用LocalPDFを入手。1アプリですぐに使える。",
+    "step1_desc": "お使いのプラットフォーム用LocalPDFを入手。1つのアプリですぐに使えます。",
     "step2_title": "PDFを開く",
-    "step2_desc": "文書をLocalPDFにドロップ。コンピュータを離れません。",
+    "step2_desc": "文書をLocalPDFにドラッグ。コンピュータの外に出ることはありません。",
     "step3_title": "チャット＆分析",
-    "step3_desc": "質問して、要約を取得、データを抽出 - すべてローカルで処理。"
+    "step3_desc": "質問して、要約を取得、データを抽出 — すべてローカルで処理。"
+  },
+  "testimonials": {
+    "label": "ユーザーの声",
+    "title": "<span class='gradient-text'>インド各地のプロフェッショナル</span>が信頼",
+    "subtitle": "弁護士から金融アナリストまで、LocalPDFは一つの核心的な約束で多様なニーズに応えます：あなたの文書はあなたのもの。",
+    "t1_text": "\"毎週数十件の契約書を分析しています。LocalPDFにより、クライアントデータをクラウドサーバーに晒すことなく、重要な条項を抽出し法的文書とチャットできます。弁護士-依頼人間の秘密特権が守られます。AI法律ツールはこうあるべきです。\"",
+    "t2_text": "\"機密の収益報告書や財務諸表をクラウドAIで処理することは、私たちにとって選択肢ではありませんでした。LocalPDFがすべてを変えました — 四半期報告書の要約、主要指標の抽出、文書の比較ができます。すべてオフライン、すべてプライベート。\"",
+    "t3_text": "\"文献レビューごとに50以上の学術論文をレビューしています。LocalPDFはPDFフォルダ全体を一括要約し、方法論を抽出し、特定の詳細を探すために論文とチャットできます。毎学期数週間の作業を節約。しかも完全無料です。\""
+  },
+  "faq": {
+    "label": "よくある質問",
+    "title": "よくある<span class='gradient-text'>質問</span>"
+  },
+  "faq_items": {
+    "q1": {
+      "question": "なぜ完全無料なのですか？",
+      "answer": "LocalPDFは完全にデバイス上で動作するため、クラウドインフラのコストはゼロです。サーバーなし、トラフィックなし。AIはすべての人にアクセス可能であるべきだと信じています。コードはMITライセンスのオープンソース — ご自身でご確認ください。"
+    },
+    "q2": {
+      "question": "AI分析の精度はどのくらいですか？",
+      "answer": "LocalPDFは文書理解に最適化された最先端のオープンソースAIモデルを使用しています。クラウドサービスはより大きなモデルを使用する場合がありますが、ローカルモデルは要約、Q&A、データ抽出において優れた精度を提供します — 決定的な利点：文書がデバイスの外に出ることはありません。"
+    },
+    "q3": {
+      "question": "完全にオフラインで動作しますか？",
+      "answer": "はい！初回のモデルダウンロード後（初回起動時に一度だけ）、LocalPDFは100%オフラインで動作します。飛行機内、離れた場所、隔離された環境で文書を分析できます。"
+    },
+    "q4": {
+      "question": "商用利用できますか？",
+      "answer": "はい！LocalPDFはMITライセンスです。個人プロジェクト、クライアントワーク、商用製品に使用できます。帰属表示は不要です（いつでも歓迎しますが）。"
+    },
+    "q5": {
+      "question": "対応するPDF形式とサイズは？",
+      "answer": "LocalPDFはあらゆるサイズの標準PDFファイルを処理します — ページ数やファイルサイズの制限なし。テキストPDF、スキャンした文書（OCR付き）、画像や表を含む混合コンテンツPDFに対応しています。"
+    },
+    "q6": {
+      "question": "システム要件は何ですか？",
+      "answer": "<strong>最小要件：</strong>8 GB RAM、10 GB空き容量、macOS 12+またはWindows 10+<br><strong>推奨：</strong>16 GB RAM、Apple SiliconまたはNVIDIA GPUで高速処理"
+    }
   },
   "notify": {
     "label": "近日公開",
     "title": "最初に<br><span class='gradient-text'>知る</span>",
-    "subtitle": "LocalPDFは現在開発中です。GitHubリポジトリにスターを付けて、ローンチ時に通知を受け取りましょう。",
+    "subtitle": "LocalPDFは現在開発中です。GitHubリポジトリにスターを付けて、リリース時に通知を受け取りましょう。",
     "star_title": "GitHubでスター",
-    "star_desc": "LocalPDFのローンチ時に通知を受け取る",
-    "star_cta": "リポジトリをウォッチ",
+    "star_desc": "LocalPDFのリリース時に通知を受け取る",
+    "star_cta": "リポジトリをフォロー",
     "discuss_title": "ディスカッションに参加",
     "discuss_desc": "機能リクエストやアイデアを共有",
-    "discuss_cta": "議論を始める",
+    "discuss_cta": "ディスカッションを始める",
     "planned_heading": "予定機能",
     "planned1_label": "チャット",
     "planned1_value": "PDFと自然言語でQ&A",
     "planned2_label": "要約",
-    "planned2_value": "あらゆる文書の即座の要約",
+    "planned2_value": "あらゆる文書の即時要約",
     "planned3_label": "抽出",
-    "planned3_value": "文書から特定データを取得"
-  },
-  "join": {
-    "heading": "ムーブメントに参加",
-    "paragraph1": "LocalPDFは、より大きなビジョンの一部です：プライバシーを尊重し、ユーザーに奉仕し、すべての人にアクセス可能なAI。",
-    "paragraph2": "LocalPDF開発中は、私たちの他のプライバシー重視AIツールをチェックしてください。",
-    "localmind_title": "LocalMind",
-    "localmind_desc": "AI文字起こし＆分析",
-    "localwrite_title": "LocalWrite",
-    "localwrite_desc": "AIライティング強化",
-    "github_title": "全プロジェクト",
-    "github_desc": "GitHubを探索"
-  },
-  "final_cta": {
-    "heading": "AIの未来はローカル。<br>AIの未来はオープン。<br><span class='gradient-text'>未来は今始まる。</span>",
-    "star_btn": "GitHubでスター",
-    "explore_btn": "全製品を探索"
+    "planned3_value": "文書から特定データを抽出"
   },
   "footer": {
     "tagline": "無料で、プライベートで、あなたのAI。",
-    "company": "<strong>Svetozar Technologies</strong>のプロジェクト",
     "products_title": "製品",
     "community_title": "コミュニティ",
-    "legal_title": "法的情報",
     "discussions": "ディスカッション",
+    "legal_title": "法的情報",
     "privacy": "プライバシーポリシー",
     "license": "MITライセンス",
     "copyright": "&copy; 2025 Svetozar Technologies",
-    "footer_tagline": "企業ではなく人類に奉仕するAIを構築。"
+    "footer_tagline": "企業ではなく人類のためのAIを構築。"
   }
 }
