--- a/localwrite/translations/en.json
+++ b/localwrite/translations/en.json
@@ -2,176 +2,185 @@
   "lang": "en",
   "name": "English",
   "nav": {
-    "mission": "Our Mission",
-    "product": "Product",
+    "features": "Features",
+    "use_cases": "Use Cases",
     "download": "Download",
     "github": "GitHub"
   },
   "hero": {
-    "title": "Your Words.<br>Your Privacy.<br><span class='gradient-text'>Your Control.</span>",
-    "subtitle": "LocalWrite is a privacy-first AI writing assistant that runs 100% on your device. Enhance your writing with powerful AI - without sending a single word to the cloud. Free forever. Open source. No compromises.",
-    "cta_download": "Download LocalWrite",
-    "cta_mission": "Read Our Mission"
+    "badge": "100% Offline",
+    "title": "Private AI Writing.<br>Powerful Models.<br><span class='gradient-text'>Your Words Stay Yours.</span>",
+    "subtitle": "Enhance your writing with powerful AI that runs entirely on your device. Choose from 5 curated models, 5 writing modes, and features like summarize, expand, and document chat. No cloud. No accounts. No compromise.",
+    "cta_download": "Download for macOS",
+    "cta_features": "Explore Features"
   },
   "social_proof": {
-    "launch": "Just Launched!",
-    "free": "Free Forever",
-    "modes": "Writing Modes",
+    "offline": "Offline",
+    "cost": "Cost Forever",
+    "models": "AI Models",
     "opensource": "Open Source"
-  },
-  "mission": {
-    "label": "Our Mission",
-    "title": "Write Freely.<br>Write Privately.<br><span class='gradient-text'>Write Powerfully.</span>"
-  },
-  "manifesto": {
-    "block1_title": "The Problem We See",
-    "block1_p1": "Every AI writing tool today sends your words to corporate servers. Your drafts, your ideas, your private thoughts - all uploaded, stored, and potentially used to train AI models. Writers, journalists, and professionals are forced to choose between AI assistance and privacy.",
-    "block1_p2": "This isn't just inconvenient. It's a fundamental breach of creative privacy. Your words should belong to you.",
-    "block2_title": "What We Believe",
-    "belief1_title": "Writing is Personal",
-    "belief1_desc": "Your drafts, notes, and ideas deserve the same privacy as your spoken conversations. AI assistance shouldn't require surveillance.",
-    "belief2_title": "AI Should Be Accessible",
-    "belief2_desc": "Powerful writing tools shouldn't cost $20-50/month. Students, indie authors, and small businesses deserve the same AI capabilities as big corporations.",
-    "belief3_title": "Local-First is Possible",
-    "belief3_desc": "Modern devices are powerful enough to run sophisticated AI locally. Cloud dependency is a business model, not a technical necessity.",
-    "belief4_title": "Open Source is Trust",
-    "belief4_desc": "You shouldn't have to take our word for it. Every line of code is public. Audit it. Verify our privacy claims yourself.",
-    "block3_title": "Our Commitment",
-    "commitment1_title": "Forever Free",
-    "commitment1_desc": "LocalWrite will always be free. No trials. No feature walls. No \"freemium\" tricks. Full functionality for everyone.",
-    "commitment2_title": "Forever Private",
-    "commitment2_desc": "Your writing never leaves your device. No telemetry. No analytics. No exceptions. We literally cannot see what you write.",
-    "commitment3_title": "Forever Open",
-    "commitment3_desc": "MIT licensed. Fork it. Modify it. Build on it. The mission is bigger than any single project."
-  },
-  "impact": {
-    "title": "This Is What We're Building",
-    "stat1_number": "100%",
-    "stat1_label": "Local Processing",
-    "stat1_desc": "Zero bytes sent to external servers. Ever.",
-    "stat2_number": "$0",
-    "stat2_label": "Cost to Users",
-    "stat2_desc": "Professional AI writing for everyone.",
-    "stat3_number": "11",
-    "stat3_label": "Writing Modes",
-    "stat3_desc": "From professional to creative to concise.",
-    "stat4_number": "∞",
-    "stat4_label": "Possibilities",
-    "stat4_desc": "No usage limits. No API caps. Unlimited."
   },
   "product": {
     "label": "The Product",
     "title": "LocalWrite:<br><span class='gradient-text'>AI Writing That Respects You</span>",
-    "subtitle": "A powerful writing enhancement tool that runs entirely on your machine. No cloud required.",
-    "feature1_title": "11 Writing Modes",
-    "feature1_desc": "Professional, Creative, Academic, Conversational, Concise, Elaborate, and more. Transform your text to match any style or audience.",
-    "feature2_title": "Creativity Control",
-    "feature2_desc": "Fine-tune the AI's creativity with a simple slider. Conservative for business writing, expressive for creative work.",
-    "feature3_title": "PDF Enhancement",
-    "feature3_desc": "Enhance entire PDF documents while preserving formatting. Perfect for reports, essays, and professional documents.",
-    "feature4_title": "Real-time Statistics",
-    "feature4_desc": "Word count, sentence count, reading time, grade level, and tone analysis. Know your writing inside and out.",
-    "feature5_title": "Multiple AI Models",
-    "feature5_desc": "Choose from 5 curated AI models. Qwen, Llama, Gemma, Mistral - pick the best for your writing style.",
-    "modes_heading": "Writing Modes",
-    "mode1": "Professional",
-    "mode2": "Creative",
-    "mode3": "Academic",
-    "mode4": "Conversational",
-    "mode5": "Concise",
-    "mode6": "Elaborate",
-    "mode7": "+ More"
+    "subtitle": "A powerful AI writing assistant running entirely on your machine. Choose your model, pick your style, and write with complete privacy.",
+    "feature1_title": "Smart Model Selection",
+    "feature1_desc": "Choose from 5 curated AI models: Qwen 2.5 7B (recommended), Gemma 2 9B, Llama 3.1 8B, Llama 3.2 3B, and Mistral 7B. Each optimized for different writing tasks. Auto-downloads on first use.",
+    "feature2_title": "5 Writing Modes",
+    "feature2_desc": "Professional, Conversational, Scholarly, Creative, and Concise. Perfect tone for any context - from business emails to creative fiction.",
+    "feature3_title": "Summarize & Expand",
+    "feature3_desc": "Condense long texts to key points or expand with more examples and practice questions. Transform your content in seconds.",
+    "feature4_title": "Document Upload",
+    "feature4_desc": "Import TXT, Markdown, DOCX, and PDF files. Work with your existing documents seamlessly. Direct download of enhanced text.",
+    "feature5_title": "Chat with Documents",
+    "feature5_desc": "Upload books, papers, or notes and ask questions using RAG (Retrieval-Augmented Generation). Components auto-install on first use.",
+    "feature6_title": "AI Chat",
+    "feature6_desc": "Chat with your AI assistant offline. Ask questions, brainstorm ideas, generate content, get help with anything - all private.",
+    "models_heading": "Available AI Models"
+  },
+  "use_cases": {
+    "label": "Use Cases",
+    "title": "Built for <span class='gradient-text'>Writers Who Value Privacy</span>",
+    "subtitle": "From authors protecting unpublished manuscripts to students improving essays - LocalWrite serves diverse needs with one core promise: your words stay yours."
+  },
+  "use_cases_cards": {
+    "writers": {
+      "title": "Writers & Authors",
+      "problem": "<strong>Pain Point:</strong> Cloud AI services store your unpublished manuscripts on their servers, risking leaks.",
+      "solution": "<strong>Solution:</strong> Polish manuscripts with AI that never uploads a single word. Your story stays yours until you choose to share."
+    },
+    "scriptwriters": {
+      "title": "Scriptwriters",
+      "problem": "<strong>Pain Point:</strong> Scripts and treatments are highly sensitive intellectual property vulnerable in the cloud.",
+      "solution": "<strong>Solution:</strong> Enhance dialogue, refine plot summaries, and polish scripts entirely offline. Your ideas stay protected."
+    },
+    "journalists": {
+      "title": "Journalists",
+      "problem": "<strong>Pain Point:</strong> Sensitive stories and source-related drafts cannot be trusted to cloud AI services.",
+      "solution": "<strong>Solution:</strong> Improve articles without exposing sensitive information. No third party ever sees your drafts."
+    },
+    "students": {
+      "title": "Students",
+      "problem": "<strong>Pain Point:</strong> Cloud AI subscriptions cost $20-50/month. Student budgets can't absorb this.",
+      "solution": "<strong>Solution:</strong> Improve essays, papers, and assignments privately. Learn better writing without surveillance. $0 forever."
+    },
+    "business": {
+      "title": "Business Professionals",
+      "problem": "<strong>Pain Point:</strong> Proposals, contracts, and internal documents contain confidential business intelligence.",
+      "solution": "<strong>Solution:</strong> Enhance business documents offline. Your competitive advantages stay confidential."
+    },
+    "privacy": {
+      "title": "Privacy Advocates",
+      "problem": "<strong>Pain Point:</strong> \"Trust us\" isn't good enough. Closed-source AI services can't be verified or audited.",
+      "solution": "<strong>Solution:</strong> Open source, fully auditable. Verify exactly what the code does with your text."
+    }
   },
   "comparison": {
     "label": "Why LocalWrite",
-    "title": "LocalWrite vs <span class='gradient-text'>Cloud Services</span>",
-    "subtitle": "See how LocalWrite compares to popular AI writing services like Grammarly, Jasper, and Copy.ai.",
+    "title": "LocalWrite vs <span class='gradient-text'>Cloud AI</span>",
+    "subtitle": "See how LocalWrite compares to popular cloud writing assistants like ChatGPT, Grammarly AI, and Jasper.",
     "roi_title": "Calculate Your Annual Savings",
-    "roi_cloud": "Average AI writing service: <strong>$30/month x 12 = $360/year</strong>",
+    "roi_cloud": "Average cloud AI writing tool: <strong>$25/month x 12 = $300/year</strong>",
     "roi_localwrite": "LocalWrite: <strong>$0/year</strong>",
-    "roi_savings": "You save: <span class='gradient-text'>$360+ every year</span>"
+    "roi_savings": "You save: <span class='gradient-text'>$300+ every year</span>"
   },
   "comparison_table": {
     "header_feature": "Feature",
-    "header_cloud": "Cloud Services",
+    "header_cloud": "Cloud AI",
     "header_localwrite": "LocalWrite",
     "row1_feature": "Monthly Cost",
     "row1_cloud": "$20-50/month",
     "row1_localwrite": "$0 Forever",
-    "row2_feature": "Annual Cost",
-    "row2_cloud": "$240-600/year",
-    "row2_localwrite": "$0",
-    "row3_feature": "Privacy",
-    "row3_cloud": "Upload to servers",
-    "row3_localwrite": "100% Local",
-    "row4_feature": "Usage Limits",
-    "row4_cloud": "Word/request limits",
-    "row4_localwrite": "Unlimited",
-    "row5_feature": "Internet Required",
-    "row5_cloud": "Yes",
-    "row5_localwrite": "Works Offline",
-    "row6_feature": "Data Ownership",
-    "row6_cloud": "Stored on servers",
-    "row6_localwrite": "You own 100%",
-    "row7_feature": "Open Source",
-    "row7_cloud": "Proprietary",
-    "row7_localwrite": "MIT License"
+    "row2_feature": "Privacy",
+    "row2_cloud": "Text sent to servers",
+    "row2_localwrite": "100% Local",
+    "row3_feature": "Internet Required",
+    "row3_cloud": "Always required",
+    "row3_localwrite": "Works Offline",
+    "row4_feature": "Account Required",
+    "row4_cloud": "Yes, with email",
+    "row4_localwrite": "No account needed",
+    "row5_feature": "Data Collection",
+    "row5_cloud": "Everything you type",
+    "row5_localwrite": "Zero collection",
+    "row6_feature": "Open Source",
+    "row6_cloud": "Proprietary",
+    "row6_localwrite": "MIT License"
   },
   "how_it_works": {
     "title": "Simple by Design",
-    "subtitle": "No accounts. No API keys. No configuration. Just download, open, and write.",
+    "subtitle": "No accounts. No API keys. No configuration. Just download, select a model, and start writing.",
     "step1_title": "Download",
-    "step1_desc": "Get LocalWrite for macOS. One file, ready to use.",
+    "step1_desc": "Get LocalWrite for macOS. One app, ready to use.",
     "step2_title": "Select Model",
-    "step2_desc": "Choose an AI model from our curated list. Downloads once.",
+    "step2_desc": "Choose from 5 AI models. Auto-downloads on first use.",
     "step3_title": "Write Privately",
-    "step3_desc": "Enhance your writing with AI. Your words never leave your device."
+    "step3_desc": "Enhance your writing. Your words never leave your device."
+  },
+  "testimonials": {
+    "label": "What Users Say",
+    "title": "Trusted by <span class='gradient-text'>Professionals Across India</span>",
+    "subtitle": "From authors to business consultants, LocalWrite serves diverse needs with one core promise: your words stay yours.",
+    "t1_text": "\"I'm writing my third novel and the thought of uploading my unpublished manuscript to cloud AI terrified me. LocalWrite lets me polish prose, check for inconsistencies, and improve dialogue - all without a single word leaving my laptop. It's like having a private editor.\"",
+    "t2_text": "\"As a student, I couldn't afford $20/month for AI writing tools. LocalWrite gives me the same quality for free. I use it for essays, research papers, and exam preparation. The Scholarly writing mode is perfect for academic work. No surveillance, no cost.\"",
+    "t3_text": "\"I handle confidential strategy documents for Fortune 500 clients. Cloud AI was never an option. LocalWrite enhances my proposals and reports locally - my clients' competitive intelligence stays protected. The Professional writing mode is spot-on for business documents.\""
   },
   "download": {
     "label": "Get Started",
     "title": "Download<br><span class='gradient-text'>LocalWrite</span>",
-    "subtitle": "Available now for macOS. Windows and Linux coming soon.",
-    "macos": "macOS",
-    "windows": "Windows",
-    "linux": "Linux"
+    "subtitle": "Available now for macOS. Free forever.",
+    "macos_title": "macOS v1.0.0",
+    "macos_desc": "macOS 11.0+ (Apple Silicon & Intel)",
+    "macos_size": "~200 MB (+ 2-6 GB per model on first use)",
+    "source_title": "Source Code",
+    "source_desc": "Build from source (Python & PyQt6)",
+    "source_size": "MIT License - Fork & Modify"
   },
   "download_details": {
-    "macos_desc": "macOS 11+ (Apple Silicon & Intel)",
-    "macos_size": "~100 MB (+ 2-6 GB model)",
-    "windows_desc": "Coming Soon",
-    "linux_desc": "Coming Soon",
-    "coming_soon": "In Development",
     "system_req_heading": "System Requirements",
     "req_ram_label": "RAM",
     "req_ram_value": "8 GB minimum, 16 GB recommended",
     "req_storage_label": "Storage",
-    "req_storage_value": "2-6 GB per AI model",
+    "req_storage_value": "2-6 GB per model",
     "req_gpu_label": "GPU",
-    "req_gpu_value": "Optional - Apple Silicon optimized"
+    "req_gpu_value": "Apple Silicon or Metal GPU accelerates processing"
   },
-  "join": {
-    "heading": "Join the Movement",
-    "paragraph1": "LocalWrite is more than software. It's a statement that AI can be built differently. That privacy and power aren't mutually exclusive. That open source can compete with Big Tech.",
-    "paragraph2": "We're just getting started. And we need people like you.",
-    "star_title": "Star the Project",
-    "star_desc": "Show your support on GitHub",
-    "fork_title": "Fork & Contribute",
-    "fork_desc": "Help build the future of AI",
-    "discussions_title": "Join Discussions",
-    "discussions_desc": "Share ideas with the community"
+  "faq": {
+    "label": "Common Questions",
+    "title": "Frequently Asked <span class='gradient-text'>Questions</span>"
   },
-  "final_cta": {
-    "heading": "The Future of AI is Local.<br>The Future of AI is Open.<br><span class='gradient-text'>The Future Starts Now.</span>",
-    "download_btn": "Download LocalWrite",
-    "source_btn": "View Source Code"
+  "faq_items": {
+    "q1": {
+      "question": "How can this be completely free?",
+      "answer": "LocalWrite runs entirely on your device using open source AI models. We have zero cloud costs - no servers, no bandwidth, no API fees. Our code is MIT licensed and open source."
+    },
+    "q2": {
+      "question": "How good is the writing quality compared to ChatGPT?",
+      "answer": "LocalWrite uses state-of-the-art open source models like Qwen 2.5 7B and Gemma 2 9B. While cloud models may be larger, our local models provide excellent quality for writing enhancement, editing, and content generation. The critical advantage: your text never leaves your device."
+    },
+    "q3": {
+      "question": "Does it work completely offline?",
+      "answer": "Yes! After the initial model download (2-6 GB per model, one-time), LocalWrite works 100% offline. Write on airplanes, in cafes without Wi-Fi, or anywhere without internet."
+    },
+    "q4": {
+      "question": "Can I use this for commercial work?",
+      "answer": "Absolutely! LocalWrite is MIT licensed. Use it for personal projects, client work, commercial products, or anything else. No restrictions on commercial use."
+    },
+    "q5": {
+      "question": "Which AI model should I choose?",
+      "answer": "<strong>Qwen 2.5 7B</strong> (recommended) - Best all-around for essays, articles, and general writing.<br><strong>Gemma 2 9B</strong> - Excellent for creative writing and storytelling.<br><strong>Llama 3.1 8B</strong> - Great for professional, clean prose.<br><strong>Llama 3.2 3B</strong> - Quick edits with low memory usage.<br><strong>Mistral 7B</strong> - Balanced speed and quality."
+    },
+    "q6": {
+      "question": "What are the system requirements?",
+      "answer": "<strong>Minimum:</strong> macOS 11.0+, 8GB RAM, 2-6 GB storage per model<br><strong>Recommended:</strong> 16GB RAM, Apple Silicon for faster processing<br><strong>Technology:</strong> llama.cpp backend, GGUF models, Metal GPU acceleration"
+    }
   },
   "footer": {
-    "tagline": "AI that's free, private, and yours.",
-    "company": "A <strong>Svetozar Technologies</strong> Project",
+    "tagline": "AI that is free, private, and yours.",
     "products_title": "Products",
     "community_title": "Community",
-    "legal_title": "Legal",
     "discussions": "Discussions",
+    "legal_title": "Legal",
     "privacy": "Privacy Policy",
     "license": "MIT License",
     "copyright": "&copy; 2025 Svetozar Technologies",
