--- a/translations/ja.json
+++ b/translations/ja.json
@@ -2,182 +2,175 @@
   "lang": "ja",
   "name": "日本語",
   "nav": {
-    "mission": "ミッション",
+    "mission": "私たちの使命",
     "products": "製品",
     "github": "GitHub",
     "get_started": "始める"
   },
   "hero": {
-    "badge": "100%オフライン &bull; オープンソース &bull; 永久無料",
-    "title": "AIは自由であるべき。<br>AIはプライベートであるべき。<br><span class='gradient-text'>AIはあなたのものであるべき。</span>",
-    "subtitle": "私たちはあなたのプライバシーを尊重するAIツールを構築します。クラウドサーバーなし、データ収集なし、妥協なし。あなたの思考はあなたのものです。",
-    "cta_products": "製品を探る",
-    "cta_github": "GitHubで見る"
+    "title": "AI は無料であるべき。<br>AI はプライベートであるべき。<br><span class='gradient-text'>AI はあなたのものであるべき。</span>",
+    "subtitle": "私たちは単にソフトウェアを作っているのではありません。人工知能が人類のために働く未来のために闘っています。あなたのデータがあなたのものであり続ける未来。強力な技術が監視という代償を伴わない未来のために。",
+    "cta_products": "製品を見る",
+    "cta_mission": "使命を読む"
   },
-  "stats": {
-    "offline": "オフライン処理",
-    "data": "収集データ",
-    "products": "プライバシーツール",
-    "license": "オープンライセンス"
+  "social_proof": {
+    "local": "ローカル処理",
+    "free": "永久無料",
+    "opensource": "オープンソース",
+    "products": "AI 製品"
   },
   "mission": {
-    "label": "私たちのミッション",
-    "title": "AIプライバシーに光を",
-    "subtitle": "「Svetozar」はスラブ語で「世界の光」を意味します。私たちはAIが可能性を照らすべきであり、あなたのプライバシーを影にすべきではないと信じています。",
-    "privacy_title": "プライバシー第一",
-    "privacy_desc": "私たちが構築するすべての製品は、あなたのデバイスで100%ローカルに動作します。私たちにはサーバーがないため、あなたのデータは私たちのサーバーに触れることはありません。",
-    "offline_title": "常にオフライン",
-    "offline_desc": "インターネット接続？オプションです。私たちのAIはどこでも動作します - 飛行機の中、小屋の中、または単にデジタルの平和が欲しいとき。",
-    "opensource_title": "オープンソース",
-    "opensource_desc": "透明性は信頼を築きます。すべてのコードはオープンソースで、監査可能で、MITライセンスです。あなたのマシンで何が実行されているかを正確に確認できます。",
-    "free_title": "永久無料",
-    "free_desc": "サブスクリプションなし、プレミアムティアなし、アップセルなし。プライバシーは贅沢品であるべきではありません。私たちのツールは常に全員に無料です。",
-    "noaccount_title": "アカウント不要",
-    "noaccount_desc": "ダウンロードして使用。サインアップなし、メール認証なし、APIキーなし。私たちはあなたの個人情報を必要としません。",
-    "empower_title": "ユーザーのエンパワーメント",
-    "empower_desc": "私たちはユーザーに力を取り戻すツールを構築します。あなたはAI、データ、デジタルライフをコントロールします。"
+    "label": "私たちの使命",
+    "title": "AI の民主化。<br>プライバシーの保護。<br><span class='gradient-text'>すべての人の力に。</span>"
+  },
+  "manifesto": {
+    "block1_title": "私たちが見ている問題",
+    "block1_text": "AI 革命は起きていますが、それは他の誰かの条件で起きています。主要な AI サービスはすべて、データを企業サーバーにアップロードすることを求めます。あなたの音声録音、ドキュメント、最もプライベートなコンテンツが、あなたの利益と一致しない企業によって保存、分析、収益化されています。",
+    "block2_title": "私たちの解決策",
+    "block2_text": "私たちは、完全にあなたのデバイス上で動作する AI ツールを構築しています。クラウドなし。アカウント不要。データ収集なし。あなたのプライバシーを尊重し、オフラインで動作する強力なオープンソースソフトウェアです。製品を使用する際、データはあるべき場所に留まります — あなたの手元に。",
+    "block3_title": "私たちの約束",
+    "commitment1_title": "永久に無料",
+    "commitment1_desc": "すべての製品は常にフル機能の無料版を提供します。試用期間なし。機能制限なし。サブスクリプションの罠なし。",
+    "commitment2_title": "永久にプライベート",
+    "commitment2_desc": "データがデバイスから出ることはありません。テレメトリなし。分析なし。例外なし。",
+    "commitment3_title": "永久にオープン",
+    "commitment3_desc": "コードは MIT ライセンスです。監査してください。フォークしてください。その上に構築してください。使命は個々のプロジェクトよりも大きいのです。"
   },
   "products": {
-    "label": "私たちの製品",
-    "title": "プライベートAIツール",
-    "subtitle": "あなたのデバイスで完全に動作する強力なAI機能。クラウド不要。",
+    "label": "製品一覧",
+    "title": "<span class='gradient-text'>あなたを尊重する</span> AI ツール",
+    "subtitle": "完全にデバイス上で動作するプロフェッショナルグレードの AI。クラウドなし。妥協なし。",
     "badge_available": "利用可能",
     "badge_coming": "近日公開",
-    "download": "ダウンロード",
-    "source": "ソースコード",
-    "coming_soon": "近日公開",
-    "localmind": {
-      "tagline": "プライベート音声認識",
-      "desc": "完全なプライバシーで音声をテキストに変換。あなたのデバイスから出ることのないプロフェッショナルグレードの文字起こし。",
-      "f1": "リアルタイム文字起こし",
-      "f2": "99以上の言語をサポート",
-      "f3": "話者識別",
-      "f4": "AI品質スコアリング",
-      "f5": "macOS、Windows、Linux"
-    },
-    "localwrite": {
-      "tagline": "プライベートAIライティングアシスタント",
-      "desc": "強力なローカルAIであなたの文章を向上させます。複数のモード、AIチャット、インテリジェントな提案 - すべて100%オフライン。",
-      "f1": "5つの文章改善モード",
-      "f2": "AIチャットアシスタント（オフライン）",
-      "f3": "PDFドキュメント改善",
-      "f4": "5つのAIモデルから選択",
-      "f5": "macOS（Windows近日公開）"
-    },
-    "localpdf": {
-      "tagline": "プライベートPDFツールキット",
-      "desc": "クラウドアップロードなしの完全なPDF処理。圧縮、結合、分割、変換 - すべてあなたのデバイスでローカルに。",
-      "f1": "スマートPDF圧縮",
-      "f2": "ドキュメントの結合と分割",
-      "f3": "画像からPDFへの変換",
-      "f4": "PowerPointからPDF",
-      "f5": "macOS、Windows、Linux"
-    }
+    "learn_more": "詳しく見る",
+    "localmind_tagline": "AI 文字起こしと分析",
+    "localmind_desc": "プロフェッショナルグレードの音声文字起こし、話者検出、品質分析。Whisper AI 搭載、100% デバイス上でローカル動作。",
+    "localmind_feature1": "99以上の言語に対応",
+    "localmind_feature2": "話者検出",
+    "localmind_feature3": "AI 品質スコアリング",
+    "localmind_feature4": "PDF、JSON、TXT にエクスポート",
+    "localwrite_tagline": "AI ライティング強化",
+    "localwrite_desc": "強力なローカル AI でライティングを向上。11 の執筆モード、リアルタイム統計、PDF ドキュメント処理。あなたの言葉はデバイスから出ることはありません。",
+    "localwrite_feature1": "11 の執筆モード",
+    "localwrite_feature2": "クリエイティビティコントロール",
+    "localwrite_feature3": "PDF ドキュメント強化",
+    "localwrite_feature4": "リアルタイム統計",
+    "localpdf_tagline": "AI 搭載 PDF ツール",
+    "localpdf_desc": "ドキュメントとチャット、インサイト抽出、ローカル AI で PDF を処理。機密ドキュメントは完全にプライベートのまま。",
+    "localpdf_feature1": "PDF とチャット",
+    "localpdf_feature2": "重要情報の抽出",
+    "localpdf_feature3": "ドキュメント要約",
+    "localpdf_feature4": "100% ローカル処理"
   },
-  "usecases": {
-    "label": "ユースケース",
-    "title": "<span class='gradient-text'>本物の人々</span>のために構築",
-    "subtitle": "情報源を守るジャーナリストからコストを節約するビジネスまで - 私たちのツールは一つの核心的な約束で多様なニーズに応えます：あなたのデータはあなたのものです。",
-    "journalists": {
-      "title": "ジャーナリストとポッドキャスター",
-      "desc": "100%オフラインの文字起こしとライティングで情報源の身元を保護。サーバーログなし。データ漏洩なし。完全な機密性。"
-    },
-    "legal": {
-      "title": "法律専門家",
-      "desc": "デバイス上の処理で弁護士・依頼人特権を維持。第三者アクセスなしで証言録取と文書を改善。"
-    },
-    "researchers": {
-      "title": "研究者",
-      "desc": "データがデバイスを離れないとき、HIPAAとGDPRへの準拠は自動的です。インタビューと文書をローカルで処理。"
-    },
-    "business": {
-      "title": "中小企業",
-      "desc": "文字起こしとライティングツールだけで年間$360以上を節約。プロフェッショナルAIを$0で。節約分を成長に投資し、ソフトウェアレンタルには投資しない。"
-    },
-    "students": {
-      "title": "学生と学術研究者",
-      "desc": "高価なサブスクリプションやプライバシーの心配なしに、エッセイを改善し、講義を文字起こしし、文書を処理。"
-    },
-    "privacy": {
-      "title": "プライバシー擁護者",
-      "desc": "すべてのコード行を自分で監査。オープンソースの透明性。盲目的な信頼は不要。あなたの条件でAIを使用。"
-    }
+  "why": {
+    "label": "なぜローカル AI？",
+    "title": "クラウド vs <span class='gradient-text'>ローカル AI</span>",
+    "cloud_title": "クラウド AI サービス",
+    "cloud1": "データがサーバーにアップロード",
+    "cloud2": "月額 $20-50 のサブスクリプション",
+    "cloud3": "インターネット接続が必要",
+    "cloud4": "使用制限あり",
+    "cloud5": "アカウントが必要",
+    "cloud6": "プロプライエタリ、クローズドソース",
+    "local_title": "Svetozar Technologies",
+    "local1": "100% デバイス上で処理",
+    "local2": "永久無料",
+    "local3": "オフラインで動作",
+    "local4": "無制限に使用",
+    "local5": "アカウント不要",
+    "local6": "オープンソース (MIT)"
   },
-  "comparison": {
-    "label": "私たちを選ぶ理由",
-    "title": "Svetozar vs <span class='gradient-text'>クラウドサービス</span>",
-    "feature": "機能",
-    "cloud": "クラウドサービス",
-    "svetozar": "Svetozarツール",
-    "row1": {
-      "feature": "月額コスト",
-      "svetozar": "永久$0"
-    },
-    "row2": {
-      "feature": "プライバシー",
-      "cloud": "サーバーにアップロード",
-      "svetozar": "100%ローカル"
-    },
-    "row3": {
-      "feature": "インターネット必要",
-      "cloud": "常に",
-      "svetozar": "オフラインで動作"
-    },
-    "row4": {
-      "feature": "使用制限",
-      "cloud": "制限された分/ページ",
-      "svetozar": "無制限"
-    },
-    "row5": {
-      "feature": "アカウント必要",
-      "cloud": "はい + 認証",
-      "svetozar": "アカウント不要"
-    },
-    "row6": {
-      "feature": "データ所有権",
-      "cloud": "サーバーに保存",
-      "svetozar": "100%あなたが所有"
-    },
-    "row7": {
-      "feature": "オープンソース",
-      "cloud": "プロプライエタリ",
-      "svetozar": "MITライセンス"
-    }
+  "join": {
+    "heading": "ムーブメントに参加",
+    "paragraph": "私たちは AI を違う方法で構築しています。あなたを尊重する AI。あなたのものである AI。プライバシーを犠牲にすることなく、強力な技術がすべての人にアクセス可能な未来の創造にご参加ください。",
+    "github_title": "GitHub で見る",
+    "github_desc": "Star、Fork、貢献",
+    "discussions_title": "ディスカッションに参加",
+    "discussions_desc": "コミュニティとつながる"
   },
-  "testimonials": {
-    "label": "グローバルユーザー",
-    "title": "世界中で信頼",
-    "t1": {
-      "quote": "「LocalMindのスペイン語文字起こしは驚くほど正確です。毎週10時間以上のインタビューをサブスクリプション料金なしで処理しています。」",
-      "name": "マリア・ゴンザレス",
-      "role": "ポッドキャスター、メキシコ"
-    },
-    "t2": {
-      "quote": "「患者インタビューにはHIPAA準拠が不可欠でした。LocalMindはすべてをローカルで処理します - データが安全なシステムを離れることは決してありません。」",
-      "name": "田中ユキ博士",
-      "role": "医学研究者、日本"
-    },
-    "t3": {
-      "quote": "「LocalWriteは研究を完全にプライベートに保ちながら論文の改善を助けてくれました。AIチャットはオフラインのライティングチューターのようです。」",
-      "name": "プリヤ・シャルマ",
-      "role": "博士課程学生、インド"
-    }
-  },
-  "cta": {
-    "title": "プライベートAIの準備はできましたか？",
-    "subtitle": "能力を犠牲にせずにプライバシーを選んだ何千人もの人々に参加しましょう。私たちのツールをダウンロードして違いを体験してください。",
-    "explore": "製品を探る",
-    "github": "GitHubでスター"
+  "final_cta": {
+    "heading": "AI の未来はローカル。<br>AI の未来はオープン。<br><span class='gradient-text'>未来は今始まる。</span>",
+    "explore_btn": "製品を見る",
+    "source_btn": "ソースコードを見る"
   },
   "footer": {
-    "tagline": "無料で、プライベートで、あなたのAI。",
-    "products": "製品",
-    "community": "コミュニティ",
-    "legal": "法的情報",
+    "tagline": "無料で、プライベートで、あなたのものである AI。",
+    "products_title": "製品",
+    "community_title": "コミュニティ",
+    "legal_title": "法的情報",
     "discussions": "ディスカッション",
     "privacy": "プライバシーポリシー",
-    "license": "MITライセンス",
-    "copyright": "&copy; 2025 Svetozar Technologies. MITライセンス。",
-    "built": "プライバシーを念頭に構築。データはデバイスを離れません。"
+    "license": "MIT License",
+    "copyright": "&copy; 2025 Svetozar Technologies",
+    "footer_tagline": "企業ではなく、人類のために役立つ AI を構築しています。"
+  },
+  "privacy": {
+    "page_title": "プライバシーポリシー",
+    "last_updated": "最終更新：2026年2月",
+    "short_title": "要約版",
+    "short_text": "私たちはあなたのデータを収集しません。Svetozar Technologies のすべての製品は、100% あなたのデバイス上でローカルに動作します。ファイル、テキスト、音声、ドキュメントが私たちのサーバーに触れることはありません — サーバーを持っていないからです。これは機能ではありません。創業原則です。",
+    "s1_title": "1. 私たちの理念",
+    "s1_text": "Svetozar Technologies では、プライバシーはプレミアム機能ではなく基本的な権利であると考えています。ソフトウェアはこうあるべきだから、完全にデバイス上で動作する AI ツールを構築しています。アカウント不要。クラウド処理なし。データ収集なし。永遠に。",
+    "s2_title": "2. デスクトップアプリケーション — データ収集ゼロ",
+    "s2_intro": "このポリシーは、<strong>LocalMind</strong>（音声文字起こし）、<strong>LocalWrite</strong>（AI ライティングアシスタント）、<strong>LocalPDF</strong>（PDF インテリジェンス）を含む、すべての Svetozar Technologies デスクトップアプリケーションに適用されます。各アプリケーション：",
+    "s2_item1": "<strong>100% ローカル処理：</strong>すべての AI 処理 — 文字起こし、ライティング、要約、PDF 分析 — は完全にデバイス上で行われます。",
+    "s2_item2": "<strong>テレメトリゼロ：</strong>アプリから使用統計、クラッシュレポート、パフォーマンスメトリクス、またはいかなる形のアナリティクスも収集しません。",
+    "s2_item3": "<strong>ネットワーク通信なし：</strong>初回の AI モデルダウンロード後、すべてのアプリケーションは完全にオフラインで動作します。",
+    "s2_item4": "<strong>アカウント不要：</strong>製品を使用するためにアカウントを作成したり個人情報を提供する必要はありません。",
+    "s2_item5": "<strong>ファイルはローカルに保存：</strong>すべての出力 — 文字起こし、ドキュメント、レポート、エクスポート — はデバイス上にのみ保存されます。",
+    "s3_title": "3. ウェブサイトアナリティクス",
+    "s3_intro": "当社のウェブサイト（svetozar-technologies.github.io）にアクセスする際、プライバシー最優先のアナリティクスサービスである <strong>Plausible Analytics</strong> を使用しています：",
+    "s3_item1": "<strong>Cookie なし：</strong>Plausible は Cookie を使用せず、ウェブサイト間であなたを追跡しません。",
+    "s3_item2": "<strong>個人データなし：</strong>個々の訪問者を特定することはできません。",
+    "s3_item3": "<strong>GDPR 準拠：</strong>すべてのデータは匿名化され集約されています。",
+    "s3_extra": "製品の発見方法を理解するために、ページビューやリファラルソースなどの基本的な匿名メトリクスのみを収集しています。個人を特定できるものは一切ありません。",
+    "s4_title": "4. サードパーティトラッキングなし",
+    "s4_intro": "当社のウェブサイトとアプリケーションは以下を使用しません：",
+    "s4_item1": "Google Analytics やいかなる侵襲的なアナリティクス",
+    "s4_item2": "Facebook Pixel や広告トラッカー",
+    "s4_item3": "いかなる種類のサードパーティ Cookie",
+    "s4_item4": "ブラウザフィンガープリンティング技術",
+    "s4_item5": "クロスサイトトラッキングスクリプト",
+    "s5_title": "5. メール通信",
+    "s5_intro": "製品アップデートのためにメールアドレスを自発的に提供された場合：",
+    "s5_item1": "<strong>100% オプトイン：</strong>メール収集は常に自発的です。個人情報を提供せずにすべての製品をダウンロードして使用できます。",
+    "s5_item2": "<strong>安全に保管：</strong>メールはプライバシー重視のフォームサービス Formspree を通じて処理されます。",
+    "s5_item3": "<strong>限定的な使用：</strong>主要な製品リリース、新機能、セキュリティアップデートについてのみ、まれに通知を送信します。",
+    "s5_item4": "<strong>共有なし：</strong>メールを第三者に販売、貸与、共有することは決してありません。",
+    "s5_item5": "<strong>簡単な登録解除：</strong>すべてのメールにワンクリック登録解除リンクが含まれています。",
+    "s6_title": "6. サードパーティサービス",
+    "s6_text": "アプリケーションは、プライバシーを損なう可能性のあるサードパーティサービスと統合していません。唯一の外部依存は、信頼できるオープンソースモデルリポジトリである <strong>Hugging Face</strong> からの初回 AI モデルダウンロードです。その後はすべてオフラインで動作します。",
+    "s7_title": "7. データセキュリティ",
+    "s7_text1": "<strong>デスクトップアプリケーション：</strong>すべてのデータがデバイス上に留まるため、セキュリティは OS の組み込み保護（macOS の FileVault、Windows の BitLocker など）によって決まります。",
+    "s7_text2": "<strong>ウェブサイト：</strong>このサイトは HTTPS で配信されています。フォーム送信は転送中に暗号化されます。",
+    "s8_title": "8. あなたの権利（GDPR 準拠）",
+    "s8_intro": "メールアドレスを提供された場合、以下の権利があります：",
+    "s8_item1": "<strong>アクセス：</strong>保有するデータのコピーを要求（メールに限定）。",
+    "s8_item2": "<strong>削除：</strong>メールリストからの即時削除を要求。",
+    "s8_item3": "<strong>ポータビリティ：</strong>機械可読形式でデータを受け取る。",
+    "s8_item4": "<strong>訂正：</strong>いつでもメールアドレスを更新。",
+    "s8_contact": "これらの権利を行使するには、こちらにお問い合わせください：<a href='mailto:kaivalya.pandey@gmail.com'>kaivalya.pandey@gmail.com</a>",
+    "s9_title": "9. オープンソースの透明性",
+    "s9_intro": "すべての Svetozar Technologies 製品は MIT ライセンスのオープンソースです。以下が可能です：",
+    "s9_item1": "<strong>コードの全行を監査</strong>して、すべてのリポジトリでプライバシーに関する主張を検証。",
+    "s9_item2": "<strong>ネットワーク動作を検証</strong> — アプリケーションが不正なネットワーク通信を行っていないことを確認。",
+    "s9_item3": "<strong>ソースからビルド</strong> — 最大の信頼のためにアプリケーションを自分でコンパイル。",
+    "s9_item4": "<strong>自由に修正</strong> — 特定のプライバシー要件に合わせてコードを適応。",
+    "s9_repos": "リポジトリを訪問：<a href='https://github.com/Svetozar-Technologies' target='_blank'>github.com/Svetozar-Technologies</a>",
+    "s10_title": "10. お子様のプライバシー",
+    "s10_text": "製品は 13 歳未満のお子様を対象としていません。ただし、デスクトップアプリケーションを通じて個人データを収集しないため、あらゆる年齢の方が安全に使用できます。",
+    "s11_title": "11. このポリシーの変更",
+    "s11_intro": "新製品や機能のリリースに伴い、このプライバシーポリシーを更新する場合があります。重要な変更は以下を通じて告知されます：",
+    "s11_item1": "メール通知（登録されている場合）",
+    "s11_item2": "このウェブサイトでの目立つ告知",
+    "s11_item3": "GitHub リポジトリでのアナウンス",
+    "s11_extra": "データがデバイス上に留まるという中核的な約束は、決して変わりません。",
+    "s12_title": "12. お問い合わせ",
+    "s12_intro": "プライバシーに関するご質問は、以下のチャンネルからお問い合わせください：",
+    "s12_item1": "<strong>メール：</strong> <a href='mailto:kaivalya.pandey@gmail.com'>kaivalya.pandey@gmail.com</a>",
+    "s12_item2": "<strong>GitHub：</strong> <a href='https://github.com/Svetozar-Technologies' target='_blank'>組織ページ</a>",
+    "s12_item3": "<strong>ディスカッション：</strong> <a href='https://github.com/orgs/Svetozar-Technologies/discussions' target='_blank'>コミュニティフォーラム</a>",
+    "promise_title": "私たちの約束",
+    "promise_text": "<strong>デスクトップアプリ：</strong>データ収集ゼロ。すべてがデバイス上に留まります。<br><strong>ウェブサイト：</strong>プライバシー最優先のアナリティクス。Cookie なし。個人データなし。<br><strong>メール：</strong>オプトインのみ。スパムなし。簡単な登録解除。<br><strong>常に：</strong>利益のためにプライバシーを犠牲にすることは決してありません。"
   }
 }
