--- a/translations/zh.json
+++ b/translations/zh.json
@@ -2,182 +2,175 @@
   "lang": "zh",
   "name": "中文",
   "nav": {
-    "mission": "使命",
+    "mission": "我们的使命",
     "products": "产品",
     "github": "GitHub",
     "get_started": "开始使用"
   },
   "hero": {
-    "badge": "100%离线 &bull; 开源 &bull; 永久免费",
-    "title": "AI应该是自由的。<br>AI应该是私密的。<br><span class='gradient-text'>AI应该属于你。</span>",
-    "subtitle": "我们构建尊重您隐私的AI工具。没有云服务器，没有数据收集，没有妥协。您的想法永远属于您。",
-    "cta_products": "探索产品",
-    "cta_github": "在GitHub上查看"
+    "title": "AI 应该是免费的。<br>AI 应该是私密的。<br><span class='gradient-text'>AI 应该属于你。</span>",
+    "subtitle": "我们不仅仅是在开发软件。我们在为一个未来而奋斗——在这个未来里，人工智能服务于人类，而非反过来。在这里，你的数据属于你自己。在这里，强大的技术不以监控为代价。",
+    "cta_products": "探索我们的产品",
+    "cta_mission": "了解我们的使命"
   },
-  "stats": {
-    "offline": "离线处理",
-    "data": "收集的数据",
-    "products": "隐私工具",
-    "license": "开放许可"
+  "social_proof": {
+    "local": "本地处理",
+    "free": "永久免费",
+    "opensource": "开源",
+    "products": "AI 产品"
   },
   "mission": {
     "label": "我们的使命",
-    "title": "照亮AI隐私",
-    "subtitle": "\"Svetozar\"在斯拉夫语中意为\"世界之光\"。我们相信AI应该照亮可能性，而不是遮蔽您的隐私。",
-    "privacy_title": "隐私优先",
-    "privacy_desc": "我们构建的每个产品都100%在您的设备上本地运行。您的数据永远不会触及我们的服务器，因为我们没有服务器。",
-    "offline_title": "始终离线",
-    "offline_desc": "需要互联网连接？可选的。我们的AI可以在任何地方工作 - 在飞机上，在小屋里，或者只是当您想要数字和平时。",
-    "opensource_title": "开源",
-    "opensource_desc": "透明建立信任。我们所有的代码都是开源的、可审计的，并采用MIT许可。准确了解您的机器上运行的是什么。",
-    "free_title": "永久免费",
-    "free_desc": "没有订阅，没有高级层级，没有追加销售。隐私不应该是奢侈品。我们的工具对所有人永远免费。",
-    "noaccount_title": "无需账户",
-    "noaccount_desc": "下载即用。无需注册，无需邮箱验证，无需API密钥。我们不需要您的个人信息。",
-    "empower_title": "用户赋能",
-    "empower_desc": "我们构建将权力还给用户的工具。您控制您的AI、您的数据和您的数字生活。"
+    "title": "让 AI 大众化。<br>保护隐私。<br><span class='gradient-text'>赋能每一个人。</span>"
+  },
+  "manifesto": {
+    "block1_title": "我们看到的问题",
+    "block1_text": "AI 革命正在发生，但它是按照别人的规则进行的。每个主要的 AI 服务都要求你将数据上传到企业服务器。你的语音录音、文件、最私密的内容——都被那些与你利益不一致的公司存储、分析和变现。",
+    "block2_title": "我们的解决方案",
+    "block2_text": "我们开发完全在你设备上运行的 AI 工具。没有云端。没有账户。没有数据收集。只有强大的开源软件，尊重你的隐私，离线即可工作。当你使用我们的产品时，你的数据始终留在它该在的地方——在你手中。",
+    "block3_title": "我们的承诺",
+    "commitment1_title": "永久免费",
+    "commitment1_desc": "我们所有的产品始终提供功能完整的免费版本。没有试用期。没有功能限制。没有订阅陷阱。",
+    "commitment2_title": "永久私密",
+    "commitment2_desc": "你的数据永远不会离开你的设备。没有遥测。没有分析。没有例外。",
+    "commitment3_title": "永久开放",
+    "commitment3_desc": "我们的代码采用 MIT 许可证。审计它。复刻它。在此基础上构建。使命大于任何单一项目。"
   },
   "products": {
     "label": "我们的产品",
-    "title": "私密AI工具",
-    "subtitle": "完全在您设备上运行的强大AI功能。无需云端。",
+    "title": "<span class='gradient-text'>尊重你的</span> AI 工具",
+    "subtitle": "专业级 AI，完全在你的设备上运行。没有云端。没有妥协。",
     "badge_available": "现已推出",
     "badge_coming": "即将推出",
-    "download": "下载",
-    "source": "源代码",
-    "coming_soon": "即将推出",
-    "localmind": {
-      "tagline": "私密语音识别",
-      "desc": "在完全隐私的情况下将语音转换为文本。专业级转录永远不会离开您的设备。",
-      "f1": "实时转录",
-      "f2": "支持99+种语言",
-      "f3": "说话人识别",
-      "f4": "AI驱动的质量评分",
-      "f5": "macOS、Windows和Linux"
-    },
-    "localwrite": {
-      "tagline": "私密AI写作助手",
-      "desc": "使用强大的本地AI增强您的写作。多种模式、AI聊天和智能建议 - 全部100%离线。",
-      "f1": "5种写作增强模式",
-      "f2": "AI聊天助手（离线）",
-      "f3": "PDF文档增强",
-      "f4": "5个AI模型可选",
-      "f5": "macOS（Windows即将推出）"
-    },
-    "localpdf": {
-      "tagline": "私密PDF工具包",
-      "desc": "无需云端上传的完整PDF处理。压缩、合并、拆分、转换 - 全部在您的设备上本地完成。",
-      "f1": "智能PDF压缩",
-      "f2": "合并和拆分文档",
-      "f3": "图片转PDF",
-      "f4": "PowerPoint转PDF",
-      "f5": "macOS、Windows和Linux"
-    }
+    "learn_more": "了解更多",
+    "localmind_tagline": "AI 转录与分析",
+    "localmind_desc": "专业级音频转录、说话人识别和质量分析。由 Whisper AI 驱动，100% 在你的设备上本地运行。",
+    "localmind_feature1": "支持 99+ 种语言",
+    "localmind_feature2": "说话人识别",
+    "localmind_feature3": "AI 质量评分",
+    "localmind_feature4": "导出为 PDF、JSON、TXT",
+    "localwrite_tagline": "AI 写作增强",
+    "localwrite_desc": "使用强大的本地 AI 提升你的写作。11 种写作模式、实时统计和 PDF 文档处理。你的文字永远不会离开你的设备。",
+    "localwrite_feature1": "11 种写作模式",
+    "localwrite_feature2": "创意控制滑块",
+    "localwrite_feature3": "PDF 文档增强",
+    "localwrite_feature4": "实时统计",
+    "localpdf_tagline": "AI 驱动的 PDF 工具",
+    "localpdf_desc": "与文档对话、提取洞察、使用本地 AI 处理 PDF。你的敏感文档始终完全私密。",
+    "localpdf_feature1": "与 PDF 对话",
+    "localpdf_feature2": "提取关键信息",
+    "localpdf_feature3": "文档摘要",
+    "localpdf_feature4": "100% 本地处理"
   },
-  "usecases": {
-    "label": "使用场景",
-    "title": "为<span class='gradient-text'>真实用户</span>打造",
-    "subtitle": "从保护消息来源的记者到节省成本的企业 - 我们的工具以一个核心承诺服务于多样化的需求：您的数据始终属于您。",
-    "journalists": {
-      "title": "记者和播客主持人",
-      "desc": "通过100%离线转录和写作保护消息来源的身份。没有服务器日志。没有数据泄露。完全保密。"
-    },
-    "legal": {
-      "title": "法律专业人士",
-      "desc": "通过设备端处理维护律师-客户特权。无需第三方访问即可转录证词和增强文档。"
-    },
-    "researchers": {
-      "title": "研究人员",
-      "desc": "当数据永远不离开您的设备时，HIPAA和GDPR合规是自动的。在本地处理访谈和文档。"
-    },
-    "business": {
-      "title": "小型企业",
-      "desc": "仅在转录和写作工具上每年节省360美元以上。0美元获得专业AI。将节省投资于增长，而不是软件租金。"
-    },
-    "students": {
-      "title": "学生和学者",
-      "desc": "无需昂贵的订阅或隐私担忧，即可增强论文、转录讲座和处理文档。"
-    },
-    "privacy": {
-      "title": "隐私倡导者",
-      "desc": "自己审计每一行代码。开源透明。无需盲目信任。按您的条件使用AI。"
-    }
+  "why": {
+    "label": "为什么选择本地 AI？",
+    "title": "云端 vs <span class='gradient-text'>本地 AI</span>",
+    "cloud_title": "云端 AI 服务",
+    "cloud1": "数据上传到服务器",
+    "cloud2": "每月 $20-50 订阅费",
+    "cloud3": "需要联网",
+    "cloud4": "使用限制",
+    "cloud5": "需要账户",
+    "cloud6": "专有的闭源软件",
+    "local_title": "Svetozar Technologies",
+    "local1": "100% 设备本地处理",
+    "local2": "永久免费",
+    "local3": "离线可用",
+    "local4": "无限使用",
+    "local5": "无需账户",
+    "local6": "开源 (MIT)"
   },
-  "comparison": {
-    "label": "为什么选择我们",
-    "title": "Svetozar vs <span class='gradient-text'>云服务</span>",
-    "feature": "功能",
-    "cloud": "云服务",
-    "svetozar": "Svetozar工具",
-    "row1": {
-      "feature": "月费",
-      "svetozar": "永久$0"
-    },
-    "row2": {
-      "feature": "隐私",
-      "cloud": "上传到服务器",
-      "svetozar": "100%本地"
-    },
-    "row3": {
-      "feature": "需要互联网",
-      "cloud": "始终",
-      "svetozar": "离线工作"
-    },
-    "row4": {
-      "feature": "使用限制",
-      "cloud": "有限的分钟/页面",
-      "svetozar": "无限"
-    },
-    "row5": {
-      "feature": "需要账户",
-      "cloud": "是 + 验证",
-      "svetozar": "无需账户"
-    },
-    "row6": {
-      "feature": "数据所有权",
-      "cloud": "存储在服务器",
-      "svetozar": "您100%拥有"
-    },
-    "row7": {
-      "feature": "开源",
-      "cloud": "专有",
-      "svetozar": "MIT许可"
-    }
+  "join": {
+    "heading": "加入我们的运动",
+    "paragraph": "我们在以不同的方式打造 AI。尊重你的 AI。属于你的 AI。加入我们，共同创造一个强大技术对每个人都触手可及、同时不牺牲隐私的未来。",
+    "github_title": "在 GitHub 上查看",
+    "github_desc": "Star、Fork 和贡献代码",
+    "discussions_title": "加入讨论",
+    "discussions_desc": "与社区连接"
   },
-  "testimonials": {
-    "label": "全球用户",
-    "title": "全球信赖",
-    "t1": {
-      "quote": "\"LocalMind的西班牙语转录准确度令人难以置信。我每周处理10多个小时的采访，无需支付订阅费。\"",
-      "name": "玛丽亚·冈萨雷斯",
-      "role": "播客主持人，墨西哥"
-    },
-    "t2": {
-      "quote": "\"HIPAA合规对我们的患者访谈至关重要。LocalMind在本地处理一切 - 没有数据离开我们的安全系统。\"",
-      "name": "田中由纪博士",
-      "role": "医学研究员，日本"
-    },
-    "t3": {
-      "quote": "\"LocalWrite帮助我改进论文，同时保持研究完全私密。AI聊天就像有一个离线写作导师。\"",
-      "name": "普里亚·夏尔马",
-      "role": "博士生，印度"
-    }
-  },
-  "cta": {
-    "title": "准备好使用私密AI了吗？",
-    "subtitle": "加入数千名选择隐私而不牺牲能力的用户。下载我们的工具，体验不同。",
-    "explore": "探索产品",
-    "github": "在GitHub上加星"
+  "final_cta": {
+    "heading": "AI 的未来是本地的。<br>AI 的未来是开放的。<br><span class='gradient-text'>未来从现在开始。</span>",
+    "explore_btn": "探索产品",
+    "source_btn": "查看源代码"
   },
   "footer": {
-    "tagline": "免费、私密、属于您的AI。",
-    "products": "产品",
-    "community": "社区",
-    "legal": "法律",
-    "discussions": "讨论",
+    "tagline": "免费、私密、属于你的 AI。",
+    "products_title": "产品",
+    "community_title": "社区",
+    "legal_title": "法律信息",
+    "discussions": "讨论区",
     "privacy": "隐私政策",
-    "license": "MIT许可",
-    "copyright": "&copy; 2025 Svetozar Technologies. MIT许可。",
-    "built": "以隐私为本构建。没有数据离开您的设备。"
+    "license": "MIT 许可证",
+    "copyright": "&copy; 2025 Svetozar Technologies",
+    "footer_tagline": "打造服务于人类而非企业的 AI。"
+  },
+  "privacy": {
+    "page_title": "隐私政策",
+    "last_updated": "最后更新：2026 年 2 月",
+    "short_title": "简要说明",
+    "short_text": "我们不收集你的数据。Svetozar Technologies 的每个产品都 100% 在你的设备上本地运行。你的文件、文本、音频和文档从未接触过我们的服务器——因为我们没有服务器。这不是一个功能特性，这是我们的创立原则。",
+    "s1_title": "1. 我们的理念",
+    "s1_text": "在 Svetozar Technologies，我们相信隐私是一项基本权利，而非高级功能。我们开发完全在你设备上运行的 AI 工具，因为软件本该如此。没有账户。没有云处理。没有数据收集。永远不会。",
+    "s2_title": "2. 桌面应用程序——零数据收集",
+    "s2_intro": "本政策适用于所有 Svetozar Technologies 桌面应用程序，包括 <strong>LocalMind</strong>（音频转录）、<strong>LocalWrite</strong>（AI 写作助手）和 <strong>LocalPDF</strong>（PDF 智能处理）。每个应用程序：",
+    "s2_item1": "<strong>100% 本地处理：</strong>所有 AI 处理——转录、写作、摘要、PDF 分析——完全在你的设备上完成。",
+    "s2_item2": "<strong>零遥测收集：</strong>我们不从应用中收集使用统计、崩溃报告、性能指标或任何形式的分析数据。",
+    "s2_item3": "<strong>不进行网络调用：</strong>初次 AI 模型下载后，所有应用完全离线运行。",
+    "s2_item4": "<strong>无需账户：</strong>你无需创建账户或提供个人信息即可使用我们的任何产品。",
+    "s2_item5": "<strong>文件保存在本地：</strong>所有输出——转录、文档、报告和导出内容——仅存储在你的设备上。",
+    "s3_title": "3. 网站分析",
+    "s3_intro": "当你访问我们的网站 (svetozar-technologies.github.io) 时，我们使用 <strong>Plausible Analytics</strong>，这是一个隐私优先的分析服务：",
+    "s3_item1": "<strong>无 Cookie：</strong>Plausible 不使用 Cookie，也不会跨网站追踪你。",
+    "s3_item2": "<strong>无个人数据：</strong>我们无法识别个人访客。",
+    "s3_item3": "<strong>符合 GDPR：</strong>所有数据都经过匿名化和聚合处理。",
+    "s3_extra": "我们仅收集页面浏览量和来源等基本匿名指标，以了解人们如何发现我们的产品。不包含任何可识别个人身份的信息。",
+    "s4_title": "4. 无第三方追踪",
+    "s4_intro": "我们的网站和应用程序不使用：",
+    "s4_item1": "Google Analytics 或任何侵入性分析工具",
+    "s4_item2": "Facebook Pixel 或广告追踪器",
+    "s4_item3": "任何类型的第三方 Cookie",
+    "s4_item4": "浏览器指纹识别技术",
+    "s4_item5": "跨站追踪脚本",
+    "s5_title": "5. 电子邮件通信",
+    "s5_intro": "如果你自愿提供电子邮件地址以接收产品更新：",
+    "s5_item1": "<strong>100% 自愿选择：</strong>电子邮件收集始终是自愿的。你可以在不提供任何个人信息的情况下下载和使用所有产品。",
+    "s5_item2": "<strong>安全存储：</strong>电子邮件通过 Formspree（一个注重隐私的表单服务）处理。",
+    "s5_item3": "<strong>有限使用：</strong>我们仅就重大产品发布、新功能和安全更新发送少量通知。",
+    "s5_item4": "<strong>绝不共享：</strong>我们绝不会将你的电子邮件出售、出租或与第三方共享。",
+    "s5_item5": "<strong>轻松退订：</strong>每封邮件都包含一键退订链接。",
+    "s6_title": "6. 第三方服务",
+    "s6_text": "我们的应用程序不与可能损害你隐私的第三方服务集成。唯一的外部依赖是初次 AI 模型下载，直接来自 <strong>Hugging Face</strong>——一个可信赖的开源模型仓库。之后，一切离线运行。",
+    "s7_title": "7. 数据安全",
+    "s7_text1": "<strong>桌面应用程序：</strong>由于所有数据都保留在你的设备上，安全性取决于你操作系统的内置保护措施（例如 macOS 的 FileVault、Windows 的 BitLocker）。",
+    "s7_text2": "<strong>网站：</strong>本网站通过 HTTPS 提供服务。任何表单提交在传输过程中都经过加密。",
+    "s8_title": "8. 你的权利（GDPR 合规）",
+    "s8_intro": "如果你提供了电子邮件地址，你有权：",
+    "s8_item1": "<strong>访问：</strong>请求我们持有的任何数据的副本（仅限你的电子邮件）。",
+    "s8_item2": "<strong>删除：</strong>请求立即从我们的邮件列表中移除。",
+    "s8_item3": "<strong>可移植性：</strong>以机器可读格式接收你的数据。",
+    "s8_item4": "<strong>更正：</strong>随时更新你的电子邮件地址。",
+    "s8_contact": "要行使这些权利，请联系我们：<a href='mailto:kaivalya.pandey@gmail.com'>kaivalya.pandey@gmail.com</a>",
+    "s9_title": "9. 开源透明度",
+    "s9_intro": "所有 Svetozar Technologies 产品均为 MIT 许可证下的开源软件。你可以：",
+    "s9_item1": "<strong>审计每一行代码</strong>，验证我们在所有仓库中的隐私声明。",
+    "s9_item2": "<strong>验证网络行为</strong>——确认我们的应用程序不进行未经授权的网络调用。",
+    "s9_item3": "<strong>从源代码构建</strong>——自行编译任何应用程序以获得最大信任。",
+    "s9_item4": "<strong>自由修改</strong>——根据你的特定隐私需求调整代码。",
+    "s9_repos": "访问我们的仓库：<a href='https://github.com/Svetozar-Technologies' target='_blank'>github.com/Svetozar-Technologies</a>",
+    "s10_title": "10. 儿童隐私",
+    "s10_text": "我们的产品并非针对 13 岁以下的儿童。但由于我们的桌面应用程序不收集任何个人数据，所有年龄段的人都可以安全使用。",
+    "s11_title": "11. 本政策的变更",
+    "s11_intro": "随着我们发布新产品或功能，我们可能会更新本隐私政策。重大变更将通过以下方式通知：",
+    "s11_item1": "电子邮件通知（如果你已订阅）",
+    "s11_item2": "在本网站上显著公告",
+    "s11_item3": "GitHub 仓库公告",
+    "s11_extra": "我们的核心承诺——你的数据留在你的设备上——永远不会改变。",
+    "s12_title": "12. 联系我们",
+    "s12_intro": "对我们的隐私实践有疑问？通过以下任何渠道联系我们：",
+    "s12_item1": "<strong>电子邮件：</strong> <a href='mailto:kaivalya.pandey@gmail.com'>kaivalya.pandey@gmail.com</a>",
+    "s12_item2": "<strong>GitHub：</strong> <a href='https://github.com/Svetozar-Technologies' target='_blank'>组织页面</a>",
+    "s12_item3": "<strong>讨论区：</strong> <a href='https://github.com/orgs/Svetozar-Technologies/discussions' target='_blank'>社区论坛</a>",
+    "promise_title": "我们的承诺",
+    "promise_text": "<strong>桌面应用：</strong>零数据收集。一切都保留在你的设备上。<br><strong>网站：</strong>隐私优先的分析。无 Cookie。无个人数据。<br><strong>电子邮件：</strong>仅限自愿订阅。无垃圾邮件。轻松退订。<br><strong>始终：</strong>我们绝不会为了利润而牺牲你的隐私。"
   }
 }
